chore: add latest crowdin changes

--- a/_locales/af/messages.json
+++ b/_locales/af/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} Geblokkeer",
   "blockDescription": "Is jy seker jy wil <b>{name} blokkeer?</b> Geblokkeerde gebruikers kan nie vir jou boodskapversoeke stuur, groepuitnodigings stuur of jou bel nie.",
   "blockUnblock": "Deblokkeer",
-  "blockUnblockName": "Is jy seker jy wil {name} deblokkeer?",
-  "blockUnblockNameMultiple": "Is jy seker jy wil {name} en {count} ander deblokkeer?",
-  "blockUnblockNameTwo": "Is jy seker jy wil {name} en 1 ander deblokkeer?",
+  "blockUnblockName": "Is jy seker jy wil <b>{name}</b> deblokkeer?",
+  "blockUnblockNameMultiple": "Is jy seker jy wil <b>{name}</b> en <b>{count} ander deblokkeer</b>?",
+  "blockUnblockNameTwo": "Is jy seker jy wil <b>{name}</b> en 1 ander deblokkeer?",
   "blockUnblockedUser": "Ontblokkeer {name}",
   "call": "Bel",
   "callsCalledYou": "{name} het jou gebel",
