--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "تم حظر {name}",
   "blockDescription": "هل أنت متيقِّن من حظر <b>{name}؟</b> المستخدمين المحظورين لايمكنهم إرسال طلبات الرسائل، دعوات المجموعات أو الإتصال بك.",
   "blockUnblock": "إلغاء الحظر",
-  "blockUnblockName": "هل أنت متأكد من إلغاء حظر {name}؟",
-  "blockUnblockNameMultiple": "هل أنت متأكد من أنك تريد إلغاء حظر {name} و {count} آخرين؟",
-  "blockUnblockNameTwo": "هل أنت متأكد من أنك تريد إلغاء حظر {name} و 1 آخر؟",
+  "blockUnblockName": "هل أنت متأكد أنك تريد إلغاء حظر <b>{name}</b>؟",
+  "blockUnblockNameMultiple": "هل أنت متأكد أنك تريد إلغاء حظر <b>{name}</b> و<b>{count} آخرين</b>؟",
+  "blockUnblockNameTwo": "هل أنت متأكد أنك تريد إلغاء حظر <b>{name}</b> وشخص آخر؟",
   "blockUnblockedUser": "تم الغاء الحظر عن {name}",
   "call": "اتصال",
   "callsCalledYou": "{name} اتصل بك",
@@ -305,7 +305,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "الرسائل تحذف بعد إرسالها.",
   "disappearingMessagesDisappearAfterSendState": "الاختفاء بعد الإرسال - {time}",
   "disappearingMessagesFollowSetting": "اتبع الإعداد",
-  "disappearingMessagesFollowSettingOff": "لن تختفي الرسائل التي ترسلها بعد الآن. هل أنت متأكد من أنك تريد إيقاف تشغيل الرسائل المختفية؟",
+  "disappearingMessagesFollowSettingOff": "لن تختفي الرسائل التي ترسلها بعد الآن. هل أنت متأكد أنك تريد إيقاف <b>إيقاف</b> الرسائل المختفية؟",
   "disappearingMessagesFollowSettingOn": "تعيين رسائلك لتختفي <b>{time} </b> بعد أن تكون <b>{disappearing_messages_type} </b>؟",
   "disappearingMessagesLegacy": "{name} يستخدم عميل قديم. قد لا تعمل الرسائل المختفية على النحو المتوقع.",
   "disappearingMessagesOnlyAdmins": "فقط المسؤولين يمكنهم تغيير هذا الإعداد.",
@@ -419,7 +419,7 @@
   "groupNameNew": "أسم المجموعة الآن '{group_name}.",
   "groupNameUpdated": "تم تحديث اسم المجموعة.",
   "groupNoMessages": "ليس لديك رسائل من <b>{group_name}</b>. أرسل رسالة لبدء المحادثة!",
-  "groupOnlyAdmin": "أنت الأدمن الوحيد في </b>{group_name}</b>.<br/><br/> لا يمكن تغيير أعضاء المجموعة والإعدادات بدون أدمن.",
+  "groupOnlyAdmin": "أنت الأدمن الوحيد في </b>{group_name}<b>.<br/><br/> لا يمكن تغيير أعضاء المجموعة والإعدادات بدون أدمن.",
   "groupPromotedYou": "<b>أنت</b> تم ترقيتك إلى مشرف.",
   "groupPromotedYouMultiple": "<b>أنت</b> و <b>{count} آخرين</b> تمت ترقيتهم إلى مشرف.",
   "groupPromotedYouTwo": "<b>أنت</b> و <b>{name}</b> تم ترقيتهم إلى مشرف.",
@@ -461,7 +461,7 @@
   "leave": "مغادرة",
   "leaving": "جاري المغادرة...",
   "legacyGroupMemberNew": "<b>{name}</b> انضم إلى المجموعة.",
-  "legacyGroupMemberNewMultiple": "<b>{name} < /b> و <b>{count} آخرين</b> انضموا للمجموعة.",
+  "legacyGroupMemberNewMultiple": "انضم <b>{name}</b> و<b>{count} آخرين</b> إلى المجموعة.",
   "legacyGroupMemberNewYouMultiple": "<b>أنت</b> و<b>{count} آخرين</b> انضموا للمجموعة.",
   "legacyGroupMemberNewYouOther": "<b>أنت</b> و <b>{other_name}</b> انضممتما إلى المجموعة.",
   "legacyGroupMemberTwoNew": "<b>{name}</b> و <b>{other_name}</b> انضموا للمجموعة.",
