--- a/_locales/be/messages.json
+++ b/_locales/be/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Заблакавана {name}",
   "blockDescription": "Вы ўпэўненыя, што жадаеце заблакіраваць <b>{name}?</b> Заблакіраваныя карыстальнікі не могуць адпраўляць вам запыты на паведамленні, запрашэнні ў групы ці тэлефанаваць вам.",
   "blockUnblock": "Разблакіраваць",
-  "blockUnblockName": "Вы ўпэўненыя, што жадаеце разблакіраваць {name}?",
-  "blockUnblockNameMultiple": "Вы ўпэўненыя, што жадаеце разблакіраваць {name} і {count} іншых?",
-  "blockUnblockNameTwo": "Вы ўпэўненыя, што жадаеце разблакіраваць {name} і яшчэ аднаго карыстальніка?",
+  "blockUnblockName": "Вы ўпэўненыя, што жадаеце разблакіраваць <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Вы ўпэўненыя, што жадаеце разблакіраваць <b>{name}</b> і <b>{count} іншых</b>?",
+  "blockUnblockNameTwo": "Вы ўпэўненыя, што жадаеце разблакіраваць <b>{name}</b> і яшчэ аднаго карыстальніка?",
   "blockUnblockedUser": "Разблакіравана {name}",
   "call": "Выклік",
   "callsCalledYou": "{name} тэлефанаваў(ла) Вам",
@@ -316,7 +316,7 @@
   "disappearingMessagesSetYou": "<b>Вы</b> усталявалі знікненне паведамленняў {time} пасля таго, як яны былі {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Таймер",
   "disappearingMessagesTurnedOff": "<b>{name}</b> адключыў знікальныя паведамленні. Паведамленні, якія яны адправяць, больш не знікнуць.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> адключыў выдаленне паведамленняў.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> <b>адключыў</b> знікненне паведамленняў.",
   "disappearingMessagesTurnedOffYou": "<b>Вы</b> адключылі <b>знікальныя</b> паведамленні. Паведамленні, якія вы адпраўляеце, больш не знікнуць.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Вы</b> выключылі <b>паведамленні, якія знікаюць</b>.",
   "disappearingMessagesTypeRead": "прачытана",
@@ -687,7 +687,7 @@
   "recommended": "Рэкамендавана",
   "recoveryPasswordBannerDescription": "Захавайце свой Recovery password, каб пераканацца, што вы не страціце доступ да свайго акаўнта.",
   "recoveryPasswordBannerTitle": "Захавайце свой Recovery password",
-  "recoveryPasswordDescription": "Выкарыстоўвайце свой пароль для аднаўлення, каб загрузіць свой уліковы запіс на новых прыладах.<br /><br />Ваш уліковы запіс не можа быць адноўлены без вашага пароля для аднаўлення. Захоўвайце яго ў бяспечным і надзейным месцы — і не дзяліце з нікога.",
+  "recoveryPasswordDescription": "Выкарыстоўвайце свой пароль для аднаўлення, каб загрузіць свой уліковы запіс на новых прыладах.<br/><br/>Ваш уліковы запіс не можа быць адноўлены без вашага пароля для аднаўлення. Захоўвайце яго ў бяспечным і надзейным месцы — і не дзяліце з нікога.",
   "recoveryPasswordEnter": "Увядзіце recovery password",
   "recoveryPasswordErrorLoad": "Пры спробе загрузіць пароль аднаўлення адбылася памылка.<br/><br/>Калі ласка, экспартуйце свае часопісы, а затым загрузіце файл у службу падтрымкі Session, каб вырашыць гэтую праблему.",
   "recoveryPasswordErrorMessageGeneric": "Калі ласка, праверце ваш пароль для аднаўлення і паспрабуйце зноў.",
