--- a/_locales/bn/messages.json
+++ b/_locales/bn/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} কে ব্লক করবেন",
   "blockDescription": "আপনি কি নিশ্চিত যে আপনি <b>{name}</b> কে ব্লক করতে চান? ব্লক করা ব্যবহারকারীরা আপনাকে বার্তা অনুরোধ, গ্রুপ আমন্ত্রণ বা কল করতে পারবেন না।",
   "blockUnblock": "আনব্লক",
-  "blockUnblockName": "আপনি কি {name} কে আনব্লক করতে নিশ্চিত?",
-  "blockUnblockNameMultiple": "আপনি কি {name} এবং {count} অন্যান্যদের আনব্লক করতে নিশ্চিত?",
-  "blockUnblockNameTwo": "আপনি কি {name} এবং 1 অন্যকে আনব্লক করতে নিশ্চিত?",
+  "blockUnblockName": "আপনি কি <b>{name}</b> কে আনব্লক করতে নিশ্চিত?",
+  "blockUnblockNameMultiple": "আপনি কি <b>{name}</b> এবং <b>{count}</b> অন্যান্যদের আনব্লক করতে নিশ্চিত?",
+  "blockUnblockNameTwo": "আপনি কি <b>{name}</b> এবং 1 অন্যকে আনব্লক করতে নিশ্চিত?",
   "blockUnblockedUser": "আনব্লক {name}",
   "call": "কল",
   "callsCalledYou": "{name} আপনাকে কল করেছেন",
