--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Bloquejat {name}",
   "blockDescription": "Esteu segur que voleu blocar <b>{name}?</b> Els usuaris bloquejats no us poden enviar sol·licituds de missatges, invitacions de grups ni trucar-vos.",
   "blockUnblock": "Desbloquejar",
-  "blockUnblockName": "Esteu segur que voleu desbloquejar {name}?",
-  "blockUnblockNameMultiple": "Esteu segur que voleu desbloquejar {name} i {count} més?",
-  "blockUnblockNameTwo": "Esteu segur que voleu desbloquejar {name} i un altre?",
+  "blockUnblockName": "Esteu segur que voleu desbloquejar <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Esteu segur que voleu desbloquejar <b>{name}</b> i <b>{count} més</b>?",
+  "blockUnblockNameTwo": "Esteu segur que voleu desbloquejar <b>{name}</b> i un altre?",
   "blockUnblockedUser": "Desbloquejat {name}",
   "call": "Truca",
   "callsCalledYou": "{name} ha trucat",
@@ -307,7 +307,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Els missatges s'esborraran després de ser enviats.",
   "disappearingMessagesDisappearAfterSendState": "Desapareix després de l'enviament - {time}",
   "disappearingMessagesFollowSetting": "Seguir configuració",
-  "disappearingMessagesFollowSettingOff": "Els missatges que envies ja no desapareixeran. Estàs segur que vols desactivar els missatges efímers?",
+  "disappearingMessagesFollowSettingOff": "Els missatges que envies ja no desapareixeran. Estàs segur que vols <b>desactivar</b> els missatges efímers?",
   "disappearingMessagesFollowSettingOn": "Voleu configurar els vostres missatges per a desaparèixer <b>{time}?</b> després d'haver estat <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} està utilitzant un client desactualitzat. Els missatges desapareguts poden no funcionar com s'esperava.",
   "disappearingMessagesOnlyAdmins": "Només els administradors del grup poden canviar aquesta configuració.",
@@ -316,9 +316,9 @@
   "disappearingMessagesSetYou": "<b>Tu</b> has configurat els missatges perquè desapareguin {time} després d'haver estat {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Temporitzador",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ha desactivat els missatges efímers. Els missatges que enviïn ja no desapareixeran.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ha desactivat els missatges efímers.",
-  "disappearingMessagesTurnedOffYou": "<b>Tu</b> has desactivat els missatges que desapareixen. Els missatges que enviïs ja no desapareixeran.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Tu</b> has desactivat els missatges efímers.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ha <b>desactivat</b> els missatges que desapareixen.",
+  "disappearingMessagesTurnedOffYou": "<b>Heu</b> <b>desactivat</b> els missatges que desapareixen. Els missatges que envieu ja no desapareixeran.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Heu</b> <b>desactivat</b> els missatges que desapareixen.",
   "disappearingMessagesTypeRead": "llegit",
   "disappearingMessagesTypeSent": "enviat",
   "disappearingMessagesUpdated": "<b>{admin_name} </b> ha actualitzat la configuració de missatges efímers.",
