--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -30,7 +30,7 @@
   "adminRemoveAsAdmin": "Odebrat jako správce",
   "adminRemoveCommunityNone": "V této komunitě nejsou žádní administrátoři.",
   "adminRemoveFailed": "Nepodařilo se odebrat {name} jako správce.",
-  "adminRemoveFailedMultiple": "Selhalo odebrání správcovství {name} a {count} dalším.",
+  "adminRemoveFailedMultiple": "Selhalo odebrání správcovství <b>{name}</b> a <b>{count}</b> dalším.",
   "adminRemoveFailedOther": "Selhalo odebrání <b>{name}</b> a <b>{other_name}</b> jako správce.",
   "adminRemovedUser": "<b>{name}</b> byl/a odebrán/a jako správce.",
   "adminRemovedUserMultiple": "<b>{name}</b> a <b>{count} dalším</b> bylo odebráno správcovství.",
@@ -128,8 +128,8 @@
   "blockDescription": "Jste si jisti, že chcete zablokovat <b>{name}</b>? Zablokovaní uživatelé vám nemohou posílat žádosti o zprávy, pozvánky do skupin ani vám nemohou volat.",
   "blockUnblock": "Odblokovat",
   "blockUnblockName": "Opravdu chcete odblokovat {name}?",
-  "blockUnblockNameMultiple": "Opravdu chcete odblokovat {name} a {count} dalších?",
-  "blockUnblockNameTwo": "Opravdu chcete odblokovat {name} a 1 další?",
+  "blockUnblockNameMultiple": "Opravdu chcete odblokovat <b>{name}</b> a <b>{count}</b> dalších?",
+  "blockUnblockNameTwo": "Opravdu chcete odblokovat <b>{name}</b> a 1 další?",
   "blockUnblockedUser": "Odblokováno {name}",
   "call": "Volat",
   "callsCalledYou": "{name} vám volal",
@@ -307,7 +307,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Zprávy se po odeslání smažou.",
   "disappearingMessagesDisappearAfterSendState": "Zmizí po odeslání - {time}",
   "disappearingMessagesFollowSetting": "Nastavení sledování",
-  "disappearingMessagesFollowSettingOff": "Odeslané zprávy již nebudou mizet. Určitě chcete mizení zpráv vypnout?",
+  "disappearingMessagesFollowSettingOff": "Odeslané zprávy již nebudou mizet. Určitě chcete mizení zpráv <b>vypnout</b>?",
   "disappearingMessagesFollowSettingOn": "Nastavit zprávy tak, aby zmizely <b>{time}</b> po tom, co byly <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} používá zastaralého klienta. Mizející zprávy nemusí fungovat podle očekávání.",
   "disappearingMessagesOnlyAdmins": "Toto nastavení mohou měnit jen správci skupiny.",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>Vy</b> a <b>{count} dalších</b> bylo pozváno do skupiny.",
   "groupInviteYouAndOtherNew": "<b>Vy</b> a <b>{other_name}</b> jste byli pozváni do skupiny.",
   "groupLeave": "Opustit skupinu",
-  "groupLeaveDescription": "Opravdu chcete opustit {group_name}?",
+  "groupLeaveDescription": "Opravdu chcete opustit <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Jste si jisti, že chcete opustit <b>{group_name}</b>?<br/><br/>Tímto odeberete všechny členy a smažete veškerý obsah skupiny.",
   "groupLeaveErrorFailed": "Selhalo odhlášení ze skupiny {group_name}",
   "groupLegacyBanner": "Skupiny byly přepracovány, pro využití tohoto upgrade vytvořte prosím novou skupinu. Funkčnost staré skupiny bude omezena od {date}.",
