--- a/_locales/cy/messages.json
+++ b/_locales/cy/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Rhwystro {name}",
   "blockDescription": "Ydych chi'n siŵr eich bod am rwystro <b>{name}</b>? Ni all defnyddwyr rhwystredig anfon ceisiadau neges, gwahoddiadau grŵp na’ch galw.",
   "blockUnblock": "Dadrwystro",
-  "blockUnblockName": "Ydych chi'n siŵr eich bod am ddadrwystro {name}?",
-  "blockUnblockNameMultiple": "Ydych chi'n siŵr eich bod am ddadrwystro {name} a {count} eraill?",
-  "blockUnblockNameTwo": "Ydych chi'n siŵr eich bod am ddadrwystro {name} ag un arall?",
+  "blockUnblockName": "Ydych chi'n siŵr eich bod am ddadrwystro <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Ydych chi'n siŵr eich bod am ddadrwystro <b>{name}</b> a <b>{count} eraill</b>?",
+  "blockUnblockNameTwo": "Ydych chi'n siŵr eich bod am ddadrwystro <b>{name}</b> ag un arall?",
   "blockUnblockedUser": "Wedi dadrwystro {name}",
   "call": "Galw",
   "callsCalledYou": "Galwodd {name} chi",
@@ -311,7 +311,7 @@
   "disappearingMessagesOnlyAdmins": "Dim ond gweinyddwyr grŵp yn gallu newid y gosodiad hwn.",
   "disappearingMessagesSent": "Anfonwyd",
   "disappearingMessagesSet": "<b>{name} y</b> wedi gosod negeseuon i ddiflannu {time} ar ôl iddynt fod wedi {disappearing_messages_type}.",
-  "disappearingMessagesSetYou": "Rydych wedi gosod yr amserydd neges sy'n diflannu i {time} ar ôl iddynt fod wedi {disappearing_messages_type}.",
+  "disappearingMessagesSetYou": "<b>Rydych</b> wedi gosod yr amserydd neges sy'n diflannu i {time} ar ôl iddynt fod wedi {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Amserydd",
   "disappearingMessagesTurnedOff": "<b>{name} y</b> wedi troi neges diflannu i ffwrdd. Ni fydd negeseuon maent yn anfon yn diflannu mwyach.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> wedi troi negeseuon diflannu <b>i ffwrdd</b>.",
@@ -320,7 +320,7 @@
   "disappearingMessagesTypeRead": "darllen",
   "disappearingMessagesTypeSent": "anfonwyd",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> diweddarwyd gosodiadau negeseuon diflanedig.",
-  "disappearingMessagesUpdatedYou": "Rydych wedi diweddaru'r gosodiadau neges diflannu.",
+  "disappearingMessagesUpdatedYou": "<b>Rydych</b> wedi diweddaru'r gosodiadau neges diflannu.",
   "dismiss": "Gwrthod",
   "displayNameDescription": "Gall fod dy enw go iawn, alias, neu unrhyw enw arall wyt ti’n ei hoffi — ac fe elli di ei newid unrhyw bryd.",
   "displayNameEnter": "Rhowch eich enw arddangos",
@@ -681,7 +681,7 @@
   "recommended": "Argymhellir",
   "recoveryPasswordBannerDescription": "Cadwch eich cyfrinair adfer i wneud yn siŵr nad ydych yn colli mynediad i'ch cyfrif.",
   "recoveryPasswordBannerTitle": "Cadwch eich cyfrinair adfer",
-  "recoveryPasswordDescription": "Defnyddiwch eich chyfrinair adfer i lwytho eich cyfrif ar ddyfeisiau newydd. <br /><br />Ni ellir adfer eich cyfrif heb eich cyfrinair adfer. Sicrhewch ei fod yn cael ei storio yn rhywle diogel - ac na fyddwch yn ei rannu ag unrhyw un.",
+  "recoveryPasswordDescription": "Defnyddiwch eich chyfrinair adfer i lwytho eich cyfrif ar ddyfeisiau newydd.<br/><br/>Ni ellir adfer eich cyfrif heb eich cyfrinair adfer. Sicrhewch ei fod yn cael ei storio yn rhywle diogel - ac na fyddwch yn ei rannu ag unrhyw un.",
   "recoveryPasswordEnter": "Rhowch eich cyfrinair adfer",
   "recoveryPasswordErrorLoad": "Cafodd gwall pan oedd yn ceisio llwytho eich cyfrinair adfer.<br/><br/>Allforiwch eich logiau, yna uwchgwynwch y ffeil drwy'r Help Desk Session i helpu i ddatrys y mater hwn.",
   "recoveryPasswordErrorMessageGeneric": "Gwiriwch eich cyfrinair adfer a cheisio eto.",
