--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Blokeret {name}",
   "blockDescription": "Er du sikker på, at du vil blokere <b>{name}?</b> Blokerede brugere kan ikke sende dig beskedanmodninger, gruppeinvitationer eller ringe til dig.",
   "blockUnblock": "Fjern blokering",
-  "blockUnblockName": "Er du sikker på, at du vil fjerne blokeringen af {name}?",
-  "blockUnblockNameMultiple": "Er du sikker på, at du vil fjerne blokeringen af {name} og {count} andre?",
-  "blockUnblockNameTwo": "Er du sikker på, at du vil fjerne blokeringen af {name} og 1 anden?",
+  "blockUnblockName": "Er du sikker på, at du vil fjerne blokeringen af <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Er du sikker på, at du vil fjerne blokeringen af <b>{name}</b> og <b>{count} andre</b>?",
+  "blockUnblockNameTwo": "Er du sikker på, at du vil fjerne blokeringen af <b>{name}</b> og 1 anden?",
   "blockUnblockedUser": "Afblokeret {name}",
   "call": "Opkald",
   "callsCalledYou": "{name} ringede til dig",
@@ -317,7 +317,7 @@
   "disappearingMessagesTimer": "Timer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> har slået forsvindende beskeder fra. Beskeder, de sender, vil ikke længere forsvinde.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> har slået forsvinder beskeder <b>fra</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>Du</b> slukkede forsvindende beskeder. Beskeder, du sender, vil ikke længere forsvinde.",
+  "disappearingMessagesTurnedOffYou": "<b>Du</b> har slået <b>fra</b> forsvindende beskeder. Beskeder, du sender, forsvinder ikke længere.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Du</b> har slået forsvinder beskeder <b>fra</b>.",
   "disappearingMessagesTypeRead": "læst",
   "disappearingMessagesTypeSent": "sendt",
