--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -30,7 +30,7 @@
   "adminRemoveAsAdmin": "Als Administrator entfernen",
   "adminRemoveCommunityNone": "Es gibt keine Administratoren in dieser Community.",
   "adminRemoveFailed": "Fehler beim Entfernen von {name} als Admin.",
-  "adminRemoveFailedMultiple": "Fehler beim Entfernen von {name} und {count} anderen als Admin.",
+  "adminRemoveFailedMultiple": "Fehler beim Entfernen von <b>{name}</b> und <b>{count} anderen</b> als Admin.",
   "adminRemoveFailedOther": "Fehler beim Entfernen von <b>{name}</b> und <b>{other_name}</b> als Admin.",
   "adminRemovedUser": "<b>{name}</b> wurde als Admin entfernt.",
   "adminRemovedUserMultiple": "<b>{name}</b> und <b>{count} andere</b> wurden als Admin entfernt.",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Blockiert {name}",
   "blockDescription": "Möchten Sie <b>{name}<-</b> blockieren? Blockierte Benutzer können Ihnen keine Nachrichtenanfragen, Gruppeneinladungen oder Anrufe senden.",
   "blockUnblock": "Blockierung aufheben",
-  "blockUnblockName": "Bist du sicher, dass du {name} entblocken möchtest?",
-  "blockUnblockNameMultiple": "Bist Du sicher, dass Du {name} und {count} andere entblocken möchtest?",
-  "blockUnblockNameTwo": "Bist du sicher, dass du {name} und eine weitere Person entblocken möchtest?",
+  "blockUnblockName": "Bist du sicher, dass du <b>{name}</b> entblocken möchtest?",
+  "blockUnblockNameMultiple": "Bist Du sicher, dass Du <b>{name}</b> und <b>{count} andere entblocken möchtest</b>?",
+  "blockUnblockNameTwo": "Bist du sicher, dass du <b>{name}</b> und eine weitere Person entblocken möchtest?",
   "blockUnblockedUser": "{name} entsperrt",
   "call": "Anrufen",
   "callsCalledYou": "{name} hat angerufen",
@@ -180,7 +180,7 @@
   "clearDeviceOnly": "Nur Gerät entfernen",
   "clearMessages": "Alle Nachrichten löschen",
   "clearMessagesChatDescription": "Sind Sie sicher, dass Sie alle Nachrichten von Ihrem Gespräch mit <b>{name}</b> von Ihrem Gerät löschen möchten?",
-  "clearMessagesCommunity": "Möchten Sie wirklich alle Nachrichten von <b>{community_name}<b> von Ihrem Gerät löschen?",
+  "clearMessagesCommunity": "Möchten Sie wirklich alle Nachrichten von <b>{community_name}</b> von Ihrem Gerät löschen?",
   "clearMessagesForEveryone": "Für alle löschen",
   "clearMessagesForMe": "Für mich löschen",
   "clearMessagesGroupAdminDescription": "Sind Sie sicher, dass Sie alle Nachrichten von <b>{group_name}</b> löschen möchten?",
@@ -398,7 +398,7 @@
   "groupInviteYouAndMoreNew": "<b>Du</b> und <b>{count} andere</b> sind der Gruppe beigetreten.",
   "groupInviteYouAndOtherNew": "<b>Du</b> und <b>{other_name}</b> sind der Gruppe beigetreten.",
   "groupLeave": "Gruppe verlassen",
-  "groupLeaveDescription": "Bist du sicher, dass du {group_name} verlassen möchtest?",
+  "groupLeaveDescription": "Bist du sicher, dass du<b> {group_name}</b> verlassen möchtest?",
   "groupLeaveDescriptionAdmin": "Sind Sie sicher, dass Sie <b>{group_name}</b> verlassen möchten?<br/><br/>Dadurch werden alle Mitglieder entfernt und alle Gruppendaten gelöscht.",
   "groupLeaveErrorFailed": "Fehler beim Verlassen von {group_name}",
   "groupLegacyBanner": "Gruppen wurden aktualisiert, erstellen Sie eine neue Gruppe, um zu aktualisieren. Alte Gruppenfunktionen werden ab {date} eingeschränkt.",
