--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -14,7 +14,7 @@
   "actualSize": "Πραγματικό Μέγεθος",
   "add": "Προσθήκη",
   "adminCannotBeRemoved": "Οι διαχειριστές δεν μπορούν να αφαιρεθούν.",
-  "adminMorePromotedToAdmin": "<b>{name} και άλλοι {count}</b> έγιναν Διαχειριστές.",
+  "adminMorePromotedToAdmin": "<b>{name}</b> και <b>{count} άλλα</b> προωθήθηκαν στον Διαχειριστή.",
   "adminPromote": "Προώθηση Διαχειριστών",
   "adminPromoteDescription": "Σίγουρα θέλετε να προάγετε τον/την <b>{name}</b> σε διαχειριστή/ρια; Οι διαχειριστές δε μπορούν να αφαιρεθούν.",
   "adminPromoteMoreDescription": "Σίγουρα θέλετε να προάγετε τον/την <b>{name}</b> και <b>{count} άλλους/ες</b> σε διαχειριστή/ρια; Οι διαχειριστές δε μπορούν να αφαιρεθούν.",
@@ -37,7 +37,7 @@
   "adminRemovedUserOther": "<b>{name}</b> και <b>{other_name}</b> αφαιρέθηκαν ως Διαχειριστές.",
   "adminSendingPromotion": "Γίνεται αποστολή προαγωγής διαχειριστή",
   "adminSettings": "Ρυθμίσεις Διαχειριστή",
-  "adminTwoPromotedToAdmin": "<b>{name} και {other_name}</b> έγιναν Διαχειριστές.",
+  "adminTwoPromotedToAdmin": "<b>{name}</b> και <b>{other_name}</b> προωθήθηκαν στο Admin.",
   "andMore": "+{count}",
   "anonymous": "Ανώνυμος",
   "appearanceAutoDarkMode": "Αυτόματη σκοτεινή λειτουργία",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Σε φραγή {name}",
   "blockDescription": "Είστε σίγουροι ότι θέλετε να θέσετε σε φραγή <b>{name}</b>; Οι μπλοκαρισμένοι χρήστες δεν μπορούν να σας στείλουν αιτήματα μηνύματα, προσκλήσεις ομάδας ή να σας καλέσουν.",
   "blockUnblock": "Ξεμπλοκάρισμα",
-  "blockUnblockName": "Σίγουρα θέλετε να καταργήσετε τη φραγή από {name};",
-  "blockUnblockNameMultiple": "Σίγουρα θέλετε να καταργήσετε τη φραγή από {name} και {count} άλλους/ες;",
-  "blockUnblockNameTwo": "Σίγουρα θέλετε να καταργήσετε τη φραγή από {name} και από έναν/μία άλλο/η;",
+  "blockUnblockName": "Σίγουρα θέλετε να καταργήσετε τη φραγή από <b>{name}</b>;",
+  "blockUnblockNameMultiple": "Σίγουρα θέλετε να καταργήσετε τη φραγή από <b>{name}</b> και <b>{count}</b> άλλους/ες;",
+  "blockUnblockNameTwo": "Σίγουρα θέλετε να καταργήσετε τη φραγή από <b>{name}</b> και από έναν/μία άλλο/η;",
   "blockUnblockedUser": "Κατάργηση φραγής {name}",
   "call": "Κλήση",
   "callsCalledYou": "O/H {name} σας κάλεσε",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Τα μηνύματα διαγράφονται αφού έχουν αποσταλεί.",
   "disappearingMessagesDisappearAfterSendState": "Εξαφάνιση Μετά από Αποστολή - {time}",
   "disappearingMessagesFollowSetting": "Ακολούθηση Ρύθμισης",
-  "disappearingMessagesFollowSettingOff": "Τα μηνύματα που στέλνετε δεν θα εξαφανίζονται πλέον. Είστε βέβαιοι ότι θέλετε να απενεργοποιήσετε τα εξαφανιζόμενα μηνύματα;",
+  "disappearingMessagesFollowSettingOff": "Τα μηνύματα που στέλνετε δεν θα εξαφανίζονται πλέον. Είστε βέβαιοι ότι θέλετε να <b>απενεργοποιήσετε</b> τα εξαφανιζόμενα μηνύματα;",
   "disappearingMessagesFollowSettingOn": "Ορίστε τα μηνύματά σας να εξαφανίζονται <b>{time}‌</b> αφότου έχουν <b>{disappearing_messages_type}‌</b>;",
   "disappearingMessagesLegacy": "{name} χρησιμοποιεί πελάτη παλαιότερης έκδοσης. Τα εξαφανιζόμενα μηνύματα ενδέχεται να μην λειτουργήσουν όπως αναμένεται.",
   "disappearingMessagesOnlyAdmins": "Μόνο οι διαχειριστές της ομάδας μπορούν να αλλάξουν αυτήν τη ρύθμιση.",
@@ -318,8 +318,8 @@
   "disappearingMessagesTimer": "Χρονόμετρο",
   "disappearingMessagesTurnedOff": "<b>{name}</b> απενεργοποίησε τα εξαφανιζόμενα μηνύματα. Τα μηνύματα που θα στείλει δε θα εξαφανίζονται πλέον.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> απενεργοποίησε τα εξαφανιζόμενα μηνύματα.",
-  "disappearingMessagesTurnedOffYou": "<b>Εσείς</b> απενεργοποιήσατε τα εξαφανιζόμενα μηνύματα. Τα μηνύματα που θα στείλετε δε θα εξαφανίζονται πλέον.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Εσείς</b> απενεργοποιήσατε τα <b>εξαφανιζόμενα μηνύματα</b>.",
+  "disappearingMessagesTurnedOffYou": "<b>Εσείς</b> <b>απενεργοποιήσατε</b> τα εξαφανιζόμενα μηνύματα. Τα μηνύματα που θα στείλετε δε θα εξαφανίζονται πλέον.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Εσείς</b> <b>απενεργοποιήσατε</b> τα εξαφανιζόμενα μηνύματα.",
   "disappearingMessagesTypeRead": "ανάγνωση",
   "disappearingMessagesTypeSent": "στάλθηκε",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> ενημέρωσε τις ρυθμίσεις των εξαφανιζόμενων μηνυμάτων.",
@@ -398,17 +398,17 @@
   "groupInviteYouAndMoreNew": "<b>Εσύ</b> και <b>{count} ακόμη</b> συμμετείχατε στην ομάδα.",
   "groupInviteYouAndOtherNew": "<b>Εσύ</b> και <b>{other_name}</b> συμμετείχατε στην ομάδα.",
   "groupLeave": "Αποχώρηση από την ομάδα",
-  "groupLeaveDescription": "Σίγουρα θέλετε να αποχωρήσετε από την ομάδα {group_name};",
+  "groupLeaveDescription": "Σίγουρα θέλετε να αποχωρήσετε από την ομάδα <b>{group_name}</b>",
   "groupLeaveDescriptionAdmin": "Σίγουρα θέλετε να αποχωρήσετε από την <b>{group_name}</b>?<br/><br/>Αυτό θα αφαιρέσει όλα τα μέλη και θα διαγράψει όλο το περιεχόμενο της ομάδας.",
   "groupLeaveErrorFailed": "Αποτυχία αποχώρησης από το {group_name}",
   "groupLegacyBanner": "Οι ομάδες έχουν αναβαθμιστεί, δημιουργήστε μια νέα ομάδα για αναβάθμιση. Η παλαιά λειτουργία ομάδας θα υποβαθμιστεί από {date}.",
   "groupMemberLeft": "<b>{name}</b> αποχώρησε από την ομάδα.",
-  "groupMemberLeftMultiple": "<b>{name} και άλλοι {count}</b> αποχώρησαν από την ομάδα.",
-  "groupMemberLeftTwo": "<b>{name} και {other_name}</b> αποχώρησαν από την ομάδα.",
+  "groupMemberLeftMultiple": "<b>{name}</b> και <b>{count} ακόμη</b> έφυγαν από την ομάδα.",
+  "groupMemberLeftTwo": "<b>{name}</b> και <b>{other_name}</b> έφυγε από την ομάδα.",
   "groupMemberNew": "<b>{name}</b> συμμετείχε στην ομάδα.",
   "groupMemberNewHistory": "<b>{name}</b> προσκλήθηκε να συμμετάσχει στην ομάδα. Το ιστορικό συνομιλιών κοινοποιήθηκε.",
-  "groupMemberNewHistoryMultiple": "<b>{name} και άλλοι {count}</b> προσκλήθηκαν να συμμετάσχουν στην ομάδα. Το ιστορικό συνομιλιών κοινοποιήθηκε.",
-  "groupMemberNewHistoryTwo": "<b>{name} και {other_name}</b> προσκλήθηκαν να συμμετάσχουν στην ομάδα. Το ιστορικό συνομιλιών κοινοποιήθηκε.",
+  "groupMemberNewHistoryMultiple": "<b>{name}</b> και <b>{count} άλλοι</b> προσκλήθηκαν να συμμετάσχουν στην ομάδα. Το ιστορικό συνομιλιών κοινοποιήθηκε.",
+  "groupMemberNewHistoryTwo": "<b>{name}</b> και <b>{other_name}</b> προσκλήθηκαν να συμμετάσχουν στην ομάδα. Το ιστορικό συνομιλιών κοινοποιήθηκε.",
   "groupMemberNewMultiple": "<b>{name}</b> και <b>{count} άλλοι</b> προσκλήθηκαν να εγγραφούν στην ομάδα.",
   "groupMemberNewTwo": "<b>{name}</b> και <b>{other_name}</b> προσκλήθηκαν να συμμετάσχουν στην ομάδα.",
   "groupMemberNewYouHistoryMultiple": "<b>Εσείς</b> και <b>{count} άλλοι</b> προσκληθήκατε να συμμετάσχετε στην ομάδα. Το ιστορικό συνομιλίας κοινοποιήθηκε.",
@@ -433,8 +433,8 @@
   "groupRemoveMessages": "{count, plural, one [Αφαίρεση χρήστη και των μηνυμάτων του] other [Αφαίρεση χρηστών και των μηνυμάτων τους]}",
   "groupRemoveUserOnly": "{count, plural, one [Αφαίρεση Απλά Χρήστη] other [Αφαίρεση Χρηστών]}",
   "groupRemoved": "<b>{name}</b> αφαιρέθηκε από την ομάδα.",
-  "groupRemovedMultiple": "<b>{name} και άλλοι {count}</b> αφαιρέθηκαν από την ομάδα.",
-  "groupRemovedTwo": "<b>{name} και {other_name}</b> αφαιρέθηκαν από την ομάδα.",
+  "groupRemovedMultiple": "<b>{name}</b> και <b>{count} άλλα</b> αφαιρέθηκαν από την ομάδα.",
+  "groupRemovedTwo": "<b>{name}</b> και <b>{other_name}</b> αφαιρέθηκαν από την ομάδα.",
   "groupRemovedYou": "Έχετε αφαιρεθεί από <b>{group_name}</b>.",
   "groupRemovedYouMultiple": "<b>Εσείς</b> και <b>{count} άλλοι</b> αφαιρέθηκαν από την ομάδα.",
   "groupRemovedYouTwo": "<b>Εσείς</b> και <b>{other_name}</b> αφαιρέθηκαν από την ομάδα.",
@@ -465,10 +465,10 @@
   "leave": "Αποχώρηση",
   "leaving": "Αποχώρηση...",
   "legacyGroupMemberNew": "<b>{name}</b> συμμετείχε στην ομάδα.",
-  "legacyGroupMemberNewMultiple": "<b>{name} και άλλοι {count}</b> συμμετείχαν στην ομάδα.",
+  "legacyGroupMemberNewMultiple": "<b>{name}</b> και <b>{count} ακόμα</b> εντάχθηκαν στην ομάδα.",
   "legacyGroupMemberNewYouMultiple": "<b>Εσείς</b> και <b>{count} άλλοι</b> προσκληθήκατε να συμμετάσχετε στην ομάδα.",
   "legacyGroupMemberNewYouOther": "<b>Εσείς</b> και <b>{other_name}</b> συμμετείχατε στην ομάδα.",
-  "legacyGroupMemberTwoNew": "<b>{name} και {other_name}</b> συμμετείχαν στην ομάδα.",
+  "legacyGroupMemberTwoNew": "<b>{name}</b> και <b>{other_name}</b> εντάχθηκαν στην ομάδα.",
   "legacyGroupMemberYouNew": "<b>Εσείς</b> συμμετείχατε στην ομάδα.",
   "linkPreviews": "Προεπισκοπήσεις Συνδέσμου",
   "linkPreviewsDescription": "Δημιουργία προεπισκοπήσεων συνδέσμου για υποστηριζόμενα URL.",
