--- a/_locales/eo/messages.json
+++ b/_locales/eo/messages.json
@@ -16,11 +16,11 @@
   "adminCannotBeRemoved": "Administrantoj ne povas esti forigitaj.",
   "adminMorePromotedToAdmin": "<b>{name} </b> kaj <b>{count} aliaj </b> estis promociitaj al Admin.",
   "adminPromote": "Promocii administrantojn",
-  "adminPromoteDescription": "Ĉu vi certas, ke vi volas promocion al <b>{name} <\\/b> al admin? Adminoj ne povas esti forigitaj.",
-  "adminPromoteMoreDescription": "Ĉu vi certas, ke vi volas promocion al <b>{name} <\\/b> kaj <b>{count} aliaj <\\/b> al admin? Adminoj ne povas esti forigitaj.",
+  "adminPromoteDescription": "Ĉu vi certas, ke vi volas promocion al <b>{name}</b> al admin? Adminoj ne povas esti forigitaj.",
+  "adminPromoteMoreDescription": "Ĉu vi certas, ke vi volas promocion al <b>{name}</b> kaj <b>{count} aliaj</b> al admin? Adminoj ne povas esti forigitaj.",
   "adminPromoteToAdmin": "Promocii al administranto",
   "adminPromoteTwoDescription": "Ĉu vi certas, ke vi volas promocion al <b>{name}</b> kaj <b>{other_name} </b> al admin? Adminoj ne povas esti forigitaj.",
-  "adminPromotedToAdmin": "<b>{name} <\\ /b> estis promociita al Admin.",
+  "adminPromotedToAdmin": "<b>{name}</b> estis promociita al Admin.",
   "adminPromotionFailed": "Pli altnivela administranto malsukcesis",
   "adminPromotionFailedDescription": "Malsukcesis promocii {name} en {group_name}",
   "adminPromotionFailedDescriptionMultiple": "Malsukcesis promocii {name} kaj {count} aliajn en {group_name}",
@@ -32,7 +32,7 @@
   "adminRemoveFailed": "Malsukcesis forigi {name} kiel Admin.",
   "adminRemoveFailedMultiple": "Malsukcesis forigi <b>{name}</b> kaj <b>{count} aliaj</b> kiel Admoj.",
   "adminRemoveFailedOther": "Malsukcesis forigi <b>{name}</b> kaj <b>{other_name}</b> kiel Admoj.",
-  "adminRemovedUser": "<b>{name} <\\ /b> estis deprenita kiel Admin.",
+  "adminRemovedUser": "<b>{name}</b> estis deprenita kiel Admin.",
   "adminRemovedUserMultiple": "<b>{name}</b> kaj <b>{count} aliaj</b> estis forigitaj kiel Admoj.",
   "adminRemovedUserOther": "<b>{name}</b> kaj <b>{other_name}</b> estis forigitaj kiel Admoj.",
   "adminSendingPromotion": "Sendante administran promocion",
@@ -125,11 +125,11 @@
   "blockBlockedDescription": "Malbloki tiun kontakton por sendi mesaĝon.",
   "blockBlockedNone": "Neniu blokata kontakto",
   "blockBlockedUser": "Blokis {name}",
-  "blockDescription": "Ĉu vi certas, ke vi volas bloki <b>{name}<>? Blokitaj uzantoj ne povas sendi al vi mesaĝpetojn, grupinvitadojn aŭ telefonvokojn.",
+  "blockDescription": "Ĉu vi certas, ke vi volas bloki <b>{name}</b>? Blokitaj uzantoj ne povas sendi al vi mesaĝpetojn, grupinvitadojn aŭ telefonvokojn.",
   "blockUnblock": "Malbloki",
-  "blockUnblockName": "Ĉu vi certas, ke vi volas malbloki {name}?",
-  "blockUnblockNameMultiple": "Ĉu vi certas, ke vi volas malbloki {name} kaj {count} aliajn?",
-  "blockUnblockNameTwo": "Ĉu vi certas, ke vi volas malbloki {name} kaj 1 alian?",
+  "blockUnblockName": "Ĉu vi certas, ke vi volas malbloki <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Ĉu vi certas, ke vi volas malbloki <b>{name}</b> kaj <b>{count} aliajn</b>?",
+  "blockUnblockNameTwo": "Ĉu vi certas, ke vi volas malbloki <b>{name}</b> kaj 1 alian?",
   "blockUnblockedUser": "Malbarita {name}",
   "call": "Telefonvoki",
   "callsCalledYou": "{name} telefonis vin",
@@ -182,7 +182,7 @@
   "clearMessagesCommunity": "Ĉu vi certas, ke vi volas forigi ĉiujn mesaĝojn de <b>{community_name}</b> el via aparato?",
   "clearMessagesForEveryone": "Forviŝi por ĉiuj",
   "clearMessagesForMe": "Forviŝi por mi",
-  "clearMessagesGroupAdminDescription": "Ĉu vi certas, ke vi volas forigi ĉiujn mesaĝojn de <b>{group_name}<>?",
+  "clearMessagesGroupAdminDescription": "Ĉu vi certas, ke vi volas forigi ĉiujn mesaĝojn de <b>{group_name}</b>?",
   "clearMessagesGroupDescription": "Ĉu vi certas, ke vi volas forigi ĉiujn mesaĝojn de <b>{group_name}</b> el via aparato?",
   "clearMessagesNoteToSelfDescription": "Ĉu vi certas, ke vi volas forigi ĉiujn mesaĝojn al Memo al Mi mem el via aparato?",
   "close": "Fermi",
@@ -228,7 +228,7 @@
   "conversationsBlockedContacts": "Baritaj kontaktoj",
   "conversationsCommunities": "Komunumoj",
   "conversationsDelete": "Ĉu forviŝi la konversacion",
-  "conversationsDeleteDescription": "Ĉu vi certas, ke vi volas forigi vian konversacion kun <b>{name} <\\/b>? Novaj mesaĝoj de <b>{name} <\\/b> komencos novan konversacion.",
+  "conversationsDeleteDescription": "Ĉu vi certas, ke vi volas forigi vian konversacion kun <b>{name}</b>? Novaj mesaĝoj de <b>{name}</b> komencos novan konversacion.",
   "conversationsDeleted": "Konversacio forviŝite",
   "conversationsEmpty": "Ne estas mesaĝoj en {conversation_name}.",
   "conversationsEnter": "Eniri ŝlosilon",
@@ -269,7 +269,7 @@
   "deleteAfterGroupPR3GroupErrorLeave": "Ne povas forlasi dum aldoni aŭ forigi aliajn membrojn.",
   "deleteAfterLegacyDisappearingMessagesLegacy": "Heredaĵo",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Originala versio de memviŝontataj mesaĝoj.",
-  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name} <\\ /b> agordis la memviŝontajn mesaĝojn al <b>{time} <\\ /b>",
+  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> agordis la memviŝontajn mesaĝojn al <b>{time} </b>",
   "deleteAfterLegacyGroupsGroupCreation": "Bonvolu atendi dum la grupo estas kreata...",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Malsukcesis ĝisdatigi la grupon",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Vi ne permesiĝas forigi la mesaĝojn de aliuloj",
@@ -307,22 +307,22 @@
   "disappearingMessagesDisappearAfterSendDescription": "Mesaĝoj foriĝos post sendite.",
   "disappearingMessagesDisappearAfterSendState": "Malaperos Post Sendado - {time}",
   "disappearingMessagesFollowSetting": "Sekvi Agordon",
-  "disappearingMessagesFollowSettingOff": "Mesaĝoj vi sendas ne plu foriĝos. Ĉu vi certe volas malŝalti memviŝontatajn mesaĝojn?",
-  "disappearingMessagesFollowSettingOn": "Agordi viajn mesaĝojn por malaperi <b>{time} <\\/b> post kiam ili estis <b>{disappearing_messages_type} <\\/b>?",
+  "disappearingMessagesFollowSettingOff": "Mesaĝoj, kiujn vi sendas, ne plu malaperos. Ĉu vi certas, ke vi volas <b>malŝalti</b> malaperantajn mesaĝojn?",
+  "disappearingMessagesFollowSettingOn": "Agordi viajn mesaĝojn por malaperi <b>{time}</b> post kiam ili estis <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} uzas malnovan klienton. Malaperontaj mesaĝoj eble ne funkcios kiel atendite.",
   "disappearingMessagesOnlyAdmins": "Nur administrantoj de la grupo povas ŝanĝi tiun agordon.",
   "disappearingMessagesSent": "Sendita",
-  "disappearingMessagesSet": "<b>{name} <\\ /b> agordis mesaĝojn por malaperi post {time} kiam ili estis {disappearing_messages_type}.",
-  "disappearingMessagesSetYou": "<b>Vi <\\ /b> agordis mesaĝojn por malaperi post {time} kiam ili estis {disappearing_messages_type}.",
+  "disappearingMessagesSet": "<b>{name}</b> agordis mesaĝojn por malaperi post {time} kiam ili estis {disappearing_messages_type}.",
+  "disappearingMessagesSetYou": "<b>Vi</b> agordis mesaĝojn por malaperi post {time} kiam ili estis {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Tempigilo",
-  "disappearingMessagesTurnedOff": "<b>{name} <\\ /b> malŝaltis memviŝontajn mesaĝojn. Mesaĝoj kiujn ili sendos, ne plu malaperos.",
+  "disappearingMessagesTurnedOff": "<b>{name}</b> malŝaltis memviŝontajn mesaĝojn. Mesaĝoj kiujn ili sendos, ne plu malaperos.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> malŝaltis memviŝontatajn mesaĝojn.<b>for</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>Vi <\\ /b> malŝaltis memviŝontajn mesaĝojn. Mesaĝoj kiujn vi sendos, ne plu malaperos.",
+  "disappearingMessagesTurnedOffYou": "<b>Vi</b> malŝaltis memviŝontajn mesaĝojn. Mesaĝoj kiujn vi sendos, ne plu malaperos.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Vi</b> malŝaltis memviŝontatajn mesaĝojn.",
   "disappearingMessagesTypeRead": "legita",
   "disappearingMessagesTypeSent": "sendita",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> malŝaltis malaperantajn mesaĝojn.",
-  "disappearingMessagesUpdatedYou": "<b>Vi <\\ /b> ĝisdatigis memviŝontajn mesaĝojn.",
+  "disappearingMessagesUpdatedYou": "<b>Vi</b> ĝisdatigis memviŝontajn mesaĝojn.",
   "dismiss": "Eksigi",
   "displayNameDescription": "Ĝi povas esti via vera nomo, kaŝnomo, aŭ io ajn alia, kion vi ŝatas — kaj vi povas ŝanĝi ĝin iam ajn.",
   "displayNameEnter": "Enigu montrotan nomon",
@@ -376,7 +376,7 @@
   "groupCreate": "Krei Grupon",
   "groupCreateErrorNoMembers": "Bonvolu elekti almenaŭ unu grupanon.",
   "groupDelete": "Forigi grupon",
-  "groupDeleteDescription": "Ĉu vi certas, ke vi volas forigi <b>{group_name}<>? Ĉi tiu ago forigos ĉiujn membrojn kaj forigos ĉiujn enhavojn de la grupo.",
+  "groupDeleteDescription": "Ĉu vi certas, ke vi volas forigi <b>{group_name}</b>? Ĉi tiu ago forigos ĉiujn membrojn kaj forigos ĉiujn enhavojn de la grupo.",
   "groupDescriptionEnter": "Enigu gruppriskribon",
   "groupDisplayPictureUpdated": "Grupa bildo ĝisdatigis.",
   "groupEdit": "Redakti Grupon",
@@ -393,18 +393,18 @@
   "groupInviteSent": "Invito sendita",
   "groupInviteSuccessful": "Invito de grupo sukcesis",
   "groupInviteVersion": "Uzantoj devas havi la plej novan version por ricevi invitojn",
-  "groupInviteYou": "<b>Vi <\\ /b> estis invitita aniĝi al la grupo.",
+  "groupInviteYou": "<b>Vi</b> estis invitita aniĝi al la grupo.",
   "groupInviteYouAndMoreNew": "<b>Vi</b> kaj <b>{count} aliaj</b> estis invititaj aniĝi al la grupo.",
   "groupInviteYouAndOtherNew": "<b>Vi</b> kaj <b>{other_name}</b> estis invititaj aniĝi al la grupo.",
   "groupLeave": "Forlasi Grupon",
-  "groupLeaveDescription": "Ĉu vi certas, ke vi volas forlasi {group_name}?",
+  "groupLeaveDescription": "Ĉu vi certas, ke vi volas forlasi <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Ĉu vi certas, ke vi volas foriri el <b>{group_name}</b>?<br/><br/>Ĉi tio forigos ĉiujn membrojn kaj forigos ĉiun grupon enhavo.",
   "groupLeaveErrorFailed": "Malsukceso forlasi {group_name}",
   "groupLegacyBanner": "Grupoj ĝisdatigitaj, kreu novan grupon por ĝisdatigi. Malnova grupa funkcio malkreskos de {date}.",
   "groupMemberLeft": "<b>{name} <\\ /b> forlasis la grupon.",
-  "groupMemberLeftMultiple": "<b>{name} </b> kaj <b>{count} aliaj </b> forlasis la grupon.",
+  "groupMemberLeftMultiple": "<b>{name}</b> kaj <b>{count} aliaj </b> forlasis la grupon.",
   "groupMemberLeftTwo": "<b>{name} </b> kaj <b>{other_name} </b> forlasis la grupon.",
-  "groupMemberNew": "<b>{name} <\\ /b> grupaniĝis.",
+  "groupMemberNew": "<b>{name}</b> grupaniĝis.",
   "groupMemberNewHistory": "<b>{name}</b> estis invitita aniĝi al la grupo. Babilhistorio estis dividita.",
   "groupMemberNewHistoryMultiple": "<b>{name}</b> kaj <b>{count} aliaj</b> estis invititaj aniĝi al la grupo. Babilhistorio estis dividita.",
   "groupMemberNewHistoryTwo": "<b>{name}</b> kaj <b>{other_name}</b> estis invititaj aniĝi al la grupo. Babilhistorio estis dividita.",
@@ -412,7 +412,7 @@
   "groupMemberNewTwo": "<b>{name}</b> kaj <b>{other_name}</b> estis invititaj aniĝi al la grupo.",
   "groupMemberNewYouHistoryMultiple": "<b>Vi</b> kaj <b>{count} aliaj</b> estis invititaj aniĝi al la grupo. Babilhistorio estis dividita.",
   "groupMemberNewYouHistoryTwo": "<b>Vi</b> kaj <b>{name}</b> estis invititaj aniĝi al la grupo. Babilhistorio estis dividita.",
-  "groupMemberYouLeft": "<b>Vi <\\ /b> forlasis la grupon.",
+  "groupMemberYouLeft": "<b>Vi</b> forlasis la grupon.",
   "groupMembers": "Grupanoj",
   "groupMembersNone": "Ne estas aliaj membroj en ĉi tiu grupo.",
   "groupName": "Grupnomo",
@@ -423,7 +423,7 @@
   "groupNameUpdated": "Grupa nomo ĝisdatigite.",
   "groupNoMessages": "Vi ne havas mesaĝojn de <b>{group_name}</b>. Sendu mesaĝon por komenci la konversacion!",
   "groupOnlyAdmin": "Vi estas la sola admin en <b>{group_name}</b>.<br/><br/>Grupanoj kaj agordoj ne povas esti ŝanĝitaj sen admin.",
-  "groupPromotedYou": "<b>Vi <\\ /b> estis promociita al Admin.",
+  "groupPromotedYou": "<b>Vi</b> estis promociita al Admin.",
   "groupPromotedYouMultiple": "<b>Vi</b> kaj <b>{count} aliaj</b> estis promociitaj al Admin.",
   "groupPromotedYouTwo": "<b>Vi</b> kaj <b>{name}</b> estis promociitaj al Admin.",
   "groupRemoveDescription": "Ĉu vi ŝatus forigi <b>{name}</b> de <b>{group_name}</b>?",
@@ -431,8 +431,8 @@
   "groupRemoveDescriptionTwo": "Ĉu vi ŝatus forigi <b>{name}</b> kaj <b>{other_name}</b> de <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Forigi uzanton kaj iliajn mesaĝojn] other [Forigi uzantojn kaj iliajn mesaĝojn]}",
   "groupRemoveUserOnly": "{count, plural, one [Forigi uzanton ] other [Forigi uzantojn]}",
-  "groupRemoved": "<b>{name} <\\ /b> estas forigita el la grupo.",
-  "groupRemovedMultiple": "<b>{name} </b> kaj <b>{count} aliaj </b> estis forigitaj de la grupo.",
+  "groupRemoved": "<b>{name}</b> estas forigita el la grupo.",
+  "groupRemovedMultiple": "<b>{name}</b> kaj <b>{count} aliaj </b> estis forigitaj de la grupo.",
   "groupRemovedTwo": "<b>{name} </b> kaj <b>{other_name} </b> estis forigitaj de la grupo.",
   "groupRemovedYou": "Vi estis forigita el <b>{group_name}</b>.",
   "groupRemovedYouMultiple": "<b>Vi</b> kaj <b>{count} aliaj</b> estis forigitaj de la grupo.",
@@ -464,7 +464,7 @@
   "leave": "Forlasi",
   "leaving": "Forlasante...",
   "legacyGroupMemberNew": "<b>{name}</b> grupaniĝis.",
-  "legacyGroupMemberNewMultiple": "<b>{name} </b> kaj <b>{count} aliaj </b> grupaniĝis.",
+  "legacyGroupMemberNewMultiple": "<b>{name}</b> kaj <b>{count} aliaj</b> grupaniĝis.",
   "legacyGroupMemberNewYouMultiple": "<b>Vi</b> kaj <b>{count} aliaj</b> aniĝis al la grupo.",
   "legacyGroupMemberNewYouOther": "<b>Vi</b> kaj <b>{other_name}</b> aniĝis al la grupo.",
   "legacyGroupMemberTwoNew": "<b>{name} </b> kaj <b>{other_name} </b> aniĝis al la grupo.",
@@ -518,7 +518,7 @@
   "messageNewDescriptionMobile": "Komencu novan konversacion enigi la Konton ID, ONS aŭ skanado de ilia QR-kodo de via amiko.",
   "messageNewYouveGot": "{count, plural, one [Vi ricevis novan mesaĝon.] other [Vi ricevis # novajn mesaĝojn.]}",
   "messageReplyingTo": "Respondi al",
-  "messageRequestGroupInvite": "<b>{name} <\\ /b> invitis vin aniĝi al <b>{group_name} <\\ /b>.",
+  "messageRequestGroupInvite": "<b>{name}</b> invitis vin aniĝi al <b>{group_name} </b>.",
   "messageRequestGroupInviteDescription": "Sendi mesaĝon al ĉi tiu grupo aŭtomate akceptos la grupinvitaĵon.",
   "messageRequestPending": "Via mesaĝa peto estas nuntempe dispoziciita.",
   "messageRequestPendingDescription": "Vi povos sendi voĉmesaĝojn kaj aldonaĵojn post kiam la ricevanto aprobos ĉi tiun mesaĝan peton.",
@@ -720,7 +720,7 @@
   "screenSecurity": "Ekrana sekurigo",
   "screenshotNotifications": "Sciigoj pri Ekrankopio",
   "screenshotNotificationsDescription": "Postuli sciigon kiam kontakto kaptas ekranbildon de unu-al-unu babilejo.",
-  "screenshotTaken": "<b>{name} <\\ /b> kreis ekrankopion.",
+  "screenshotTaken": "<b>{name}</b> kreis ekrankopion.",
   "search": "Serĉi",
   "searchContacts": "Serĉi Kontaktpersonojn",
   "searchConversation": "Serĉi Konversacion",
