--- a/_locales/es-419/messages.json
+++ b/_locales/es-419/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Bloqueado {name}",
   "blockDescription": "¿Estás seguro de que quieres bloquear a <b>{name}?</b> Los usuarios bloqueados no pueden enviarte solicitudes de mensajes, invitaciones a grupos ni llamarte.",
   "blockUnblock": "Desbloquear",
-  "blockUnblockName": "¿Estás seguro de que deseas desbloquear a {name}?",
-  "blockUnblockNameMultiple": "¿Estás seguro de que deseas desbloquear a {name} y {count} otros?",
-  "blockUnblockNameTwo": "¿Estás seguro de que deseas desbloquear a {name} y 1 más?",
+  "blockUnblockName": "¿Estás seguro de que deseas desbloquear a <b>{name}</b>?",
+  "blockUnblockNameMultiple": "¿Estás seguro de que deseas desbloquear a <b>{name}</b> y <b>{count} otros</b>?",
+  "blockUnblockNameTwo": "¿Estás seguro de que deseas desbloquear a <b>{name}</b> y 1 más?",
   "blockUnblockedUser": "Desbloqueado {name}",
   "call": "Llamar",
   "callsCalledYou": "{name} te ha llamado",
@@ -318,8 +318,8 @@
   "disappearingMessagesTimer": "Cronómetro",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ha desactivado los mensajes que desaparecen. Los mensajes que envíe ya no desaparecerán.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ha desactivado los mensajes que desaparecen <b>off</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>Tú</b> desactivaste los mensajes que desaparecen. Los mensajes que envíes ya no desaparecerán.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Tú</b> desactivaste los <b>mensajes que desaparecen</b>.",
+  "disappearingMessagesTurnedOffYou": "<b>Tú</b> <b>desactivaste</b> los mensajes que desaparecen. Los mensajes que envíes ya no desaparecerán.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Tú</b> <b>desactivaste</b> los mensajes que desaparecen.",
   "disappearingMessagesTypeRead": "leído",
   "disappearingMessagesTypeSent": "enviado",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> actualizó los ajustes de mensajes que desaparecen.",
