--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -30,7 +30,7 @@
   "adminRemoveAsAdmin": "Eliminar como Administrador",
   "adminRemoveCommunityNone": "No hay Administradores en esta Comunidad.",
   "adminRemoveFailed": "Error al remover a {name} como Administrador.",
-  "adminRemoveFailedMultiple": "Error al eliminar {name} y {count} otros más administradores.",
+  "adminRemoveFailedMultiple": "Error al eliminar <b>{name}</b> y <b>{count} otros</b> más administradores.",
   "adminRemoveFailedOther": "Error al eliminar a <b>{name}</b> y a <b>{other_name}</b> como moderadores.",
   "adminRemovedUser": "<b>{name}</b> fue destituido como Administrador.",
   "adminRemovedUserMultiple": "<b>{name}</b> y <b>otros {count}</b> fueron eliminados como moderadores.",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Bloqueado {name}",
   "blockDescription": "¿Estás seguro de que quieres bloquear a <b>{name}?</b> Los usuarios bloqueados no pueden enviarte solicitudes de mensajes, invitaciones a grupos ni llamarte.",
   "blockUnblock": "Desbloquear",
-  "blockUnblockName": "¿Estás seguro de que quieres desbloquear a {name}?",
-  "blockUnblockNameMultiple": "¿Estás seguro de que quieres desbloquear a {name} y {count} otros?",
-  "blockUnblockNameTwo": "¿Estás seguro de que quieres desbloquear a {name} y 1 otro?",
+  "blockUnblockName": "¿Estás seguro de que quieres desbloquear a <b>{name}</b>?",
+  "blockUnblockNameMultiple": "¿Estás seguro de que quieres desbloquear a <b>{name}</b> y <b>{count} otros</b>?",
+  "blockUnblockNameTwo": "¿Estás seguro de que quieres desbloquear a <b>{name}</b> y 1 otro?",
   "blockUnblockedUser": "Desbloqueado {name}",
   "call": "Llamar",
   "callsCalledYou": "{name} te ha llamado",
@@ -254,7 +254,7 @@
   "cut": "Cortar",
   "databaseErrorGeneric": "Ocurrió un error en la base de datos.<br/><br/>Exporta tus registros de aplicación para compartirlos con fines de resolución de problemas. Si esto no tiene éxito, reinstala {app_name} y restaura tu cuenta.<br/><br/>Advertencia: Esto resultará en la pérdida de todos los mensajes, archivos adjuntos y datos de cuenta anteriores a dos semanas.",
   "databaseErrorTimeout": "Hemos notado que {app_name} está tardando mucho en iniciar.<br/><br/>Puedes seguir esperando, exportar los registros de tu dispositivo para compartirlos y solucionar problemas, o intentar reiniciar Session.",
-  "databaseErrorUpdate": "Su base de datos de la aplicación no es compatible con esta versión de {app_name}. Reinstala la aplicación y restaura tu cuenta para generar una nueva base de datos y continuar usando {app_name}.<br /><br />Advertencia: Esto resultará en la pérdida de todos los mensajes y archivos adjuntos anteriores a dos semanas.",
+  "databaseErrorUpdate": "Su base de datos de la aplicación no es compatible con esta versión de {app_name}. Reinstala la aplicación y restaura tu cuenta para generar una nueva base de datos y continuar usando {app_name}.<br/><br/>Advertencia: Esto resultará en la pérdida de todos los mensajes y archivos adjuntos anteriores a dos semanas.",
   "databaseOptimizing": "Optimizando base de datos",
   "debugLog": "Registro de depuración",
   "decline": "Rechazar",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Los mensajes se borran después de haber sido enviados.",
   "disappearingMessagesDisappearAfterSendState": "Desaparece tras enviarlo - {time}",
   "disappearingMessagesFollowSetting": "Seguir Configuración",
-  "disappearingMessagesFollowSettingOff": "Los mensajes que envíes ya no desaparecerán. ¿Estás seguro de que quieres desactivar los mensajes desaparecidos?",
+  "disappearingMessagesFollowSettingOff": "Los mensajes que envíes ya no desaparecerán. ¿Estás seguro de que quieres desactivar <b>desactivar</b> los mensajes que desaparecen?",
   "disappearingMessagesFollowSettingOn": "¿Establecer que tus mensajes desaparezcan <b>{time}</b> después de haber sido <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} está usando un cliente desactualizado. Los mensajes que desaparecen pueden no funcionar correctamente.",
   "disappearingMessagesOnlyAdmins": "Solo los administradores de grupo pueden cambiar esta configuración.",
@@ -318,8 +318,8 @@
   "disappearingMessagesTimer": "Cronómetro",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ha desactivado la desaparición de mensajes. Los mensajes que envíe ya no desaparecerán.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ha desactivado los mensajes desparecientes <b>\"Activado\"</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>Tú</b> desactivaste la desaparición de mensajes. Los mensajes que envíes ya no desaparecerán.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Tú</b> has desactivado los <b>mensajes que desaparecen</b>.",
+  "disappearingMessagesTurnedOffYou": "<b>Tú</b> has <b>desactivado</b> los mensajes que desaparecen. Los mensajes que envíes ya no desaparecerán.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Tú</b> has <b>desactivado</b> los mensajes que desaparecen.",
   "disappearingMessagesTypeRead": "leído",
   "disappearingMessagesTypeSent": "enviado",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> actualizó la configuración de los mensajes que desaparecen.",
