--- a/_locales/et/messages.json
+++ b/_locales/et/messages.json
@@ -30,7 +30,7 @@
   "adminRemoveAsAdmin": "Eemalda administraatorina",
   "adminRemoveCommunityNone": "Selles kogukonnas pole administraatoreid.",
   "adminRemoveFailed": "Ebaõnnestus eemaldada {name} administraatoriks.",
-  "adminRemoveFailedMultiple": "Ebaõnnestus {name} ja {count} teise eemaldamine Administraatori kohalt.",
+  "adminRemoveFailedMultiple": "Ebaõnnestus <b>{name}</b> ja <b>{count}</b> teise eemaldamine Administraatori kohalt.",
   "adminRemoveFailedOther": "Ebaõnnestus <b>{name}</b> ja <b>{other_name}</b> eemaldamine Administraatori kohalt.",
   "adminRemovedUser": "<b>{name}</b> eemaldati administraatorina.",
   "adminRemovedUserMultiple": "<b>{name}</b> ja <b>{count} teist</b> eemaldati Administraatori kohalt.",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Blokeeritud {name}",
   "blockDescription": "Kas olete kindel, et soovite blokeerida <b>{name}</b>? Blokeeritud kasutajad ei saa teile saata sõnumitaotlusi, grupikutseid ega helistada.",
   "blockUnblock": "Eemalda blokeering",
-  "blockUnblockName": "Kas soovite tühistada kasutaja {name} blokeeringu?",
-  "blockUnblockNameMultiple": "Kas soovite tühistada kasutajate {name} ja {count} teise blokeeringu?",
-  "blockUnblockNameTwo": "Kas soovite tühistada kasutaja {name} ja ühe teise blokeeringu?",
+  "blockUnblockName": "Kas soovite tühistada kasutaja <b>{name}</b> blokeeringu?",
+  "blockUnblockNameMultiple": "Kas soovite tühistada kasutajate <b>{name}</b> ja <b>{count} teise blokeeringu</b>?",
+  "blockUnblockNameTwo": "Kas soovite tühistada kasutaja <b>{name}</b> ja ühe teise blokeeringu?",
   "blockUnblockedUser": "Tühista {name} blokeering",
   "call": "Helista",
   "callsCalledYou": "{name} helistas sulle",
@@ -307,7 +307,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Sõnumid kustutatakse pärast nende saatmist.",
   "disappearingMessagesDisappearAfterSendState": "Kaduvad pärast saatmist - {time}",
   "disappearingMessagesFollowSetting": "Järgi seadistust",
-  "disappearingMessagesFollowSettingOff": "Sõnumid, mida saadad, ei kao enam ära. Kas oled kindel, et soovid kadunud sõnumid välja lülitada?",
+  "disappearingMessagesFollowSettingOff": "Sõnumid, mida saadad, ei kao enam ära. Kas oled kindel, et soovid kadunud sõnumid <b>välja</b> lülitada?",
   "disappearingMessagesFollowSettingOn": "Kas soovite määrata oma sõnumid kaduma <b>{time}</b> pärast nende <b>{disappearing_messages_type}</b> määratud?",
   "disappearingMessagesLegacy": "{name} kasutab aegunud kliendi versiooni. Kaduvad sõnumid ei pruugi töötada ootuspäraselt.",
   "disappearingMessagesOnlyAdmins": "Ainult grupi administraatorid saavad seda seadet muuta.",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>Sind</b> ja <b>{count} teist</b> kutsuti grupiga liituma.",
   "groupInviteYouAndOtherNew": "<b>Sind</b> ja <b>{other_name}</b> kutsuti grupiga liituma.",
   "groupLeave": "Lahku grupist",
-  "groupLeaveDescription": "Kas soovite grupist või kogukonnast {group_name} lahkuda?",
+  "groupLeaveDescription": "Kas soovite grupist või kogukonnast <b>{group_name}</b> lahkuda?",
   "groupLeaveDescriptionAdmin": "Kas olete kindel, et soovite lahkuda grupist <b>{group_name}</b>?<br/><br/>See eemaldab kõik liikmed ja kustutab kogu grupi sisu.",
   "groupLeaveErrorFailed": "Ebaõnnestus lahkuda grupist {group_name}",
   "groupLegacyBanner": "Grupid on uuendatud, loo uus grupp, et uuendada. Vana grupi funktsionaalsus hakkab alates {date} aeguma.",
