--- a/_locales/eu/messages.json
+++ b/_locales/eu/messages.json
@@ -128,8 +128,8 @@
   "blockDescription": "Ziur zaude <b>{name}</b> blokeatu nahi duzula? Erabiltzaile blokeatuek ezin dizkizute mezu-eskaerak, talde-gonbidapenak bidali edo deiak egin.",
   "blockUnblock": "Desblokeatu",
   "blockUnblockName": "Ziur zaude {name} blokatzea nahi duzula?",
-  "blockUnblockNameMultiple": "Ziur zaude {name} eta beste {count} batzuk blokatzea nahi duzula?",
-  "blockUnblockNameTwo": "Ziur zaude {name} eta beste bat blokatzea nahi duzula?",
+  "blockUnblockNameMultiple": "Ziur zaude <b>{name}</b> eta beste <b>{count} batzuk blokatzea nahi duzula</b>?",
+  "blockUnblockNameTwo": "Ziur zaude <b>{name}</b> eta beste bat blokatzea nahi duzula?",
   "blockUnblockedUser": "{name} desblokeatu da",
   "call": "Call",
   "callsCalledYou": "{name}(e)k deitu zaitu",
@@ -269,7 +269,7 @@
   "deleteAfterGroupPR3GroupErrorLeave": "Can't leave while adding or removing other members.",
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Mezu desagertzaileen jatorrizko bertsioa.",
-  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "{name}(e)k mezu desagerkorraren denboragailua <b>{time}</b>-ra ezarri du",
+  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> (e)k mezu desagerkorraren denboragailua <b>{time}</b>-ra ezarri du",
   "deleteAfterLegacyGroupsGroupCreation": "Mesedez itxaron taldea sortzen den bitartean...",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Hutsa izan da talde eguneratzean",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Ez duzu besteek bidalitako mezuak ezabatzeko baimenik",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>Zu</b> eta <b>{count} beste</b> taldera batzeko gonbidatu zaituztete.",
   "groupInviteYouAndOtherNew": "<b>Zu</b> eta <b>{other_name}</b> taldera batzeko gonbidatu zaituztete.",
   "groupLeave": "Taldetik Irten",
-  "groupLeaveDescription": "Ziur zaude {group_name} utzi nahi duzula?",
+  "groupLeaveDescription": "Ziur zaude <b>{group_name}</b> utzi nahi duzula?",
   "groupLeaveDescriptionAdmin": "Ziur zaude <b>{group_name}</b> taldea utzi nahi duzula?<br/><br/>Honek kide guztiak kendu eta taldeko eduki guztiak ezabatuko ditu.",
   "groupLeaveErrorFailed": "Hutsa izan da {group_name} uzten",
   "groupLegacyBanner": "Taldeak eguneratu dira, sortu talde berria eguneratzeko. Talde zaharren funtzionalitatea {date}-tik aurrera degradatuko da.",
