--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "مسدود شد {name}",
   "blockDescription": "آیا مطمئنید می‌خواهید <b>{name} را مسدود کنید؟</b> کاربران مسدود شده نمی‌توانند درخواست پیام، دعوت گروهی یا تماس ارسال کنند.",
   "blockUnblock": "رفع مسدودیت",
-  "blockUnblockName": "آیا مطمئن هستید که می‌خواهید انسداد {name} را بردارید؟",
-  "blockUnblockNameMultiple": "آیا مطمئن هستید که می‌خواهید انسداد {name} و {count} نفر دیگر را بردارید؟",
-  "blockUnblockNameTwo": "آیا مطمئن هستید که می‌خواهید انسداد {name} و ۱ نفر دیگر را بردارید؟",
+  "blockUnblockName": "آیا مطمئن هستید که می‌خواهید انسداد </b>{name}<b> را بردارید؟",
+  "blockUnblockNameMultiple": "آیا مطمئن هستید که می‌خواهید انسداد </b>{name}<b> و </b>{count}<b> نفر دیگر را بردارید؟",
+  "blockUnblockNameTwo": "آیا مطمئن هستید که می‌خواهید انسداد </b>{name}<b> و ۱ نفر دیگر را بردارید؟",
   "blockUnblockedUser": "رفع مسدودیت {name}",
   "call": "تماس",
   "callsCalledYou": "{name} با شما تماس گرفت",
@@ -157,7 +157,7 @@
   "callsVoiceAndVideoModalDescription": "آدرس IP شما برای مخاطب تماس شما و همچنین سرور Oxen Foundation در هنگام استفاده از تماس آزمایشی مشخص خواهید بود.",
   "callsVoiceAndVideoToggleDescription": "دریافت و ارسال تماس های صوتی و تصویری به سایر کاربران را فعال کنید.",
   "callsYouCalled": "تماس شما با {name}",
-  "callsYouMissedCallPermissions": "شما یک تماس از <b>{name}</b> از دست داده اید چون در تنظیمات حریم خصوصی تماس‌های صوتی و ویدیویی را فعال نکرده‌اید.",
+  "callsYouMissedCallPermissions": "شما تماسی را از <b>{name}</b> از دست دادید زیرا <b>تماس‌های صوتی و تصویری</b> را در تنظیمات حریم خصوصی فعال نکرده‌اید.",
   "cameraErrorNotFound": "هیچ دوربینی یافت نشد",
   "cameraErrorUnavailable": "دوربین در دسترس نیست.",
   "cameraGrantAccess": "اجازه دسترسی به دوربین",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "حذف پیام‌ها بعد از ارسال‌شان",
   "disappearingMessagesDisappearAfterSendState": "ناپدید شدن پس از فرستادن - {time}",
   "disappearingMessagesFollowSetting": "دنبال کردن تنظیمات",
-  "disappearingMessagesFollowSettingOff": "پیام‌هایی که می‌فرستید دیگر ناپدید نمی‌شوند. آیا مطمئن هستید که می‌خواهید پیام‌های ناپدید شونده را <b>خاموش کنید؟",
+  "disappearingMessagesFollowSettingOff": "پیام هایی که ارسال می کنید دیگر ناپدید نمی شوند. آیا مطمئن هستید که می خواهید پیام های ناپدید شده را <b>خاموش</b> کنید؟",
   "disappearingMessagesFollowSettingOn": "پیام‌های خود را طوری تنظیم کنید که <b>{time}</b> پس از <b>{disappearing_messages_type}</b> ناپدید شوند؟",
   "disappearingMessagesLegacy": "{name} از کلاینت قدیمی استفاده می‌کند. ممکن است پیام‌های ناپدیدشونده به درستی کار نکنند.",
   "disappearingMessagesOnlyAdmins": "تنها ادمین‌های گروه می توانند این تنظیمات را تغییر دهند.",
@@ -697,7 +697,7 @@
   "recoveryPasswordErrorTitle": "Incorrect Recovery Password",
   "recoveryPasswordExplanation": "برای بارگیری حساب کاربری، رمز بازیابی خود را وارد کنید.",
   "recoveryPasswordHidePermanently": "Hide Recovery Password Permanently",
-  "recoveryPasswordHidePermanentlyDescription1": "بدون recovery password، نمی‌توانید حساب خود را در دستگاه‌های جدید بارگیری کنید. <br /><br />ما قویاً توصیه می‌کنیم قبل از ادامه، recovery password خود را در مکانی امن و مطمئن ذخیره کنید.",
+  "recoveryPasswordHidePermanentlyDescription1": "بدون رمز عبور بازیابی، نمی‌توانید حساب خود را در دستگاه‌های جدید بارگیری کنید. <br/><br/>ما قویاً توصیه می‌کنیم گذرواژه بازیابی خود را قبل از ادامه در مکانی امن و مطمئن ذخیره کنید.",
   "recoveryPasswordHidePermanentlyDescription2": "آیا مطمئن هستید که می‌خواهید گذرواژه بازیابی خود را روی این دستگاه به صورت دائمی پنهان کنید؟ این کار قابل برگشت نیست.",
   "recoveryPasswordHideRecoveryPassword": "Hide Recovery Password",
   "recoveryPasswordHideRecoveryPasswordDescription": "بازیابی رمز عبور خود را در این دستگاه برای همیشه پنهان کنید.",
