--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Estetty {name}",
   "blockDescription": "Haluatko varmasti estää käyttäjän <b>{name}</b>? Estetyt käyttäjät eivät voi lähettää sinulle viestipyyntöjä, ryhmäkutsuja tai soittaa sinulle.",
   "blockUnblock": "Poista esto",
-  "blockUnblockName": "Haluatko varmasti poistaa käyttäjän {name} eston?",
-  "blockUnblockNameMultiple": "Haluatko varmasti poistaa käyttäjän {name} ja {count} muuta eston?",
-  "blockUnblockNameTwo": "Haluatko varmasti poistaa käyttäjän {name} ja yhden muun eston?",
+  "blockUnblockName": "Haluatko varmasti poistaa käyttäjän <b>{name}</b> eston?",
+  "blockUnblockNameMultiple": "Haluatko varmasti poistaa käyttäjän <b>{name}</b> ja <b>{count} muuta eston</b>?",
+  "blockUnblockNameTwo": "Haluatko varmasti poistaa käyttäjän <b>{name}</b> ja yhden muun eston?",
   "blockUnblockedUser": "Esto poistettiin {name}",
   "call": "Soita",
   "callsCalledYou": "{name} soitti sinulle",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Viestit poistuvat, kun ne on lähetetty.",
   "disappearingMessagesDisappearAfterSendState": "Katoa kun lähetetty - {time}",
   "disappearingMessagesFollowSetting": "Seuraa asetusta",
-  "disappearingMessagesFollowSettingOff": "Lähetetyt viestit eivät enää katoa. Haluatko varmasti poistaa katoavat viestit käytöstä?",
+  "disappearingMessagesFollowSettingOff": "Lähettämäsi viestit eivät enää katoa. Haluatko varmasti <b>poistaa</b> katoavat viestit?",
   "disappearingMessagesFollowSettingOn": "Aseta viestisi katoamaan kun on kulunut <b>{time}</b>, kun <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} käyttää vanhentunutta sovellusta. Katoavat viestit eivät välttämättä toimi odotetusti.",
   "disappearingMessagesOnlyAdmins": "Vain ryhmän ylläpitäjät voivat muuttaa tätä asetusta.",
@@ -317,7 +317,7 @@
   "disappearingMessagesSetYou": "<b>Sinä</b> asetit viestit katoamaan, kun on kulunut {time}, kun {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Ajastin",
   "disappearingMessagesTurnedOff": "<b>{name}</b> on poistanut katoavat viestit käytöstä. Viestit eivät enää katoa.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> poisti katoavat viestit käytöstä.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> on poistanut katoavat viestit <b>pois käytöstä</b>.",
   "disappearingMessagesTurnedOffYou": "<b>Sinä</b> poistit <b>katoavat viestit</b>. Lähettämäsi viestit eivät enää katoa.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Sinä</b> poistit <b>katoavat viestit</b> käytöstä.",
   "disappearingMessagesTypeRead": "luettu",
@@ -688,7 +688,7 @@
   "recommended": "Suositeltu",
   "recoveryPasswordBannerDescription": "Tallenna palautussalasanasi varmistaaksesi, ettet menetä pääsyä tilillesi.",
   "recoveryPasswordBannerTitle": "Tallenna palautussalasanasi",
-  "recoveryPasswordDescription": "Käytä palautussalasanaa ladataksesi tilisi uusiin laitteisiin.<br /><br />Tiliäsi ei voida palauttaa ilman palautussalasanaa. Varmista, että se on tallennettu turvallisesti ja älä jaa sitä kenellekään.",
+  "recoveryPasswordDescription": "Käytä palautussalasanaa ladataksesi tilisi uusiin laitteisiin.<br/><br/>Tiliäsi ei voida palauttaa ilman palautussalasanaa. Varmista, että se on tallennettu turvallisesti ja älä jaa sitä kenellekään.",
   "recoveryPasswordEnter": "Syötä palautussalasana",
   "recoveryPasswordErrorLoad": "Virhe palautelauseen latauksessa.<br/><br/>Ratkaistaksesi tämän ongelman, voit viedä lokitiedot ja lähettää sen Session Help Deskiin.",
   "recoveryPasswordErrorMessageGeneric": "Tarkista palautuslauseesi ja yritä uudelleen.",
