--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -17,10 +17,10 @@
   "adminMorePromotedToAdmin": "<b>{name}</b> at <b>{count} iba pa</b> na-promote sa Admin.",
   "adminPromote": "I-promote ang Mga Admin",
   "adminPromoteDescription": "Sigurado ka bang nais mong i-promote si <b>{name} <\\/b> bilang admin? Ang mga admin ay hindi maaaring tanggalin.",
-  "adminPromoteMoreDescription": "Sigurado ka bang nais mong i-promote si <b>{name} <\\/b> at <b>{count} others <\\/b> bilang admin? Ang mga admin ay hindi maaaring tanggalin.",
+  "adminPromoteMoreDescription": "Sigurado ka bang nais mong i-promote si <b>{name}</b> at <b>{count} others</b> bilang admin? Ang mga admin ay hindi maaaring tanggalin.",
   "adminPromoteToAdmin": "I-promote bilang Admin",
-  "adminPromoteTwoDescription": "Sigurado ka bang nais mong i-promote si <b>{name} <\\/b> at <b>{other_name} <\\/b> bilang admin? Ang mga admin ay hindi maaaring tanggalin.",
-  "adminPromotedToAdmin": "Na-promote si <b>{name} <\\/b> sa Admin.",
+  "adminPromoteTwoDescription": "Sigurado ka bang nais mong i-promote si <b>{name}</b> at <b>{other_name}</b> bilang admin? Ang mga admin ay hindi maaaring tanggalin.",
+  "adminPromotedToAdmin": "Na-promote si <b>{name}</b> sa Admin.",
   "adminPromotionFailed": "Nabigo ang pag-promote ng admin",
   "adminPromotionFailedDescription": "Nabigo sa pag-promote kay {name} sa {group_name}",
   "adminPromotionFailedDescriptionMultiple": "Nabigo sa pag-promote kay {name} at {count} iba pa sa {group_name}",
@@ -32,7 +32,7 @@
   "adminRemoveFailed": "Nabigo sa pag-alis kay {name} bilang Admin.",
   "adminRemoveFailedMultiple": "Nabigong tanggalin sina <b>{name}</b> at <b>{count} iba pa</b> bilang Admin.",
   "adminRemoveFailedOther": "Nabigong tanggalin sina <b>{name}</b> at <b>{other_name}</b> bilang Admin.",
-  "adminRemovedUser": "Tinanggal si <b>{name} <\\/b> bilang Admin.",
+  "adminRemovedUser": "Tinanggal si <b>{name}</b> bilang Admin.",
   "adminRemovedUserMultiple": "<b>{name}</b> at <b>{count} iba pa</b> ay tinanggal bilang Admin.",
   "adminRemovedUserOther": "<b>{name}</b> at <b>{other_name}</b> ay tinanggal bilang Admin.",
   "adminSendingPromotion": "Sending admin promotion",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Na-block na si {name}",
   "blockDescription": "Sigurado ka bang gusto mong harangin si <b>{name}?</b> Ang mga hinarang na user ay hindi makakapagpadala ng mga kahilingan sa pagmemensahe, mga imbitasyon sa grupo o tira-tawag sa'yo.",
   "blockUnblock": "I-unblock",
-  "blockUnblockName": "Sigurado ka bang nais mong i-unblock si {name} ?",
-  "blockUnblockNameMultiple": "Sigurado ka bang nais mong i-unblock si {name} at ang {count} iba pa?",
-  "blockUnblockNameTwo": "Sigurado ka bang nais mong i-unblock si {name} at ang 1 iba pa?",
+  "blockUnblockName": "Sigurado ka bang nais mong i-unblock si <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Sigurado ka bang nais mong i-unblock si <b>{name}</b> at ang <b>{count} iba pa</b>?",
+  "blockUnblockNameTwo": "Sigurado ka bang nais mong i-unblock si <b>{name}</b> at ang 1 iba pa?",
   "blockUnblockedUser": "Na-unblock {name}",
   "call": "Tawagan",
   "callsCalledYou": "Tinawagan ka ni {name}",
@@ -228,7 +228,7 @@
   "conversationsBlockedContacts": "Mga Naka-block na Contact",
   "conversationsCommunities": "Mga Komunidad",
   "conversationsDelete": "Burahin ang mga mensahe",
-  "conversationsDeleteDescription": "Sigurado ka bang gusto mong burahin ang usapan mo kay <b>{name} <\\/b>? Ang mga bagong mensahe mula kay <b>{name} <\\/b> ay magsisimula ng bagong usapan.",
+  "conversationsDeleteDescription": "Sigurado ka bang gusto mong burahin ang usapan mo kay <b>{name}</b>? Ang mga bagong mensahe mula kay <b>{name}</b> ay magsisimula ng bagong usapan.",
   "conversationsDeleted": "Nabura na ang Usapan",
   "conversationsEmpty": "Walang mga mensahe sa {conversation_name}.",
   "conversationsEnter": "Ilagay ang Key",
@@ -269,7 +269,7 @@
   "deleteAfterGroupPR3GroupErrorLeave": "Hindi maaaring umalis habang nagdadagdag o nag-aalis ng ibang mga miyembro.",
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "Orihinal na bersyon ng mga naglalahong mensahe.",
-  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "Itinakda ni <b>{name} <\\/b> ang timer ng naglalahong mensahe sa <b>{time} <\\/b>.",
+  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "Itinakda ni <b>{name}</b> ang timer ng naglalahong mensahe sa <b>{time}</b>",
   "deleteAfterLegacyGroupsGroupCreation": "Pakiusap maghintay habang ginagawa ang grupo...",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "Nabigong I-update ang Grupo",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "Wala kang pahintulot para tangalin ang mensahe ng iba",
@@ -313,16 +313,16 @@
   "disappearingMessagesOnlyAdmins": "Tanging admin ng grupo lamang ang maaaring magbago ng setting na ito.",
   "disappearingMessagesSent": "Sent",
   "disappearingMessagesSet": "Itinakda ni <b>{name} <\\/b> ang mga mensahe na maglalaho {time} pagkatapos nilang ma-{disappearing_messages_type}.",
-  "disappearingMessagesSetYou": "Itinakda mo ang timer ng naglalahong mensahe sa {time} pagkatapos nilang ma-{disappearing_messages_type}.",
+  "disappearingMessagesSetYou": "<b>Itinakda</b> mo ang timer ng naglalahong mensahe sa {time} pagkatapos nilang ma-{disappearing_messages_type}.",
   "disappearingMessagesTimer": "Timer",
-  "disappearingMessagesTurnedOff": "<b>{name} <\\/b> ay nag-off ng nawawalang mga mensahe. Ang mga mensaheng pinadala nila ay hindi na maglalaho.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> in-off ang mga naglalahong mensahe.",
-  "disappearingMessagesTurnedOffYou": "Ikaw ay nag-off ng naglalahong mensahe. Ang mga mensaheng ipapadala mo ay hindi na maglalaho.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Ikaw</b> in-off ang mga naglalahong mensahe.",
+  "disappearingMessagesTurnedOff": "<b>{name}</b> ay nag-off ng nawawalang mga mensahe. Ang mga mensaheng pinadala nila ay hindi na maglalaho.",
+  "disappearingMessagesTurnedOffGroup": "<b>Naka-off</b> ni <b>{name}</b> ang mga nawawalang mensahe.",
+  "disappearingMessagesTurnedOffYou": "<b>Na-off</b> <b>mo</b> ang mga nawawalang mensahe. Hindi na mawawala ang mga mensaheng ipapadala mo.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Na-off</b><b> mo</b> ang mga nawawalang mensahe.",
   "disappearingMessagesTypeRead": "basahin",
   "disappearingMessagesTypeSent": "sent",
   "disappearingMessagesUpdated": "<b>{admin_name} </b> nag-update ng mga setting ng disappearing message.",
-  "disappearingMessagesUpdatedYou": "Na-update mo ang mga setting ng nawawalang mensahe.",
+  "disappearingMessagesUpdatedYou": "<b>Na-update</b> mo ang mga setting ng nawawalang mensahe.",
   "dismiss": "I-dismiss",
   "displayNameDescription": "Ito ay maaaring totoong pangalan mo, alias, o anumang nais mo — at pwede mo itong palitan kahit kailan.",
   "displayNameEnter": "Ilagay ang iyong display name",
@@ -393,18 +393,18 @@
   "groupInviteSent": "Naipadala ang imbitasyon",
   "groupInviteSuccessful": "Matagumpay ang paanyaya ng grupo",
   "groupInviteVersion": "Mga user ay dapat may pinakabagong bersyon upang makatanggap ng mga imbitasyon",
-  "groupInviteYou": "Ikaw ay naimbitahan na sumali sa grupo.",
+  "groupInviteYou": "<b>Ikaw</b> ay naimbitahan na sumali sa grupo.",
   "groupInviteYouAndMoreNew": "<b>Ikaw</b> at <b>{count} iba pa</b> naimbitahan na sumali sa grupo.",
   "groupInviteYouAndOtherNew": "<b>Ikaw</b> at si <b>{other_name}</b> naimbitahan na sumali sa grupo.",
   "groupLeave": "Iwanan ang grupo",
-  "groupLeaveDescription": "Sigurado ka bang nais mong umalis sa {group_name} ?",
+  "groupLeaveDescription": "Sigurado ka bang nais mong umalis sa <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Sigurado ka bang gusto mong umalis sa <b>{group_name}</b>?<br/><br/>Tatanggalin nito ang lahat ng miyembro at ang lahat ng nilalaman ng grupo.",
   "groupLeaveErrorFailed": "Nabigo sa pag-alis sa {group_name}",
   "groupLegacyBanner": "Na-upgrade na ang mga grupo, lumikha ng bagong grupo para maisagawa ang upgrade. Ang lumang functionality ng grupo ay bababa mula {date}.",
-  "groupMemberLeft": "Umalis na si <b>{name} <\\/b> sa grupo.",
-  "groupMemberLeftMultiple": "<b>{name} <\\/b> at <b>{count} iba pa\\/<\\/b> umalis na sa grupo.",
+  "groupMemberLeft": "Umalis na si <b>{name}</b> sa grupo.",
+  "groupMemberLeftMultiple": "<b>{name}</b> at <b>{count} iba pa</b> umalis na sa grupo.",
   "groupMemberLeftTwo": "<b>{name} </b> at <b>{other_name}</b> umalis na sa grupo.",
-  "groupMemberNew": "Sumali si <b>{name} <\\/b> sa grupo.",
+  "groupMemberNew": "Sumali si <b>{name}</b> sa grupo.",
   "groupMemberNewHistory": "<b>{name}</b> ay naimbitahan na sumali sa grupo. Ibinahagi ang kasaysayan ng chat.",
   "groupMemberNewHistoryMultiple": "<b>{name}</b> at <b>{count} iba pa</b> ay naimbitahan na sumali sa grupo. Ibinahagi ang kasaysayan ng chat.",
   "groupMemberNewHistoryTwo": "<b>{name}</b> at <b>{other_name}</b> ay naimbitahan na sumali sa grupo. Ibinahagi ang kasaysayan ng chat.",
@@ -412,7 +412,7 @@
   "groupMemberNewTwo": "<b>{name}</b> at <b>{other_name}</b> ay naimbitahan na sumali sa grupo.",
   "groupMemberNewYouHistoryMultiple": "<b>Ikaw</b> at <b>{count} iba pa</b> ay naimbitahan na sumali sa grupo. Ibinahagi ang kasaysayan ng chat.",
   "groupMemberNewYouHistoryTwo": "<b>Ikaw</b> at <b>{name}</b> ay naimbitahan na sumali sa grupo. Ibinahagi ang kasaysayan ng chat.",
-  "groupMemberYouLeft": "<b>Ikaw <\\/b> ay umalis sa grupo.",
+  "groupMemberYouLeft": "<b>Ikaw</b> ay umalis sa grupo.",
   "groupMembers": "Mga Miyembro ng Grupo",
   "groupMembersNone": "Walang ibang miyembro sa grupong ito.",
   "groupName": "Pangalan ng Grupo",
@@ -431,10 +431,10 @@
   "groupRemoveDescriptionTwo": "Gusto mo bang tanggalin si <b>{name}</b> at si <b>{other_name}</b> mula sa <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Alisin ang user at ang kanilang mga mensahe] other [Alisin ang mga user at ang kanilang mga mensahe]}",
   "groupRemoveUserOnly": "{count, plural, one [Alisin ang user] other [Alisin ang mga user]}",
-  "groupRemoved": "Tinanggal si <b>{name} <\\/b> sa grupo.",
-  "groupRemovedMultiple": "<b>{name} <\\/b> at <b>{count} iba pa\\/<\\/b> tinanggal sa grupo.",
-  "groupRemovedTwo": "<b>{name} <\\/b> at <b>{other_name}\\/<\\/b> tinanggal sa grupo.",
-  "groupRemovedYou": "Ikaw ay inalis mula sa <b>{group_name}.</b>",
+  "groupRemoved": "Tinanggal si <b>{name}</b> sa grupo.",
+  "groupRemovedMultiple": "<b>{name}</b> at <b>{count} iba pa</b> tinanggal sa grupo.",
+  "groupRemovedTwo": "<b>{name}</b> at <b>{other_name}</b> tinanggal sa grupo.",
+  "groupRemovedYou": "Ikaw ay inalis mula sa <b>{group_name}</b>.",
   "groupRemovedYouMultiple": "<b>Ikaw</b> at <b>{count} iba pa</b> ay tinanggal sa grupo.",
   "groupRemovedYouTwo": "<b>Ikaw</b> at <b>{other_name}</b> ay tinanggal sa grupo.",
   "groupSetDisplayPicture": "Itakda ang Display Picture ng Grupo",
@@ -518,7 +518,7 @@
   "messageNewDescriptionMobile": "Simulan ang bagong pag-uusap sa pamamagitan ng paglalagay ng Account ID ng iyong kaibigan, ONS o pag-scan ng kanilang QR code.",
   "messageNewYouveGot": "{count, plural, one [Mayroon kang bagong mensahe.] other [Mayroon kang # bagong mga mensahe.]}",
   "messageReplyingTo": "Sinasagot si",
-  "messageRequestGroupInvite": "<b>{name} <\\/b> ay nag-imbita sayo na sumali sa <b>{group_name} <\\/b>.",
+  "messageRequestGroupInvite": "<b>{name}</b> ay nag-imbita sayo na sumali sa <b>{group_name}</b>.",
   "messageRequestGroupInviteDescription": "Sending a message to this group will automatically accept the group invite.",
   "messageRequestPending": "Kasalukuyang nakabinbin ang iyong kahilingan sa pagmemensahe.",
   "messageRequestPendingDescription": "Magagawa mong magpadala ng mga voice message at attachment sa sandaling naaprubahan ng tatanggap ang kahilingan sa pagmemensahe na ito.",
@@ -531,7 +531,7 @@
   "messageRequestsDelete": "Sigurado ka bang gusto mong burahin ang kahilingan sa pagmemensaheng ito?",
   "messageRequestsNew": "May bagong kahilingan sa pagmemensahe ka",
   "messageRequestsNonePending": "Walang nakabinbing kahilingan sa pagmemensahe",
-  "messageRequestsTurnedOff": "<b>{name} <\\/b> ay may mga kahilingan sa mensahe mula sa usapan ng Community na naka-off, kaya hindi mo sila maaaring padalhan ng mensahe.",
+  "messageRequestsTurnedOff": "<b>{name}</b> ay may mga kahilingan sa mensahe mula sa usapan ng Community na naka-off, kaya hindi mo sila maaaring padalhan ng mensahe.",
   "messageSelect": "Select Message",
   "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "Nabigo sa pagpapadala",
@@ -720,7 +720,7 @@
   "screenSecurity": "Screen Security",
   "screenshotNotifications": "Screenshot Notifications",
   "screenshotNotificationsDescription": "Kailangan ng isang notipikasyon kapag kumuha ng screenshot ang isang kontak ng one-to-one chat.",
-  "screenshotTaken": "Kumuha ng screenshot si <b>{name} <\\/b>.",
+  "screenshotTaken": "Kumuha ng screenshot si <b>{name}</b>.",
   "search": "Search",
   "searchContacts": "Search Contacts",
   "searchConversation": "Search Conversation",
