--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -30,7 +30,7 @@
   "adminRemoveAsAdmin": "Retirer en tant qu'administrateur",
   "adminRemoveCommunityNone": "Il n'y a aucun admins dans cette Communauté.",
   "adminRemoveFailed": "Échec de supprimer {name} en tant qu'administrateur.",
-  "adminRemoveFailedMultiple": "Échec de la suppression de{name} et {count} en tant qu'administrateurs.",
+  "adminRemoveFailedMultiple": "Échec de la suppression de <b>{name}</b> et <b>{count} en tant</b> qu'administrateurs.",
   "adminRemoveFailedOther": "Échec de la suppression de <b>{name}</b> et <b>{other_name}</b> en tant qu'administrateurs.",
   "adminRemovedUser": "<b>{name}</b> a été retiré de son rôle d'administrateur.",
   "adminRemovedUserMultiple": "<b>{name}</b> et <b>{count} autres</b> ont été supprimés en tant qu'administrateur.",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Bloqué {name}",
   "blockDescription": "Êtes-vous sûr·e de vouloir bloquer <b>{name}?</b> Les utilisateurs bloqués ne peuvent pas vous envoyer de demandes de message, d'invitations de groupe ou vous appeler.",
   "blockUnblock": "Débloquer",
-  "blockUnblockName": "Êtes-vous sûr de vouloir débloquer {name} ?",
-  "blockUnblockNameMultiple": "Êtes-vous sûr de vouloir débloquer {name} et {count} autres ?",
-  "blockUnblockNameTwo": "Êtes-vous sûr de vouloir débloquer {name} et 1 autre ?",
+  "blockUnblockName": "Êtes-vous sûr de vouloir débloquer <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Êtes-vous sûr de vouloir débloquer <b>{name}</b> et <b>{count} autres</b>?",
+  "blockUnblockNameTwo": "Êtes-vous sûr de vouloir débloquer <b>{name}</b> et 1 autre ?",
   "blockUnblockedUser": "Débloqué {name}",
   "call": "Appeler",
   "callsCalledYou": "{name} vous a appelé·e",
@@ -317,12 +317,12 @@
   "disappearingMessagesSetYou": "<b>Vous</b> avez défini les messages à disparaître {time} après qu'ils aient été {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Minuteur",
   "disappearingMessagesTurnedOff": "<b>{name}</b> a désactivé les messages éphémères. Les messages qu'ils envoient ne disparaîtront plus.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> a désactivé les messages qui disparaissent.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> a <b>désactivé</b> les messages qui disparaissent.",
   "disappearingMessagesTurnedOffYou": "<b>Vous</b> avez désactivé <b>les messages éphémères</b>. Les messages que vous envoyez ne disparaîtront plus.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Vous</b> avez désactivé les messages éphémères.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Vous</b> avez <b>désactivé</b> les messages éphémères.",
   "disappearingMessagesTypeRead": "lu",
   "disappearingMessagesTypeSent": "envoyé",
-  "disappearingMessagesUpdated": "<b>{admin_name} a mis à jour les paramètres des messages éphémères.<\\/b>",
+  "disappearingMessagesUpdated": "<b>{admin_name}</b> a mis à jour les paramètres des messages éphémères.",
   "disappearingMessagesUpdatedYou": "<b>Vous</b> avez mis à jour les paramètres des messages éphémères.",
   "dismiss": "Fermer",
   "displayNameDescription": "Cela peut être votre vrai nom, un alias ou tout ce que vous aimez - et vous pouvez le changer à tout moment.",
@@ -398,8 +398,8 @@
   "groupInviteYouAndMoreNew": "<b>Vous</b> et <b>{count} autres</b> ont rejoint le groupe.",
   "groupInviteYouAndOtherNew": "<b>Vous</b> et <b>{other_name}</b> ont rejoint le groupe.",
   "groupLeave": "Quitter le groupe",
-  "groupLeaveDescription": "Êtes-vous sûr de vouloir quitter {group_name} ?",
-  "groupLeaveDescriptionAdmin": "Êtes-vous certain de vouloir supprimer <b>{group_name}</b>? Cela supprimera tous les membres et tous les contenus du groupe.",
+  "groupLeaveDescription": "Êtes-vous sûr de vouloir quitter <b>{group_name}</b>?",
+  "groupLeaveDescriptionAdmin": "Êtes-vous certain de vouloir supprimer <b>{group_name}</b>?<br/><br/> Cela supprimera tous les membres et tous les contenus du groupe.",
   "groupLeaveErrorFailed": "Échec de quitter {group_name}",
   "groupLegacyBanner": "Les groupes ont été améliorés, créez un nouveau groupe pour mettre à jour. Les fonctionnalités de l'ancien groupe seront dégradées à partir de {date}.",
   "groupMemberLeft": "<b>{name}</b> a quitté le groupe.",
@@ -782,7 +782,7 @@
   "urlCopy": "Copier l'adresse URL",
   "urlOpen": "Ouvrir l'URL",
   "urlOpenBrowser": "Ceci s'ouvrira dans votre navigateur.",
-  "urlOpenDescription": "Êtes-vous sûr de vouloir ouvrir cette adresse URL dans votre navigateur web ?<br/><br/>{url}</b>",
+  "urlOpenDescription": "Êtes-vous sûr de vouloir ouvrir cette adresse URL dans votre navigateur web ?<br/><br/><b>{url}</b>",
   "useFastMode": "Utiliser le mode rapide",
   "video": "Vidéo",
   "videoErrorPlay": "Impossible de lire la vidéo.",
