--- a/_locales/gl/messages.json
+++ b/_locales/gl/messages.json
@@ -285,7 +285,7 @@
   "disappearingMessagesDisappearAfterSend": "Desaparecer despois de enviar",
   "disappearingMessagesDisappearAfterSendDescription": "Mensaxes borradas despois de ser enviadas.",
   "disappearingMessagesFollowSetting": "Seguir a configuración",
-  "disappearingMessagesFollowSettingOff": "As mensaxes que envíes xa non desaparecerán. Estás seguro de que desexas desactivar as mensaxes desaparecidas?",
+  "disappearingMessagesFollowSettingOff": "As mensaxes que envíes xa non desaparecerán. Estás seguro de que desexas <b>desactivar</b> as mensaxes desaparecidas?",
   "disappearingMessagesFollowSettingOn": "Queres que as túas mensaxes desaparezan <b>{time}</b> despois de que foran <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} está a usar un cliente desactualizado. As mensaxes que se desvanecen poden non funcionar como se espera.",
   "disappearingMessagesOnlyAdmins": "Só os administradores do grupo poden cambiar esta configuración.",
@@ -294,7 +294,8 @@
   "disappearingMessagesSetYou": "<b>Ti</b> configuraches as mensaxes para desaparecer {time} despois de seren {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Temporizador",
   "disappearingMessagesTurnedOff": "<b>{name}</b> desactivou as mensaxes de desaparición. As mensaxes que envíen xa non desaparecerán.",
-  "disappearingMessagesTurnedOffYou": "<b>Ti</b> desactivaches as mensaxes de desaparición. As mensaxes que envíes non desaparecerán.",
+  "disappearingMessagesTurnedOffYou": "<b>Ti</b> <b>desactivaches</b> as mensaxes de desaparición. As mensaxes que envíes non desaparecerán.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Ti</b> <b>desactivaches</b> as mensaxes de desaparición.",
   "disappearingMessagesTypeRead": "lida",
   "disappearingMessagesTypeSent": "enviada",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> actualizou a configuración das mensaxes que se desvanecen.",
