--- a/_locales/ha/messages.json
+++ b/_locales/ha/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} an toshe",
   "blockDescription": "Kana tabbata kana so ka toshe <b>{name}?</b>? Ba za su iya aiko maka da roƙon saƙonni, gayyatar rukuni ko kira ba idan an toshe su.",
   "blockUnblock": "Cire katanga",
-  "blockUnblockName": "Ka tabbata kana so ka cire toshewar {name}?",
-  "blockUnblockNameMultiple": "Ka tabbata kana so ka cire toshewar {name} da {count} wasu?",
-  "blockUnblockNameTwo": "Ka tabbata kana so ka cire toshewar {name} da 1?",
+  "blockUnblockName": "Ka tabbata kana so ka cire toshewar <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Ka tabbata kana so ka cire toshewar <b>{name}</b> da <b>{count} wasu</b>?",
+  "blockUnblockNameTwo": "Ka tabbata kana so ka cire toshewar <b>{name}</b> da 1?",
   "blockUnblockedUser": "An cire katanga {name}",
   "call": "Kira",
   "callsCalledYou": "{name} ya kira ku",
@@ -317,7 +317,7 @@
   "disappearingMessagesTimer": "Lokaci",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ya kashe saƙonnin ɓacewa. Saƙonnin da suka aiko ba za su ɓace ba.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ya kashe saƙonnin bacewa <b>off</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>Ku</b> sun kashe saƙonnin ɓacewa. Saƙonnin da kuka aika ba za su ɓace ba.",
+  "disappearingMessagesTurnedOffYou": "<b>Kai</b> ya <b>kashe</b> saƙonnin da suka ɓace. Saƙonnin da kuka aika ba za su ƙara ɓacewa ba.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Ku</b> kun <b>kashe</b> saƙonnin bacewa.",
   "disappearingMessagesTypeRead": "karanta",
   "disappearingMessagesTypeSent": "an aiko",
