--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "נחסם {name}",
   "blockDescription": "האם אתה בטוח שברצונך לחסום את <b>{name}?</b> משתמשים חסומים אינם יכולים לשלוח לך בקשות הודעות, הזמנות לקבוצות או להתקשר אליך.",
   "blockUnblock": "בטל חסימה",
-  "blockUnblockName": "האם אתה בטוח שברצונך לבטל את החסימה של {name}?",
-  "blockUnblockNameMultiple": "האם אתה בטוח שברצונך לבטל את החסימה של {name} ו{count} נוספים?",
-  "blockUnblockNameTwo": "האם אתה בטוח שברצונך לבטל את החסימה של {name} ו1 נוסף?",
+  "blockUnblockName": "האם אתה בטוח שברצונך לבטל את החסימה של <b>{name}</b>?",
+  "blockUnblockNameMultiple": "האם אתה בטוח שברצונך לבטל את החסימה של <b>{name}</b> ו-<b>{count} אחרים</b>?",
+  "blockUnblockNameTwo": "האם אתה בטוח שברצונך לבטל את החסימה של <b>{name}</b> ועוד אחד?",
   "blockUnblockedUser": "בטל חסימה של {name}",
   "call": "חייג",
   "callsCalledYou": "{name} התקשר/ה אליך",
@@ -252,7 +252,7 @@
   "create": "צור",
   "cut": "גזור",
   "databaseErrorGeneric": "אירעה שגיאת מסד נתונים.<br/><br/>ייצא את יומני היישום שלך לשיתוף לצורך פתרון בעיות. אם זה לא יצליח, התקן מחדש את {app_name} ושחזר את חשבונך.<br/><br/>אזהרה: פעולה זו תגרום לאובדן כל ההודעות, הקבצים המצורפים ונתוני חשבונות שאינם חדשים יותר משבועיים.",
-  "databaseErrorTimeout": "שמנו לב ל-{app_name} שלוקח הרבה זמן להתחיל.תוכל להמשיך להמתין, לייצא את יומני המכשיר שלך לשיתוף לצורך פתרון בעיות, או לנסות להפעיל מחדש את ההפעלה.",
+  "databaseErrorTimeout": "שמנו לב ל-{app_name} לוקח הרבה זמן להתחיל.<br/><br/>תוכל להמשיך להמתין, לייצא את יומני המכשיר שלך לשיתוף לצורך פתרון בעיות, או לנסות להפעיל מחדש את {app_name}.",
   "databaseErrorUpdate": "מאגר נתונים של האפליקציה שלך אינו תואם לגרסה זו של {app_name}. התקן מחדש את האפליקציה ושחזר את החשבון שלך כדי ליצור מאגר נתונים חדש ולהמשיך להשתמש ב-{app_name}.<br/><br/>אזהרה: פעולה זו תשאיר את כל ההודעות והצרופות הישנות משבועיים.",
   "databaseOptimizing": "מעדכן מסד נתונים",
   "debugLog": "יומן תקלות",
@@ -307,7 +307,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "הודעות נמחקות לאחר שנשלחו.",
   "disappearingMessagesDisappearAfterSendState": "נעלם לאחר שליחה - {time}",
   "disappearingMessagesFollowSetting": "עקוב אחרי ההגדרה",
-  "disappearingMessagesFollowSettingOff": "הודעות שתשלח כבר לא ייעלמו. האם אתה בטוח שברצונך לבטל הודעות נעלמות?",
+  "disappearingMessagesFollowSettingOff": "הודעות שתשלח לא ייעלמו עוד. האם אתה בטוח שברצונך <b>לכבות</b> הודעות שנעלמות?",
   "disappearingMessagesFollowSettingOn": "האם להגדיר שההודעות שלך ייעלמו <b>{time}</b> לאחר שהן <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} משתמש/ת בלקוח מיושן. הודעות נעלמות עשויות שלא לפעול כצפוי.",
   "disappearingMessagesOnlyAdmins": "רק מנהלי הקבוצה יכולים לשנות הגדרה זו.",
@@ -316,9 +316,9 @@
   "disappearingMessagesSetYou": "<b>את/ה</b> הגדרת שהודעות ייעלמו {time} לאחר שהן {disappearing_messages_type}.",
   "disappearingMessagesTimer": "טיימר",
   "disappearingMessagesTurnedOff": "<b>{name}‏</b> ביטל/ה הודעות נעלמות. הודעות שהיא תשלח לא ייעלמו יותר.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> כיבה את ההודעות הנעלמות.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ביטל את ההודעות הנעלמות <b>ב</b>.",
   "disappearingMessagesTurnedOffYou": "<b>את/ה</b> ביטלת <b>הודעות נעלמות</b>. הודעות שתשלח לא ייעלמו יותר.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>אתה</b> כיבית את ההודעות הנעלמות.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>את</b> <b>כיבית</b> הודעות שנעלמות.",
   "disappearingMessagesTypeRead": "נקרא",
   "disappearingMessagesTypeSent": "נשלח",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> עדכן/ה את הגדרות ההודעות הנעלמות.",
