--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "अवरोधित {name}",
   "blockDescription": "क्या आप वाकई <b>{name}</b> को ब्लॉक करना चाहते हैं? अवरोधित उपयोगकर्ता आपको संदेश अनुरोध नहीं भेज सकते, समूह निमंत्रण या कॉल नहीं कर सकते।",
   "blockUnblock": "अनब्लॉक करें",
-  "blockUnblockName": "क्या आप वाकई {name} को अनब्लॉक करना चाहते हैं?",
-  "blockUnblockNameMultiple": "क्या आप वाकई {name} और {count} अन्य को अनब्लॉक करना चाहते हैं?",
-  "blockUnblockNameTwo": "क्या आप वाकई {name} और 1 अन्य को अनब्लॉक करना चाहते हैं?",
+  "blockUnblockName": "क्या आप वाकई <b>{name}</b> को अनब्लॉक करना चाहते हैं?",
+  "blockUnblockNameMultiple": "क्या आप वाकई <b>{name}</b> और <b>{count}</b> अन्य को अनब्लॉक करना चाहते हैं?",
+  "blockUnblockNameTwo": "क्या आप वाकई <b>{name}</b> और 1 अन्य को अनब्लॉक करना चाहते हैं?",
   "blockUnblockedUser": "अनब्लॉक किया {name}",
   "call": "कॉल",
   "callsCalledYou": "{name} ने आपको कॉल किया",
