--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -127,8 +127,8 @@
   "blockBlockedUser": "Blokiran {name}",
   "blockDescription": "Jeste li sigurni da želite blokirati <b>{name}</b>? Blokirani korisnici vam ne mogu poslati zahtjeve za poruke, pozive ili pozive u grupu.",
   "blockUnblock": "Deblokiraj",
-  "blockUnblockName": "Jeste li sigurni da želite deblokirati {name}?",
-  "blockUnblockNameMultiple": "Jeste li sigurni da želite deblokirati {name} i {count} drugih?",
+  "blockUnblockName": "Jeste li sigurni da želite deblokirati <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Jeste li sigurni da želite deblokirati <b>{name}</b> i <b>{count} drugih</b>?",
   "blockUnblockNameTwo": "Jeste li sigurni da želite deblokirati <b>{name}</b> i još jednu osobu?",
   "blockUnblockedUser": "Deblokirao/la {name}",
   "call": "Poziv",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendState": "Nestaje nakon slanja - {time}",
   "disappearingMessagesFollowSetting": "Slijedite postavku",
   "disappearingMessagesFollowSettingOff": "Poruke koje pošaljete više neće nestati. Jeste li sigurni da želite isključiti <b>nestajuće poruke</b>?",
-  "disappearingMessagesFollowSettingOn": "Postaviti da vaše poruke nestaju <b>{time} nakon što su <b>{disappearing_messages_type}</b>?",
+  "disappearingMessagesFollowSettingOn": "Postaviti da vaše poruke nestaju <b>{time}</b> nakon što su <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} koristi zastarjeli klijent. Nestajuće poruke možda neće raditi kako je očekivano.",
   "disappearingMessagesOnlyAdmins": "Samo administratori grupe mogu promijeniti ovu postavku.",
   "disappearingMessagesSent": "Poslano",
@@ -316,9 +316,9 @@
   "disappearingMessagesSetYou": "<b>Postavili ste</b> da poruke nestanu {time} nakon što su {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Tajmer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> je isključio/la nestajuće poruke. Njihove poruke više neće nestajati.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> je isključio/la nestajuće poruke.",
-  "disappearingMessagesTurnedOffYou": "<b>Isključili ste</b> nestajuće poruke. Poruke koje šaljete više neće nestajati.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Vi</b> ste isključili <b>nestajuće poruke</b>.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> je <b>isključio</b> poruke koje nestaju.",
+  "disappearingMessagesTurnedOffYou": "<b>Vi</b> ste <b>isključili</b> poruke koje nestaju. Poruke koje šaljete više neće nestajati.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Vi</b> ste <b>isključili</b> poruke koje nestaju.",
   "disappearingMessagesTypeRead": "pročitano",
   "disappearingMessagesTypeSent": "poslano",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> je ažurirao postavke za nestajuće poruke.",
