--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -125,11 +125,11 @@
   "blockBlockedDescription": "Üzenet küldéséhez oldd fel partnered blokkolását!",
   "blockBlockedNone": "Nincsenek blokkolt kontaktok",
   "blockBlockedUser": "{name} blokkolva",
-  "blockDescription": "Biztos vagy benne, hogy blokkolni szeretnéd <b>{name} <\\/b>-t? A blokkolt felhasználók nem küldhetnek üzenetkérelmeket, csoportmeghívókat, és nem hívhatnak fel.",
+  "blockDescription": "Biztos vagy benne, hogy blokkolni szeretnéd <b>{name} </b>? A blokkolt felhasználók nem küldhetnek üzenetkérelmeket, csoportmeghívókat, és nem hívhatnak fel.",
   "blockUnblock": "Feloldás",
-  "blockUnblockName": "Biztos, hogy fel szeretnéd oldani {name} blokkolását?",
-  "blockUnblockNameMultiple": "Biztos, hogy fel szeretnéd oldani {name} és {count} másik blokkolását?",
-  "blockUnblockNameTwo": "Biztos, hogy fel szeretnéd oldani {name} és még egy másik blokkolását?",
+  "blockUnblockName": "Biztos, hogy fel szeretnéd oldani <b>{name}</b> blokkolását?",
+  "blockUnblockNameMultiple": "Biztos, hogy fel szeretnéd oldani <b>{name}</b> és <b>{count} másik blokkolását</b>?",
+  "blockUnblockNameTwo": "Biztos, hogy fel szeretnéd oldani <b>{name}</b> és még egy másik blokkolását?",
   "blockUnblockedUser": "Blokkolás feloldva {name}",
   "call": "Hívás",
   "callsCalledYou": "{name} hívott téged",
@@ -178,12 +178,12 @@
   "clearDeviceDescription": "Biztos vagy benne, hogy törölni szeretnéd a készülékedet?",
   "clearDeviceOnly": "Törlés csak az eszközről",
   "clearMessages": "Minden üzenet törlése",
-  "clearMessagesChatDescription": "Biztos vagy benne, hogy az összes üzenetet törölni szeretnéd <b>{name}<\\/b> a beszélgetéséből az eszközödről?",
-  "clearMessagesCommunity": "Biztos vagy benne, hogy az összes <b>{community_name} <\\/b>üzenetet törölni szeretnéd az eszközödről?",
+  "clearMessagesChatDescription": "Biztos vagy benne, hogy az összes üzenetet törölni szeretnéd <b>{name}</b> a beszélgetéséből az eszközödről?",
+  "clearMessagesCommunity": "Biztos vagy benne, hogy az összes <b>{community_name}</b> üzenetet törölni szeretnéd az eszközödről?",
   "clearMessagesForEveryone": "Törlés mindenkinél",
   "clearMessagesForMe": "Törlés nálam",
-  "clearMessagesGroupAdminDescription": "Biztos vagy benne, hogy az összes <b>{group_name} <\\/b>üzenetet törölni szeretnéd?",
-  "clearMessagesGroupDescription": "Biztos vagy benne, hogy az összes <b>{group_name} <\\/b>üzenetet törölni szeretnéd az eszközödről?",
+  "clearMessagesGroupAdminDescription": "Biztos vagy benne, hogy az összes <b>{group_name}</b> üzenetet törölni szeretnéd?",
+  "clearMessagesGroupDescription": "Biztos vagy benne, hogy az összes <b>{group_name}</b>üzenetet törölni szeretnéd az eszközödről?",
   "clearMessagesNoteToSelfDescription": "Biztos vagy benne, hogy az összes 'Privát feljegyzés' üzenetet törölni szeretnéd az eszközödről?",
   "close": "Bezár",
   "closeWindow": "Ablak bezárása",
@@ -210,7 +210,7 @@
   "confirm": "Megerősítés",
   "contactContacts": "Kontaktok",
   "contactDelete": "Névjegy törlése",
-  "contactDeleteDescription": "Biztos vagy benne, hogy törölni szeretnéd <b>{name}<\\/b> a névjegyeid közül? Új üzenetek <b>{name}<\\/b>-től érkezni fognak üzenetkérelemként.",
+  "contactDeleteDescription": "Biztos vagy benne, hogy törölni szeretnéd <b>{name}</b> a névjegyeid közül? Új üzenetek <b>{name}</b>-től érkezni fognak üzenetkérelemként.",
   "contactNone": "Még nincsenek kontaktjaid",
   "contactSelect": "Kontaktok kiválasztása",
   "contactUserDetails": "Felhasználói adatok",
@@ -307,7 +307,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Üzenetek törlődnek küldés után.",
   "disappearingMessagesDisappearAfterSendState": "Eltűnik küldés után - {time}",
   "disappearingMessagesFollowSetting": "Beállítás követése",
-  "disappearingMessagesFollowSettingOff": "A küldött üzenetek nem fognak többé eltűnni. Biztosan ki akarod kapcsolni az eltűnő üzeneteket?",
+  "disappearingMessagesFollowSettingOff": "Az elküldött üzenetek többé nem tűnnek el. Biztosan ki szeretné <b>kikapcsolni</b> az eltűnt üzeneteket?",
   "disappearingMessagesFollowSettingOn": "Üzeneteit beállíthatja, hogy <b>{time}</b> elteltével eltűnjenek, miután <b>{disappearing_messages_type}</b> lettek?",
   "disappearingMessagesLegacy": "{name} egy elavult klienst használ. Az eltűnő üzenetek valószínűleg nem fognak működni a várt módon.",
   "disappearingMessagesOnlyAdmins": "Ezt a beállítást csak adminok változtathatják meg.",
@@ -316,9 +316,9 @@
   "disappearingMessagesSetYou": "<b>Te</b> beállítottad, hogy az üzenetek ennyi idő után tűnjenek el: {time} miután {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Időzítő",
   "disappearingMessagesTurnedOff": "<b>{name}</b> kikapcsolta az eltűnő üzeneteket. Az általuk küldött üzenetek többé nem fognak eltűnni.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> kikapcsolta az eltűnő üzeneteket.",
-  "disappearingMessagesTurnedOffYou": "<b>Te</b> kikapcsoltad az eltűnő üzeneteket. Az általad küldött üzenetek többé nem fognak eltűnni.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Ön</b> kikapcsolta az eltűnő üzeneteket.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> <b>kikapcsolta</b> az eltűnő üzeneteket.",
+  "disappearingMessagesTurnedOffYou": "<b>Te</b> <b>kikapcsoltad</b> az eltűnő üzeneteket. Az általad küldött üzenetek többé nem fognak eltűnni.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Ön</b> <b>kikapcsolta</b> az eltűnő üzeneteket.",
   "disappearingMessagesTypeRead": "elolvasva",
   "disappearingMessagesTypeSent": "küldött",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> frissítette az eltűnő üzenetek beállításait.",
@@ -376,7 +376,7 @@
   "groupCreate": "Csoport létrehozása",
   "groupCreateErrorNoMembers": "Kérjük, válassz legalább 1 csoporttagot.",
   "groupDelete": "Csoport törlése",
-  "groupDeleteDescription": "Biztos vagy benne, hogy törölni szeretnéd <b>{group_name}<\\/b>? Ezzel minden tag törölve lesz, és a csoport teljes tartalma törölve lesz.",
+  "groupDeleteDescription": "Biztos vagy benne, hogy törölni szeretnéd <b>{group_name}</b>? Ezzel minden tag törölve lesz, és a csoport teljes tartalma törölve lesz.",
   "groupDescriptionEnter": "Adj meg egy csoportleírást",
   "groupDisplayPictureUpdated": "A csoport képe frissítve.",
   "groupEdit": "Csoport szerkesztése",
