--- a/_locales/hy-AM/messages.json
+++ b/_locales/hy-AM/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Արգելափակվել է {name}֊ը",
   "blockDescription": "Վստա՞հ եք, որ ցանկանում եք արգելափակել <b>{name}?</b> Արգելափակված օգտատերերը չեն կարող հաղորդագրության հարցումներ, խմբի հրավերներ կամ զանգեր ուղարկել ձեզ։",
   "blockUnblock": "Արգելաբացել։",
-  "blockUnblockName": "Համոզվա՞ծ եք, որ ուզում եք արգելաբացել {name}֊ին:",
-  "blockUnblockNameMultiple": "Վստա՞հ եք, որ ուզում եք արգելաբացել {name}֊ին և ևս {count}֊ին:",
-  "blockUnblockNameTwo": "Վստա՞հ եք, որ ուզում եք արգելաբացնել {name}֊ին և մեկ ստուգողին։",
+  "blockUnblockName": "Համոզվա՞ծ եք, որ ուզում եք արգելաբացել <b>{name}</b>֊ին:",
+  "blockUnblockNameMultiple": "Վստա՞հ եք, որ ուզում եք արգելաբացել <b>{name}</b>֊ին և ևս <b>{count}</b>֊ին:",
+  "blockUnblockNameTwo": "Վստա՞հ եք, որ ուզում եք արգելաբացնել <b>{name}</b>֊ին և մեկ ստուգողին։",
   "blockUnblockedUser": "Արգելաբացել {name}",
   "call": "Զանգել",
   "callsCalledYou": "{name}-ը ձեզ զանգել է",
@@ -317,8 +317,8 @@
   "disappearingMessagesTimer": "Ժամաչափ",
   "disappearingMessagesTurnedOff": "<b>{name}֊ը</b> անջատել է անհետացող հաղորդագրությունները: Նրա կողմից ուղարկված հաղորդագրությունները այլևս չեն անհետանում:",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> անջատել է անհետացող հաղորդագրությունները <b>անջատված</b>:",
-  "disappearingMessagesTurnedOffYou": "<b>Դուք</b> անջատեցիք անհետացող հաղորդագրությունները: Ձեր ուղարկած հաղորդագրությունները այլևս չեն անհետանում:",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Դուք</b> անջատեցիք <b>անհետացող հաղորդագրությունները</b>։",
+  "disappearingMessagesTurnedOffYou": "<b>Դուք</b> անջատել եք <b>անջատել</b> անհետացող հաղորդագրությունները: Ձեր ուղարկած հաղորդագրություններն այլևս չեն անհետանա:",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Դուք</b> անջատել եք <b>անջատել</b> անհետացող հաղորդագրությունները:",
   "disappearingMessagesTypeRead": "կարդացած է",
   "disappearingMessagesTypeSent": "ուղարկված է",
   "disappearingMessagesUpdated": "<b>{admin_name}</b>-ը թարմացրել է անհետացող հաղորդագրությունների կարգավորումները։",
