--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -128,8 +128,8 @@
   "blockDescription": "Apakah Anda yakin ingin memblokir <b>{name}?</b> Pengguna yang diblokir tidak bisa mengirimkan Anda permintaan pesan, undangan grup, atau menelepon Anda.",
   "blockUnblock": "Buka blokir",
   "blockUnblockName": "Apakah Anda yakin ingin membuka blokir {name}?",
-  "blockUnblockNameMultiple": "Apakah Anda yakin ingin membuka blokir {name} dan {count} lainnya?",
-  "blockUnblockNameTwo": "Apakah Anda yakin ingin membuka blokir {name} dan 1 lainnya?",
+  "blockUnblockNameMultiple": "Apakah Anda yakin ingin membuka blokir <b>{name}</b> dan <b>{count} lainnya</b>?",
+  "blockUnblockNameTwo": "Apakah Anda yakin ingin membuka blokir <b>{name}</b> dan 1 lainnya?",
   "blockUnblockedUser": "Buka blokir {name}",
   "call": "Panggil",
   "callsCalledYou": "{name} memanggil Anda",
@@ -317,8 +317,8 @@
   "disappearingMessagesTimer": "Timer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> menonaktifkan pesan menghilang. Pesan yang mereka kirim tidak akan lagi menghilang.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> telah mematikan pesan menghilang <b>off</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>Anda</b> menonaktifkan pesan menghilang. Pesan yang Anda kirim tidak akan lagi menghilang.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Kamu</b> mematikan pesan menghilang <b>off</b>.",
+  "disappearingMessagesTurnedOffYou": "<b>Anda</b> <b>menonaktifkan</b> pesan yang hilang. Pesan yang Anda kirim tidak akan hilang lagi.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Anda</b> <b>menonaktifkan</b> pesan yang hilang.",
   "disappearingMessagesTypeRead": "baca",
   "disappearingMessagesTypeSent": "terkirim",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> memperbarui pengaturan pesan menghilang.",
