--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Bloccato {name}",
   "blockDescription": "Confermi di voler bloccare <b>{name}?</b> Gli utenti bloccati non possono inviarti richieste di messaggi, inviti ai gruppi o chiamarti.",
   "blockUnblock": "Sblocca",
-  "blockUnblockName": "Vuoi sbloccare {name}?",
-  "blockUnblockNameMultiple": "Sei sicuro di voler sbloccare {name} e {count} altri?",
-  "blockUnblockNameTwo": "Sei sicuro di voler sbloccare {name} e un altro?",
+  "blockUnblockName": "Sei sicuro di voler sbloccare <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Sei sicuro di voler sbloccare <b>{name}</b> e <b>altri {count}</b>?",
+  "blockUnblockNameTwo": "Sei sicuro di voler sbloccare <b>{name}</b> e un altro?",
   "blockUnblockedUser": "Sbloccato {name}",
   "call": "Chiama",
   "callsCalledYou": "{name} ti ha chiamato",
@@ -252,7 +252,7 @@
   "cut": "Taglia",
   "databaseErrorGeneric": "Si è verificato un errore del database.<br/><br/>Esporta i log dell'applicazione per condividerli per la risoluzione dei problemi. Se ciò non riesce, reinstalla {app_name} e ripristina il tuo account.<br/><br/>Avviso: questo comporterà la perdita di tutti i messaggi, gli allegati e i dati dell'account più vecchi di due settimane.",
   "databaseErrorTimeout": "Abbiamo notato che {app_name} ci impiega molto tempo ad avviarsi.<br/><br/>Puoi continuare ad attendere, esportare i registri del dispositivo per la risoluzione dei problemi o provare a riavviare Session.",
-  "databaseErrorUpdate": "Il database della tua app non è compatibile con questa versione di {app_name}. Reinstalla l'app e ripristina il tuo account per generare un nuovo database e continuare a utilizzare {app_name}.<br /><br /> Avviso: Questo comporterà la perdita di tutti i messaggi e allegati più vecchi di due settimane.",
+  "databaseErrorUpdate": "Il database della tua app non è compatibile con questa versione di {app_name}. Reinstalla l'app e ripristina il tuo account per generare un nuovo database e continuare a utilizzare {app_name}.<br/><br/> Avviso: Questo comporterà la perdita di tutti i messaggi e allegati più vecchi di due settimane.",
   "databaseOptimizing": "Ottimizzazione del database",
   "debugLog": "Log di debug",
   "decline": "Rifiuta",
@@ -306,7 +306,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "I messaggi vengono eliminati dopo che sono stati inviati.",
   "disappearingMessagesDisappearAfterSendState": "Scompaiono dopo l'invio - {time}",
   "disappearingMessagesFollowSetting": "Copia impostazione",
-  "disappearingMessagesFollowSettingOff": "I messaggi che invii non scompariranno più. Vuoi davvero disattivare i messaggi effimeri?",
+  "disappearingMessagesFollowSettingOff": "I messaggi che invii non scompariranno più. Vuoi davvero <b>disattivare</b> i messaggi effimeri?",
   "disappearingMessagesFollowSettingOn": "Vuoi che i tuoi messaggi scompaiano <b>{time}?</b> dopo che sono stati <b>{disappearing_messages_type}?</b>",
   "disappearingMessagesLegacy": "{name} sta usando un client obsoleto. I messaggi effimeri potrebbero non funzionare come previsto.",
   "disappearingMessagesOnlyAdmins": "Solo gli amministratori del gruppo possono cambiare questa impostazione.",
@@ -316,8 +316,8 @@
   "disappearingMessagesTimer": "Timer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ha disattivato i messaggi a scomparsa. I messaggi che inviano non scompariranno più.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ha <b>disattivato</b> i messaggi effimeri.",
-  "disappearingMessagesTurnedOffYou": "<b>Hai</b> disattivato i messaggi a scomparsa. I messaggi che invii non scompariranno più.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Hai</b> disattivato i <b>messaggi effimeri</b>.",
+  "disappearingMessagesTurnedOffYou": "<b>Hai</b> <b>disattivato</b> i messaggi effimeri. I messaggi che invierai non scompariranno più.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Hai</b> <b>disattivato</b> i messaggi effimeri.",
   "disappearingMessagesTypeRead": "letto",
   "disappearingMessagesTypeSent": "inviato",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> ha aggiornato le impostazioni dei messaggi effimeri.",
