--- a/_locales/km/messages.json
+++ b/_locales/km/messages.json
@@ -14,13 +14,13 @@
   "actualSize": "ទំហំជាក់ស្តែង",
   "add": "បន្ថែម",
   "adminCannotBeRemoved": "អ្នកគ្រប់គ្រងមិនអាចត្រូវបានដកចេញ។",
-  "adminMorePromotedToAdmin": "<b>{name}‍> និង <b>{count} គេផ្សេងទៀត‍> ត្រូវបានបដិស្មីជា Admin។",
+  "adminMorePromotedToAdmin": "<b>{name}‍</b> និង <b>{count}</b> គេផ្សង ទៀត‍> ត្រូវណានបិស្មីជា Admin។",
   "adminPromote": "ដំណើរការអ្នកគ្រប់គ្រង",
   "adminPromoteDescription": "តើអ្នកប្រាកដទេថាចង់ដាក់តំណែង <b>{name}</b> ឲ្យជាអ្នកគ្រប់គ្រង? អ្នកគ្រប់គ្រងមិនអាចដកចេញបានទេ។",
   "adminPromoteMoreDescription": "តើអ្នកប្រាកដទេថាចង់ដាក់តំណែង <b>{name}</b> និង <b>{count} នាក់ផ្សេងទៀត</b> ឲ្យជាអ្នកគ្រប់គ្រង? អ្នកគ្រប់គ្រងមិនអាចដកចេញបានទេ។",
   "adminPromoteToAdmin": "ដំណើរការជាអ្នកគ្រប់គ្រង",
   "adminPromoteTwoDescription": "តើអ្នកប្រាកដទេថាចង់ដាក់តំណែង <b>{name}</b> និង <b>{other_name}</b> ឲ្យជាអ្នកគ្រប់គ្រង? អ្នកគ្រប់គ្រងមិនអាចដកចេញបានទេ។",
-  "adminPromotedToAdmin": "<b>{name}‍> ត្រូវបានបដិស្មីជា Admin។",
+  "adminPromotedToAdmin": "<b>{name}‍</b> ត្រូវបានបដិស្មីជា Admin។",
   "adminPromotionFailed": "ការដំឡើងជាអ្នកគ្រប់គ្រងបានបរាជ័យ",
   "adminPromotionFailedDescription": "បរាជ័យក្នុងការបំលែង {name} នៅក្នុង {group_name}",
   "adminPromotionFailedDescriptionMultiple": "បរាជ័យក្នុងការបំលែង {name} និង {count} នាក់ផ្សេងទៀតនៅក្នុង {group_name}",
@@ -32,12 +32,12 @@
   "adminRemoveFailed": "បរាជ័យក្នុងការដក {name} ជាអ្នកគ្រប់គ្រង។",
   "adminRemoveFailedMultiple": "បរាជ័យក្នុងការដក <b>{name}</b> និង <b>{count} គេផ្សេងទៀត</b> ចេញពីតួនាទី Admin។",
   "adminRemoveFailedOther": "បរាជ័យក្នុងការដក <b>{name}</b> និង <b>{other_name}</b> ចេញពីតួនាទី Admin។",
-  "adminRemovedUser": "<b>{name}‍> ត្រូវបានដកចេញពីការកាន់តំណែងជា Admin។",
+  "adminRemovedUser": "<b>{name}‍</b> ត្រូវបានដកចេញពីការកាន់តំណែងជា Admin។",
   "adminRemovedUserMultiple": "<b>{name}</b> និង <b>{count} គេផ្សេងទៀត</b> ត្រូវបានដកចេញពីតួនាទី Admin។",
   "adminRemovedUserOther": "<b>{name}</b> និង <b>{other_name}</b> ត្រូវបានដកចេញពីតួនាទី Admin។",
   "adminSendingPromotion": "កំពុងផ្ញើការផ្សព្វផ្សាយរបស់អ្នកគ្រប់គ្រង",
   "adminSettings": "ការកំណត់អ្នកគ្រប់គ្រង",
-  "adminTwoPromotedToAdmin": "<b>{name}‍> និង <b>{other_name}‍> ត្រូវបានបដិស្មីជា Admin។",
+  "adminTwoPromotedToAdmin": "<b>{name}‍</b> និង <b>{other_name}‍</b> ត្រូវណានបិស្មីជា Admin។",
   "andMore": "+{count}",
   "anonymous": "អនាមិក",
   "appearanceAutoDarkMode": "ម៉ូដងងឹតដោយស្វ័យប្រវត្តិ",
@@ -61,7 +61,7 @@
   "attachmentsAlbumUnnamed": "អាល់ប៊ុំ ដែលមិនបានដាក់ឈ្មោះ",
   "attachmentsAutoDownload": "ទាញយកឯកសារភ្ជាប់ដោយស្វ័យប្រវត្តិ",
   "attachmentsAutoDownloadDescription": "ទាញយកព័ត៌មាន និងឯកសារចេញពីកិច្ចសន្ទនានេះដោយស្វ័យប្រវត្តិ។",
-  "attachmentsAutoDownloadModalDescription": "តើអ្នកចង់ទាញយកឯកសារទាំងអស់ពី <b>{conversation_name} <\\/b> ដោយស្វ័យប្រវត្តិទេ?",
+  "attachmentsAutoDownloadModalDescription": "តើអ្នកចង់ទាញយកឯកសារទាំងអស់ពី <b>{conversation_name}</b> ដោយស្វ័យប្រវត្តិទេ?",
   "attachmentsAutoDownloadModalTitle": "ទាញយកដោយស្វ័យប្រវត្តិ",
   "attachmentsClearAll": "ជម្រះឯកសារភ្ជាប់ទាំងអស់",
   "attachmentsClearAllDescription": "តើអ្នកប្រាកដទេថាអ្នកចង់ជម្រះឯកសារភ្ជាប់ទាំងអស់? សារជាមួយឯកសារភ្ជាប់នឹងត្រូវបានលុបផងដែរ។",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "បានទប់ស្កាត់ {name}",
   "blockDescription": "តើអ្នកប្រាកដទេថាអ្នកចង់រារាំង <b>{name}?</b> អ្នកប្រើប្រាស់ដែលត្រូវបានរារាំងមិនអាចផ្ញើសំណើសារ ការអញ្ជើញក្រុម ឬហៅអ្នកបានទេ។",
   "blockUnblock": "បើកវិញ",
-  "blockUnblockName": "តើអ្នកប្រាកដទេថាចង់ឈប់ប្លុក {name}?",
-  "blockUnblockNameMultiple": "តើអ្នកប្រាកដទេថាចង់ឈប់ប្លុក {name} និង {count} នាក់ផ្សេងទៀត?",
-  "blockUnblockNameTwo": "តើអ្នកប្រាកដទេថាចង់ឈប់ប្លុក {name} និង 1 នាក់ផ្សេងទៀត?",
+  "blockUnblockName": "តើអ្នកប្រាកដទេថាចង់ឈប់ប្លុក <b>{name}</b>?",
+  "blockUnblockNameMultiple": "តើអ្នកប្រាកដទេថាចង់ឈប់ប្លុក <b>{name}</b> និង <b>{count} នាក់ផ្សេងទៀត</b>?",
+  "blockUnblockNameTwo": "តើអ្នកប្រាកដទេថាចង់ឈប់ប្លុក <b>{name}</b> និង 1 នាក់ផ្សេងទៀត?",
   "blockUnblockedUser": "បានឈប់ទប់ស្កាត់ {name}",
   "call": "សូរ",
   "callsCalledYou": "{name} បានហៅមកអ្នក",
@@ -156,7 +156,7 @@
   "callsVoiceAndVideoModalDescription": "IP អ្នក​ត្រូវបាន​លេចឮ​ច្បាស់នៅពេល​អ្នក​ប្រើកិច្ចប្រជុំ Beta ក្នុង Oxen Foundation។",
   "callsVoiceAndVideoToggleDescription": "បើកការហៅជាសំឡេង និងជាវីដេអូទៅកាន់ និងមកពីអ្នកប្រើផ្សេងទៀត។",
   "callsYouCalled": "អ្នកបានហៅ {name}",
-  "callsYouMissedCallPermissions": "អ្នក​ធ្វើ​រំលងការហៅពី <b>{name}<\\/b> ដោយសារ​អ្នកមិន​បានបើក <b>ការហៅសំឡេង និងវីដេអូ<\\/b> នៅក្នុងការកំណត់ភាពឯកជន។",
+  "callsYouMissedCallPermissions": "អ្នក​ធ្វើ​រំលងការហៅពី <b>{name}</b> ដោយសារ​អ្នកមិន​បានបើក <b>ការហៅសំឡេង និងវីដេអូ</b> នៅក្នុងការកំណត់ភាពឯកជន។",
   "cameraErrorNotFound": "រកមិនឃើញកាមេរ៉ា",
   "cameraErrorUnavailable": "កាមេរ៉ាមិនមាន.",
   "cameraGrantAccess": "ផ្តល់សិទ្ធិចូលប្រើប្រាស់កាមេរ៉ា",
@@ -251,9 +251,9 @@
   "copy": "ចម្លង",
   "create": "បង្កើត",
   "cut": "កាត់",
-  "databaseErrorGeneric": "មានបញ្ហាមូលដ្ឋានទិន្នន័យបានកើតឡើង។<br‍\\‍/><br‍/>នាំចេញការកំណត់ត្រាអនុវត្តរបស់អ្នកដើម្បីចែករំលែកសម្រាប់ដោះស្រាយបញ្ហា។ ប្រសិនបើការនេះមិនបានជោគជ័យទេ សូមធ្វើការដំឡើង <b>{app_name}<br‍\\‍/><br‍/>ឡើងវិញ និងស្តារឡើងវិញគណនីរបស់អ្នក។ ព្រមាន៖ នេះនឹងធ្វើឲ្យពុះសារទាំងនោះ មាតិកាភ្ជាប់ខាងក្នុង និងទិន្នន័យគណនីដែលចាស់ជាងពីរ​សប្តាហ៍បាត់មួយរយៈពេលខ្លី។",
+  "databaseErrorGeneric": "មានបញ្ហាមូលដ្ឋានទិន្នន័យបានកើតឡើង។<br‍\\‍/><br‍/>នាំចេញការកំណត់ត្រាអនុវត្តរបស់អ្នកដើម្បីចែករំលែកសម្រាប់ដោះស្រាយបញ្ហា។ ប្រសិនបើការនេះមិនបានជោគជ័យទេ សូមធ្វើការដំឡើង {app_name}<br‍/><br‍/>ឡើងវិញ និងស្តារឡើងវិញគណនីរបស់អ្នក។ ព្រមាន៖ នេះនឹងធ្វើឲ្យពុះសារទាំងនោះ មាតិកាភ្ជាប់ខាងក្នុង និងទិន្នន័យគណនីដែលចាស់ជាងពីរ​សប្តាហ៍បាត់មួយរយៈពេលខ្លី។",
   "databaseErrorTimeout": "យើងគិតថា {app_name} ពុំអាចចាប់ផ្ដើមបានយ៉ាងចំហរមួយរយៈ <br/><br/> អ្នកអាចរង់ចាំតទៅ ហៅទិន្នន័យឧបករណ៍របស់អ្នកដើម្បីជួយដោះស្រាយ បើទោះអញ្ចឹងក៏ដោយ សាកល្បងចាប់ផ្ដើម Session",
-  "databaseErrorUpdate": "ឃ្លាំងទិន្នន័យរបស់កម្មវិធីរបស់អ្នកមិនអាចបើកជាមួយ {app_name} នេះទេ។ កញ្ចួញកម្មវិធីឡើងវិញ ហើយស្ដារគណនីរបស់អ្នកដើម្បីបង្កើតឃ្លាំងទិន្នន័យថ្មី និង​បន្តប្រើ {app_name}។<br\\/><br\\/>ការព្រមាន៖ នេះនឹងលុបបាត់ជាស្ថាពរ នូវសារទាំងអស់ និងឯកសារភ្ជាប់ដែលអាយុចាស់ជាងពីរសប្ដាហ៍។",
+  "databaseErrorUpdate": "ឃ្លាំងទិន្នន័យរបស់កម្មវិធីរបស់អ្នកមិនអាចបើកជាមួយ {app_name} នេះទេ។ កញ្ចួញកម្មវិធីឡើងវិញ ហើយស្ដារគណនីរបស់អ្នកដើម្បីបង្កើតឃ្លាំងទិន្នន័យថ្មី និង​បន្តប្រើ {app_name}។<br/><br/>ការព្រមាន៖ នេះនឹងលុបបាត់ជាស្ថាពរ នូវសារទាំងអស់ និងឯកសារភ្ជាប់ដែលអាយុចាស់ជាងពីរសប្ដាហ៍។",
   "databaseOptimizing": "កំពុងធ្វើបច្ចុប្បន្នភាពមូលដ្ខានទិន្នន័យ",
   "debugLog": "កំណត់ត្រាបញ្ហា",
   "decline": "បដិសេធ",
@@ -269,7 +269,7 @@
   "deleteAfterGroupPR3GroupErrorLeave": "មិនអាចចាកចេញនៅពេលបន្ថែមឬដកសមាជិកផ្សេងទៀត។",
   "deleteAfterLegacyDisappearingMessagesLegacy": "អក្សនាន",
   "deleteAfterLegacyDisappearingMessagesOriginal": "កំណែដើមនៃការបាត់ទៅរបស់សារ.",
-  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}‍> បានកំណត់រយៈពេលសារដែលអាចបាត់ទៅវិញជា <b>{time}‍>",
+  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}‍</b> បានកំណ់រយៈពល សាដរែលងាចបាត់ទៅវិញា <b>{time}‍</b>",
   "deleteAfterLegacyGroupsGroupCreation": "សូមរង់ចាំ ខណៈពេលដែលកំពុងតែបង្កើតក្រុម...",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "បរាជ័យក្នុងការធ្វើបច្ចុប្បន្នភាពក្រុម",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "អ្នកគ្មានសិទ្ធដើម្បីលុបសារអ្នកផ្សេងៗទេ",
@@ -312,17 +312,17 @@
   "disappearingMessagesLegacy": "{name} កំពុងប្រើការនិយមថ្មីត្រូវបានធ្វើបច្ចុប្បន្នភាព។ សារបាត់ពេលអាចនឹងមិនដំណើរការដូច​ការ​រំពឹងទុក។",
   "disappearingMessagesOnlyAdmins": "មានតែអ្នកគ្រប់គ្រងក្រុមអាចផ្លាស់ប្ដូរការកំណត់នេះបាន។",
   "disappearingMessagesSent": "បានផ្ញើ",
-  "disappearingMessagesSet": "<b>{name}‍> បានកំណត់សារឱ្យលុប {time} ក្រោយពួកគេបាន {disappearing_messages_type}។",
-  "disappearingMessagesSetYou": "<b>អ្នក<br‍\\‍/><br‍/>បានកំណត់សារឱ្យបាត់ {time} ក្រោយពួកគេបាន {disappearing_messages_type}។",
+  "disappearingMessagesSet": "<b>{name}‍</b> បានកំណត់សារឱ្យលុប {time} ក្រោយពួកគេបាន {disappearing_messages_type}។",
+  "disappearingMessagesSetYou": "<b>អ្នក</b>បានកំណត់សារឱ្យបាត់ {time} ក្រោយពួកគេបាន {disappearing_messages_type}។",
   "disappearingMessagesTimer": "Timer",
-  "disappearingMessagesTurnedOff": "<b>{name}‍> បានបិទ Disappearing Messages ។ សារទាំងអស់ដែលពួកគេផ្ញើនឹងមិនបាត់អស់ទៀតទេ។",
+  "disappearingMessagesTurnedOff": "<b>{name}‍</b>បានបិទ Disappearing Messages ។ សរ ទាំងាស់ដែពលួគកេផ្ញើនឹមងិនបាត់ហស់ទត ទេ។",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> បានបិទ សារបាត់ទៅវិញ <b>បិទ</b>។",
-  "disappearingMessagesTurnedOffYou": "<b>អ្នក<br‍\\‍/><br‍/>បានបិទ <b>ការលុបសារដោយស្វ័យប្រវត្តិ</b>។ សារដែលអ្នកផ្ញើនឹងមិនបាត់អស់ទៀតទេ។",
+  "disappearingMessagesTurnedOffYou": "<b>អ្នក</b>បានបិទ <b>ការលុបសារដោយស្វ័យប្រវត្តិ</b>។ សារដែលអ្នកផ្ញើនឹងមិនបាត់អស់ទៀតទេ។",
   "disappearingMessagesTurnedOffYouGroup": "<b>អ្នក</b> បានបិទ <b>សារបាត់ត្រលប់វិញ</b>។",
   "disappearingMessagesTypeRead": "អាន",
   "disappearingMessagesTypeSent": "បានផ្ញើ",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> បានធ្វើការកំណត់សារបាត់ទៅវិញ។",
-  "disappearingMessagesUpdatedYou": "<b>អ្នក<br‍\\‍/><br‍/>បានធ្វើបច្ចុប្បន្នភាពការកំណត់ Disappearing Messages។",
+  "disappearingMessagesUpdatedYou": "<b>អ្នក</b>បានធ្វើបច្ចុប្បន្នភាពការកំណត់ Disappearing Messages។",
   "dismiss": "ច្រានចោល",
   "displayNameDescription": "វាអាចជាឈ្មោះដែលជាការពិតរបស់អ្នក ឬឈ្មោះត្រួសត្រាយ ឬអ្វីដែលអ្នកចូលចិត្ត - និងអ្នកអាចផ្លាស់ប្តូរជានិច្ចកាល។",
   "displayNameEnter": "បញ្ចូលឈ្មោះបង្ហាញរបស់អ្នក",
@@ -393,18 +393,18 @@
   "groupInviteSent": "ការអញ្ជើញបានផ្ញើទៅហើយ",
   "groupInviteSuccessful": "ការអញ្ជើញក្រុមដោយជោគជ័យ",
   "groupInviteVersion": "អ្នកប្រើត្រូវមានកំណែចុងក្រោយដើម្បីទទួលបានការអញ្ជើញ",
-  "groupInviteYou": "<b>អ្នក<br‍\\‍/><br‍/>ត្រូវបានអញ្ជើញឱ្យចូលក្រុមនេះ។",
+  "groupInviteYou": "<b>អ្នក</b>ត្រូវបានអញ្ជើញឱ្យចូលក្រុមនេះ។",
   "groupInviteYouAndMoreNew": "<b>អ្នក</b> និង <b>{count} គេផ្សេងទៀត</b>ត្រូវបានអញ្ជើញឱ្យចូលក្រុមនេះ។",
   "groupInviteYouAndOtherNew": "<b>អ្នក</b> និង <b>{other_name}</b> ត្រូវបានអញ្ជើញឱ្យចូលក្រុមនេះ។",
   "groupLeave": "ចាកចេញពីក្រុម",
-  "groupLeaveDescription": "តើអ្នកប្រាកដទេថាចង់ចាកចេញពី {group_name}?",
+  "groupLeaveDescription": "តើអ្នកប្រាកដទេថាចង់ចាកចេញពី <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "តើអ្នកប្រាកដទេថាអ្នកចង់ចាកចេញពី <b>{group_name}</b>?<br/><br/>នេះនឹងដកសមាជិកទាំងអស់និងលុបមាតិកាក្រុមទាំងមូល។",
   "groupLeaveErrorFailed": "បរាជ័យក្នុងការចាកចេញពី {group_name}",
   "groupLegacyBanner": "ក្រុមបានធ្វើឱ្យប្រសើរឡើង បង្កើតក្រុមថ្មីដើម្បីធ្វើឱ្យប្រសើរ។ មុខងារក្រុមចាស់នឹងត្រូវបានបន្ទោរបង់ចាប់ពី {date}។",
-  "groupMemberLeft": "<b>{name}‍> បានចាកចេញពីក្រុមនេះ។",
-  "groupMemberLeftMultiple": "<b>{name}‍> និង <b>{count} គេផ្សេងទៀត‍> បានចាកចេញពីក្រុមនេះ។",
-  "groupMemberLeftTwo": "<b>{name}‍> និង <b>{other_name}‍> បានចាកចេញពីក្រុមនេះ។",
-  "groupMemberNew": "<b>{name}‍> បានចូលក្រុម។",
+  "groupMemberLeft": "<b>{name}‍</b> បានចាកចេញពីក្រុមនេះ។",
+  "groupMemberLeftMultiple": "<b>{name}‍</b> និង <b>{count}</b> គេផ្សង ទៀត‍> បន ចាចកេញីក្រុមនេះ។",
+  "groupMemberLeftTwo": "<b>{name}‍</b> និង <b>{other_name}‍</b> បានចាកចេញពីក្រុមនេះ។",
+  "groupMemberNew": "<b>{name}‍</b>បន ចូលក្រុម។",
   "groupMemberNewHistory": "<b>{name}</b> ត្រូវបានអញ្ជើញឱ្យចូលក្រុមនេះ។បានចែករំលែកប្រវត្តិការជជែក។",
   "groupMemberNewHistoryMultiple": "<b>{name}</b> និង <b>{count} គេផ្សេងទៀត</b> ត្រូវបានអញ្ជើញឱ្យចូលក្រុមនេះ។បានចែករំលែកប្រវត្តិការជជែក។",
   "groupMemberNewHistoryTwo": "<b>{name}</b> នឹង <b>{other_name}</b> ត្រូវបានអញ្ជើញឱ្យចូលក្រុមនេះ។បានចែករំលែកប្រវត្តិការជជែក។",
@@ -421,20 +421,20 @@
   "groupNameEnterShorter": "សូមបញ្ចូលឈ្មោះក្រុមខ្លីជាងនេះ",
   "groupNameNew": "ឈ្មោះក្រុមឥឡូវគឺ {group_name}. ",
   "groupNameUpdated": "ឈ្មោះក្រុមត្រូវបានធ្វើបច្ចុប្បន្នភាព។",
-  "groupNoMessages": "អ្នកមិនមានសារទីពី <b>{group_name}<\\/b>។ ផ្ញើសារមួយដើម្បីចាប់ផ្តើមការសន្ទនា!",
-  "groupOnlyAdmin": "អ្នកគឺជាអ្នកគ្រប់គ្រងតែម្នាក់ប៉ុណ្ណោះនៅក្នុង <b>{group_name} <\\/b>។<br/><br/>សមាជិកក្រុមនិងការកំណត់មិនអាចផ្លាស់ប្តូរបានទេផុតពីអ្នកគ្រប់គ្រង។",
-  "groupPromotedYou": "<b>អ្នក<br‍\\‍/><br‍/>ត្រូវបានបដិស្មីជា Admin។",
+  "groupNoMessages": "អ្នកមិនមានសារទីពី <b>{group_name}</b>។ ផ្ញើសារមួយដើម្បីចាប់ផ្តើមការសន្ទនា!",
+  "groupOnlyAdmin": "អ្នកគឺជាអ្នកគ្រប់គ្រងតែម្នាក់ប៉ុណ្ណោះនៅក្នុង <b>{group_name}</b>។<br/><br/>សមាជិកក្រុមនិងការកំណត់មិនអាចផ្លាស់ប្តូរបានទេផុតពីអ្នកគ្រប់គ្រង។",
+  "groupPromotedYou": "<b>អ្នក</b>ត្រូវបានបដិស្មីជា Admin។",
   "groupPromotedYouMultiple": "<b>អ្នក</b> និង <b>{count} នាក់ផ្សេងទៀត</b> ត្រូវបានតែងតាំងជា Admin។",
   "groupPromotedYouTwo": "<b>អ្នក</b> និង <b>{name}</b> ត្រូវបានតែងតាំងជា Admin។",
-  "groupRemoveDescription": "តើអ្នកចង់ដក <b>{name} <\\/b> ពី <b>{group_name} <\\/b> មែនទេ?",
-  "groupRemoveDescriptionMultiple": "តើអ្នកចង់ដក <b>{name} <\\/b> និង <b>{count} បន្ទាប់ <\\/b> ពី <b>{group_name} <\\/b> មែនទេ?",
-  "groupRemoveDescriptionTwo": "តើអ្នកចង់ដក <b>{name} <\\/b> និង <b>{other_name} <\\/b> ពី <b>{group_name} <\\/b> មែនទេ?",
+  "groupRemoveDescription": "តើអ្នកចង់ដក <b>{name}</b> ពី <b>{group_name}</b> មែនទេ?",
+  "groupRemoveDescriptionMultiple": "តើអ្នកចង់ដក <b>{name}</b> និង <b>{count} បន្ទាប់</b> ពី <b>{group_name}</b> មែនទេ?",
+  "groupRemoveDescriptionTwo": "តើអ្នកចង់ដក <b>{name}</b> និង <b>{other_name}</b> ពី <b>{group_name}</b> មែនទេ?",
   "groupRemoveMessages": "{count, plural, other [ដកអ្នកប្រើនិងសាររបស់ពួកគេ]}",
   "groupRemoveUserOnly": "{count, plural, other [ដកអ្នកប្រើ]}",
-  "groupRemoved": "<b>{name}‍> ត្រូវបានដកចេញពីក្រុមនេះ។",
-  "groupRemovedMultiple": "<b>{name}‍> និង <b>{count} គេផ្សេងទៀត‍> ត្រូវបានដកចេញពីក្រុមនេះ។",
-  "groupRemovedTwo": "<b>{name}‍> និង <b>{other_name}‍> ត្រូវបានដកចេញពីក្រុមនេះ។",
-  "groupRemovedYou": "អ្នកត្រូវបានយកចេញពី <b>{group_name}<\\/b>។",
+  "groupRemoved": "<b>{name}‍</b> ត្រូវបានដកចេញពីក្រុមនេះ។",
+  "groupRemovedMultiple": "<b>{name}‍</b> និង <b>{count}</b> គេផ្សង ទៀត‍> ត្រូវណាដកចេញេញីក្រុមនេះ។",
+  "groupRemovedTwo": "<b>{name}‍</b> និង <b>{other_name}‍</b> ត្រូវបានដកចេញពីក្រុមនេះ។",
+  "groupRemovedYou": "អ្នកត្រូវបានយកចេញពី <b>{group_name}</b>។",
   "groupRemovedYouMultiple": "<b>អ្នក</b> និង <b>{count} គេផ្សេងទៀត</b> ត្រូវបានដកចេញពីក្រុមនេះ។",
   "groupRemovedYouTwo": "<b>អ្នក</b> និង <b>{other_name}</b> ត្រូវបានដកចេញពីក្រុមនេះ។",
   "groupSetDisplayPicture": "កំណត់រូបបង្ហាញក្រុម",
@@ -464,10 +464,10 @@
   "leave": "ចាកចេញ",
   "leaving": "កំពុងចាកចេញ...",
   "legacyGroupMemberNew": "<b>{name}</b> បានចូលក្រុម។",
-  "legacyGroupMemberNewMultiple": "<b>{name}‍> និង <b>{count} គេផ្សេងទៀត‍> បានចូលក្រុម។",
+  "legacyGroupMemberNewMultiple": "<b>{name}‍</b> និង <b>{count}</b> គេផ្សង ទៀត‍> បន ចូលក្រុម។",
   "legacyGroupMemberNewYouMultiple": "<b>អ្នក</b> និង <b>{count} គេផ្សេងទៀត</b> បានចូលក្រុម។",
   "legacyGroupMemberNewYouOther": "<b>អ្នក</b> និង <b>{other_name}</b> បានចូលក្រុម។",
-  "legacyGroupMemberTwoNew": "<b>{name}‍> និង <b>{other_name}‍> បានចូលក្រុម។",
+  "legacyGroupMemberTwoNew": "<b>{name}‍</b> និង <b>{other_name}‍</b> បន ចូលក្រុម។",
   "legacyGroupMemberYouNew": "<b>អ្នក</b> បានចូលក្រុម។",
   "linkPreviews": "ការមើលតំណជាមុន",
   "linkPreviewsDescription": "បង្ហាញតំណឲ្យមើលជាមុនសម្រាប់ URLs ដែលអាចប្រើប្រាស់បាន។",
@@ -499,8 +499,8 @@
   "membersInvite": "អញ្ជើញទំនាក់ទំនង",
   "membersInviteSend": "{count, plural, other [ផ្ញើការអញ្ជើញច្រើន]}",
   "membersInviteShareDescription": "តើអ្នកចង់ចែករំលែកប្រវត្តិសារក្រុមជាមួយ <b>{name} <\\/b> មែនទេ?",
-  "membersInviteShareDescriptionMultiple": "តើអ្នកចង់ចែករំលែកប្រវត្តិសារក្រុមជាមួយ <b>{name} <\\/b> និង <b>{count} អ្នកផ្សេងទៀត <\\/b> មែនទេ?",
-  "membersInviteShareDescriptionTwo": "តើអ្នកចង់ចែករំលែកប្រវត្តិសារក្រុមជាមួយ <b>{name} <\\/b> និង <b>{other_name} <\\/b> មែនទេ?",
+  "membersInviteShareDescriptionMultiple": "តើអ្នកចង់ចែករំលែកប្រវត្តិសារក្រុមជាមួយ <b>{name} </b> និង <b>{count} អ្នកផ្សេងទៀត </b> មែនទេ?",
+  "membersInviteShareDescriptionTwo": "តើអ្នកចង់ចែករំលែកប្រវត្តិសារក្រុមជាមួយ <b>{name}</b> និង <b>{other_name}</b> មែនទេ?",
   "membersInviteShareMessageHistory": "ចែករំលែកប្រវត្តិសារ",
   "membersInviteShareNewMessagesOnly": "ចែករំលែកតែការផ្ញើសារថ្មី",
   "membersInviteTitle": "អញ្ជើញ",
@@ -522,7 +522,7 @@
   "messageRequestGroupInviteDescription": "ការផ្ញើសារទៅក្រុមនេះនឹងទទួលយកការអញ្ជើញក្រុមដោយស្វ័យប្រវត្តិ។",
   "messageRequestPending": "សំណើសុំសាររបស់អ្នក​នឹង​កំពុងរង់ចាំថ្មីៗនេះ។",
   "messageRequestPendingDescription": "អ្នក​នឹង​អាច​ផ្ញើសារសំឡេង និងឯកសារភ្ជាប់ បន្ទាប់ពី​អ្នក​ទទួល បាន​យល់ព្រមលើសំណើសារនេះ។",
-  "messageRequestYouHaveAccepted": "អ្នកបានទទួលយកការស្នើសុំសារពី <b>{name} ។",
+  "messageRequestYouHaveAccepted": "អ្នកបានទទួលយកការស្នើសុំសារពី <b>{name}</b> ។",
   "messageRequestsAcceptDescription": "ការផ្ញើសារទៅកាន់អ្នកប្រើរូបនេះនឹងទទួលយកសំណើសារ និងបង្ហាញ Account ID របស់អ្នកដោយស្វ័យប្រវត្តិ។",
   "messageRequestsAccepted": "បានទទួលយកការស្នើសុំសាររបស់អ្នករួចហើយ។",
   "messageRequestsClearAllExplanation": "តើអ្នកប្រាកដទេថាអ្នកចង់ជម្រះសំណើសារទាំងអស់ និងការអញ្ជើញក្រុម?",
@@ -531,7 +531,7 @@
   "messageRequestsDelete": "តើអ្នកប្រាកដទេថាចង់លុបសំណើសារនេះ?",
   "messageRequestsNew": "អ្នក​មាន​ការស្នើសុំ​សារ​ថ្មី​មួយ",
   "messageRequestsNonePending": "គ្មានការស្នើសុំដែលកំពុងរង់ចាំ",
-  "messageRequestsTurnedOff": "<b>{name}‍> បានបិទសំណើសំរាប់សារពីការសន្ទនារបស់ Community ដូច្នេះអ្នកមិនអាចផ្ញើសារទៅពួកគេបានទេ។",
+  "messageRequestsTurnedOff": "<b>{name}‍</b>បានបិទសំណើសំរាប់សរ ពីការតន្រនារប់ Community ដូច្នេះអន កមិអនាច្ញើសរ ទៅពក គេបន ទេ។",
   "messageSelect": "ជ្រើសរើសសារ",
   "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "បានបរាជ័យក្នុងការផ្ញើ",
@@ -687,7 +687,7 @@
   "recommended": "ដែលបានណែនាំ",
   "recoveryPasswordBannerDescription": "រក្សាទុក recovery password របស់អ្នក ដើម្បីដឹងថាអ្នកនឹងមិនបាត់បង់សិទ្ធិចូលទៅក្នុងគណនីរបស់អ្នកឡើយ។",
   "recoveryPasswordBannerTitle": "រក្សាទុកពាក្យសម្ងាត់ស្ដាររបស់អ្នក",
-  "recoveryPasswordDescription": "ប្រើពាក្យសម្ងាត់ដើម្បីទាញយកគណនីរបស់អ្នកលើឧបករណ៍ថ្មីៗ. <br /><br />គណនីរបស់អ្នកមិនអាចទាញយកកនឡើងវិញដោយគ្មាន Recovery Password។ សូមរក្សាវានៅកន្លែងសុវត្ថិភាព ហើយកុំចែករំលែកវាជាមួយនរណាម្នាក់ទេ។",
+  "recoveryPasswordDescription": "ប្រើពាក្យសម្ងាត់ដើម្បីទាញយកគណនីរបស់អ្នកលើឧបករណ៍ថ្មីៗ.<br/><br/>គណនីរបស់អ្នកមិនអាចទាញយកកនឡើងវិញដោយគ្មាន Recovery Password។ សូមរក្សាវានៅកន្លែងសុវត្ថិភាព ហើយកុំចែករំលែកវាជាមួយនរណាម្នាក់ទេ។",
   "recoveryPasswordEnter": "បញ្ចូល Recovery password របស់អ្នក",
   "recoveryPasswordErrorLoad": "មានកំហុសមួយកើតឡើងនៅពេលព្យាយាមផ្ទុកពាក្យសម្ងាត់ដំណើរការ៖<br/><br/>សូមបញ្ចូលកំណត់ហេតុរបស់អ្នក រួចផ្ញើឯកសារនៅតាមរយៈមជ្ឈមណ្ឌលជំនួយរបស់ Session ដើម្បីជួយដោះស្រាយបញ្ហានេះ។",
   "recoveryPasswordErrorMessageGeneric": "សូមពិនិត្យពាក្យសម្ងាត់ ស្តារអោយដូចដើម របស់អ្នក ហើយព្យាយាមម្តងទៀត។",
@@ -720,7 +720,7 @@
   "screenSecurity": "សុវត្ថិភាពអេក្រង់",
   "screenshotNotifications": "សេចក្ដីជូនដំណឹងផ្ទាំងថត",
   "screenshotNotificationsDescription": "ទាមទារការ ជូន​ដំណឹង នៅពេលទំនាក់ទំនងបានថតរូបអេក្រង់នៃការជជែកមួយទល់មួយ។",
-  "screenshotTaken": "<b>{name}‍> បានថតរូបថតអេក្រង់។",
+  "screenshotTaken": "<b>{name}‍</b>  បានថតរូបថតអេក្រង់។",
   "search": "ស្វែងរក",
   "searchContacts": "ស្វែងរកទំនាក់ទំនង",
   "searchConversation": "ស្វែងរកការសន្ទនា",
