--- a/_locales/kmr/messages.json
+++ b/_locales/kmr/messages.json
@@ -8,7 +8,7 @@
   "accountIdErrorInvalid": "Ev ID ya Hesabê hatî bixebiterin. Ji kerema xwe vegere û dubare biceribîne.",
   "accountIdOrOnsEnter": "IDya Hesabê an ONS binivîse",
   "accountIdOrOnsInvite": "Daxwazê Nasnameya Kontê bikî jan ONS",
-  "accountIdShare": "Hey, min {app_name} bi temamî taybetî û ewlekariyê ji bo sohbetê dikarim bikar bînim. Were bi min re be! ID hesabê min {br/><br/}{account_id}<br/><br/>Daxistina ji {session_download_url} ve bikin",
+  "accountIdShare": "Hey, min {app_name} bi temamî taybetî û ewlekariyê ji bo sohbetê dikarim bikar bînim. Were bi min re be! ID hesabê min <br/><br/>{account_id}<br/><br/>Daxistina ji {session_download_url} ve bikin",
   "accountIdYours": "ID Hesabê Te",
   "accountIdYoursDescription": "Ev ID ya Hesabê te ye. Bi karîdana pergale ya scan li ser vexbeşîte peyama te bişşe û şandina min.",
   "actualSize": "Mezinahiya eslî",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} asteng kir",
   "blockDescription": "Tu piştrast î ku tu dixwazî pêblok bike <b>{name}?</b> Bikarhênerên astengkirî nikarin daxwazên peyamê bişînin, nikaribin tu daxwazên li grûb bişînin an tu telefon bikin.",
   "blockUnblock": "Astengiyê rake",
-  "blockUnblockName": "Tu piştrast î ku dixwazî {name} asteng bikî?",
-  "blockUnblockNameMultiple": "Tu piştrast î ku dixwazî {name} û {count} yên din asteng bikî?",
-  "blockUnblockNameTwo": "Tu piştrast î ku dixwazî {name} û yek din asteng bikî?",
+  "blockUnblockName": "Tu piştrast î ku dixwazî <b>{name}</b> asteng bikî?",
+  "blockUnblockNameMultiple": "Tu piştrast î ku dixwazî <b>{name}</b> û <b>{count} yên din asteng bikî</b>?",
+  "blockUnblockNameTwo": "Tu piştrast î ku dixwazî <b>{name}</b> û yek din asteng bikî?",
   "blockUnblockedUser": "Astengî hate rakirin {name}",
   "call": "Bang",
   "callsCalledYou": "{name} telefonê te kir",
@@ -307,7 +307,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Peyamên were jêbirin piştrek dinîvîsandin.",
   "disappearingMessagesDisappearAfterSendState": "Di paşî şandinê de winda bibin - {time}",
   "disappearingMessagesFollowSetting": "Mîhenga Pêşbibîne",
-  "disappearingMessagesFollowSettingOff": "Peyamên te yên şandin bêne windabûn. Ma tu piştrasna nivîsandin wê bimîne winda?",
+  "disappearingMessagesFollowSettingOff": "Mesajên ku hûn dişînin dê êdî winda nebin. Ma tu bawer î ku dixwazî ​​peyamên windakirî <b>bêçalak</b> bikî?",
   "disappearingMessagesFollowSettingOn": "Hûn dixwazin peyamên xwe <b>{time}</b> <b>{disappearing_messages_type}</b> vê ve hilweşînin?",
   "disappearingMessagesLegacy": "{name} jî versonekî paşpor birêvebir dibe. Peyaman ku tine dibin dibe ku wekî ku mîjhêr in nedixirine.",
   "disappearingMessagesOnlyAdmins": "Tenê yên destê dixwazin vekirin",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>Te</b> û <b>{count} yên din</b> hate dawetin ku tevlî komê bibin.",
   "groupInviteYouAndOtherNew": "<b>Te</b> û <b>{other_name}</b> hatin dawetin ku tevlî komê bibin.",
   "groupLeave": "Komê Biterikîne",
-  "groupLeaveDescription": "Tu piştrast î ku tu dixwazî ji {group_name} derkevî?",
+  "groupLeaveDescription": "Tu piştrast î ku tu dixwazî ji <b>{group_name}</b> derkevî?",
   "groupLeaveDescriptionAdmin": "Tu piştrast î ku tu dixwazî ji <b>{group_name}</b> derkeve?<br/><br/>Ev dixwazî hemû endaman derxistîn û hemû naveroka komeyê jê reş dikirin.",
   "groupLeaveErrorFailed": "Têbînete cavaniyên {group_name}",
   "groupLegacyBanner": "Komên ku westîna nûvekirinê hene, koma nû biafirîne. Karûbarî grûpa kevn vê sererast be dê hertir bimeşine ji vira {date}.",
@@ -478,7 +478,7 @@
   "linkPreviewsSend": "Pêşniyazên Linkê Bişîne",
   "linkPreviewsSendModalDescription": "Tu himaya metadatâya kesanehin di peyama bikevin di herela peyama bikar an peyam bikar an nebesıkra.",
   "linkPreviewsTurnedOff": "Pêşdîtinên Lînkan Vê Girtî",
-  "linkPreviewsTurnedOffDescription": "{app_name} divê bi malperan re veberdayîvan bike da ku pêşdîtinên lînkan çêke yim bixwe. <br/<br/>Tu dikarî wan di mîhengan {app_name}'s de bixebitîne.",
+  "linkPreviewsTurnedOffDescription": "{app_name} divê bi malperan re veberdayîvan bike da ku pêşdîtinên lînkan çêke yim bixwe. <br/><br/>Tu dikarî wan di mîhengan {app_name}'s de bixebitîne.",
   "loadAccount": "Hesaba Bar dike",
   "loadAccountProgressMessage": "Hesabê te bar dike",
   "loading": "Bar dibe...",
@@ -518,7 +518,7 @@
   "messageNewDescriptionMobile": "Bi navê hesabê hevalê xwe Account ID, ONS an scanê QR code-yê têlepeqîne.",
   "messageNewYouveGot": "{count, plural, one [Tu peyama nûyeke hatî gotandî hiştî.] other [# peyama nû hîn tuneyê.]}",
   "messageReplyingTo": "Cewab didî",
-  "messageRequestGroupInvite": "<b>{name}</b> ew {group_name} da te dawet kir ku te tevî wê bibî.",
+  "messageRequestGroupInvite": "<b>{name}</b> ew <b>{group_name}</b> da te dawet kir ku te tevî wê bibî.",
   "messageRequestGroupInviteDescription": "Şandina mesajeyek ji vî kobîberekê wê bi otomatîkî davetnameya koma qebûl bike.",
   "messageRequestPending": "Te jîrêbandeya we yê dengşîf bike.",
   "messageRequestPendingDescription": "Tu dikarî peyamên dengî û pelan bişînî dema ku wergirtinî we daxwaza peyamezan qebûl bike.",
