--- a/_locales/kn/messages.json
+++ b/_locales/kn/messages.json
@@ -128,8 +128,8 @@
   "blockDescription": "ನೀವು ಖಚಿತವಾಗಿ <b>{name}</b>ನ್ನು ತಡೆಯಲು ಬಯಸುವಿರಾ? ತಡೆಮಾಡಿದ ಬಳಕೆದಾರರು ನಿಮಗೆ ಸಂದೇಶ ವಿನಂತಿಗಳನ್ನು, ಗುಂಪು ಆಹ್ವಾನವನ್ನು ಕಳುಹಿಸಲು ಅಥವಾ ನಿಮಗೆ ಕರೆಮಾಡಲು ಸಾಧ್ಯವಿಲ್ಲ.",
   "blockUnblock": "ಅನ್‌ಬ್ಲಾಕ್",
   "blockUnblockName": "ನೀವು {name} ಅನ್ನು ಅನ್‌ಬ್ಲಾಕ್ ಮಾಡಲು ಖಚಿತವಾಗಿದ್ದೀರಾ?",
-  "blockUnblockNameMultiple": "ನೀವು {name} ಮತ್ತು {count} ಇತರರನ್ನು ಅನ್‌ಬ್ಲಾಕ್ ಮಾಡಲು ಖಚಿತವಾಗಿದ್ದೀರಾ?",
-  "blockUnblockNameTwo": "ನೀವು {name} ಮತ್ತು 1 ಇತರರನ್ನು ಅನ್‌ಬ್ಲಾಕ್ ಮಾಡಲು ಖಚಿತವಾಗಿದೆಯ?",
+  "blockUnblockNameMultiple": "ನೀವು <b>{name}</b> ಮತ್ತು <b>{count}</b> ಇತರರನ್ನು ಅನ್‌ಬ್ಲಾಕ್ ಮಾಡಲು ಖಚಿತವಾಗಿದ್ದೀರಾ?",
+  "blockUnblockNameTwo": "ನೀವು <b>{name}</b> ಮತ್ತು 1 ಇತರರನ್ನು ಅನ್‌ಬ್ಲಾಕ್ ಮಾಡಲು ಖಚಿತವಾಗಿದೆಯ?",
   "blockUnblockedUser": "{name} ಅನ್ಬ್ಲಾಕ್ ಮಾಡಿದನು",
   "call": "ಕರೆ",
   "callsCalledYou": "{name} ನಿಮಗೆ ಕರೆಮಾಡಿದ್ದಾರೆ",
@@ -426,8 +426,8 @@
   "groupPromotedYou": "<b>ನೀವು</b> ನಿರ್ವಾಹಕರಾಗಿ ಬಡ್ತಿ ಪಡೆದಿದ್ದೀರಿ.",
   "groupPromotedYouMultiple": "<b>ನೀವು</b> ಮತ್ತು <b>{count} ಇತರರು</b> ನಿರ್ವಾಹಕರಾಗಿ ಬಡ್ತಿ ಪಡೆದಿದ್ದಾರೆ.",
   "groupPromotedYouTwo": "<b>ನೀವು</b> ಮತ್ತು <b>{name}</b> ನಿರ್ವಾಹಕರಾಗಿ ಬಡ್ತಿ ಪಡೆದಿದ್ದಾರೆ.",
-  "groupRemoveDescription": "ನೀವು {name} {group_name} ನಿಂದ ತೆಗೆದುಹಾಕಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
-  "groupRemoveDescriptionMultiple": "ನೀವು {name} ಮತ್ತು <b>{count} ಇತರರನ್ನು</b> {group_name} ನಿಂದ ತೆಗೆದುಹಾಕಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
+  "groupRemoveDescription": "ನೀವು <b>{name}</b> <b>{group_name}</b> ನಿಂದ ತೆಗೆದುಹಾಕಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
+  "groupRemoveDescriptionMultiple": "ನೀವು <b>{name}</b> ಮತ್ತು <b>{count} ಇತರರನ್ನು</b> <b>{group_name}</b> ನಿಂದ ತೆಗೆದುಹಾಕಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
   "groupRemoveDescriptionTwo": "ನೀವು <b>{name}</b> ಮತ್ತು <b>{other_name}</b> <b>{group_name}</b> ನಿಂದ ತೆಗೆದುಹಾಕಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
   "groupRemoveMessages": "{count, plural, one [ಬಳಕೆದಾರರನ್ನು ಮತ್ತು ಅವರ ಸಂದೇಶಗಳನ್ನು ತೆಗೆದುಹಾಕಿ] other [ಬಳಕೆದಾರರನ್ನು ಮತ್ತು ಅವರ ಸಂದೇಶಗಳನ್ನು ತೆಗೆದುಹಾಕಿ]}",
   "groupRemoveUserOnly": "{count, plural, one [ಬಳಕೆದಾರರನ್ನು ತೆಗೆದುಹಾಕಿ ] other [ಬಳಕೆದಾರರನ್ನು ತೆಗೆದುಹಾಕಿ]}",
@@ -499,8 +499,8 @@
   "membersInvite": "ಸಂಪರ್ಕಗಳನ್ನು ಆಮಂತ್ರಿಸಿ",
   "membersInviteSend": "{count, plural, one [ಹಿನ್ನೆಲೆ ಬಳಸಿ ಆಮಂತ್ರಣ ಕಳುಹಿಸಿ] other [ಆಮಂತ್ರಣಗಳನ್ನು ಕಳುಹಿಸಿ]}",
   "membersInviteShareDescription": "ನೀವು <b>{name}</b> ಜೊತೆ ಗುಂಪಿನ ಸಂದೇಶದ ಇತಿಹಾಸವನ್ನು ಹಂಚಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
-  "membersInviteShareDescriptionMultiple": "ನೀವು ಗುಂಪಿನ ಸಂದೇಶದ ಹಳೆ ಇತಿಹಾಸವನ್ನು {name} ಮತ್ತು <b>{count} ಇತರರಿಗೆ</b> ಹಂಚಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
-  "membersInviteShareDescriptionTwo": "ನೀವು ಗುಂಪಿನ ಸಂದೇಶದ ಇತಿಹಾಸವನ್ನು {name} ಮತ್ತು {other_name} ನೊಂದಿಗೆ ಹಂಚಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
+  "membersInviteShareDescriptionMultiple": "ನೀವು ಗುಂಪಿನ ಸಂದೇಶದ ಹಳೆ ಇತಿಹಾಸವನ್ನು <b>{name}</b> ಮತ್ತು <b>{count} ಇತರರಿಗೆ</b> ಹಂಚಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
+  "membersInviteShareDescriptionTwo": "ನೀವು ಗುಂಪಿನ ಸಂದೇಶದ ಇತಿಹಾಸವನ್ನು <b>{name}</b> ಮತ್ತು <b>{other_name}</b> ನೊಂದಿಗೆ ಹಂಚಲು ಇಚ್ಛಿಸುತ್ತೀರಾ?",
   "membersInviteShareMessageHistory": "ಸಂದೇಶ ಇತಿಹಾಸವನ್ನು ಹಂಚಿಕೊಳ್ಳಿ",
   "membersInviteShareNewMessagesOnly": "ಹೊಸ ಸಂದೇಶಗಳನ್ನು ಮಾತ್ರ ಹಂಚಿಕೊಳ್ಳಿ",
   "membersInviteTitle": "ಆಮಂತ್ರಿಸಿ",
@@ -696,7 +696,7 @@
   "recoveryPasswordErrorTitle": "ಪುನಃಪಡೆಯಲು ಪಾಸ್ವರ್ಡ್ ತಪ್ಪಾಗಿದೆ",
   "recoveryPasswordExplanation": "ನಿಮ್ಮ ಅಕೌಂಟ್ ಅನ್ನು ಲೋಡ್ ಮಾಡಲು, ನಿಮ್ಮ ರಿಕವರಿ ಪಾಸ್ವರ್ಡ್ ನಮೂದಿಸಿ.",
   "recoveryPasswordHidePermanently": "ಪುನಃಪಡೆಯಲು ಪಾಸ್ವರ್ಡ್ ಶಾಶ್ವತವಾಗಿ ಮರೆಮಾಡಿ",
-  "recoveryPasswordHidePermanentlyDescription1": "ನಿಮ್ಮ ಪಟ ಕಾಣು ಪಾಸ್ವರ್ಡ್ ಇಲ್ಲದೆ, ನೀವು ನಿಮ್ಮ ಖಾತೆಯನ್ನು ಹೊಸ ಸಾಧನಗಳಲ್ಲಿ ಲೋಡ್ಗೆ ಮಾಡಲಾಗುವುದಿಲ್ಲ. <br />ದಯವಿಟ್ಟು ನಿಮ್ಮ ಪಟ ಕಾಣು ಪಾಸ್ವರ್ಡ್ ಅನ್ನು ಸುರಕ್ಷಿತ ಸ್ಥಳದಲ್ಲಿ ಉಳಿಸಿ ಮುಂದುವರಿಯಲು.",
+  "recoveryPasswordHidePermanentlyDescription1": "ನಿಮ್ಮ ಪಟ ಕಾಣು ಪಾಸ್ವರ್ಡ್ ಇಲ್ಲದೆ, ನೀವು ನಿಮ್ಮ ಖಾತೆಯನ್ನು ಹೊಸ ಸಾಧನಗಳಲ್ಲಿ ಲೋಡ್ಗೆ ಮಾಡಲಾಗುವುದಿಲ್ಲ.<br/><br/>ದಯವಿಟ್ಟು ನಿಮ್ಮ ಪಟ ಕಾಣು ಪಾಸ್ವರ್ಡ್ ಅನ್ನು ಸುರಕ್ಷಿತ ಸ್ಥಳದಲ್ಲಿ ಉಳಿಸಿ ಮುಂದುವರಿಯಲು.",
   "recoveryPasswordHidePermanentlyDescription2": "ನೀವು ಈ ಸಾಧನದಲ್ಲಿ ನಿಮ್ಮ ಪುನಃ ಪಡೆಯುವ ರಹಸ್ಯ ಪದವನ್ನು ಶಾಶ್ವತವಾಗಿ ಮರೆಮಾಡಲು ಖಚಿತವಾಗಿದ್ದೀರಾ? ಇದನ್ನು ರದ್ದುಮಾಡಲಾಗುವುದಿಲ್ಲ.",
   "recoveryPasswordHideRecoveryPassword": "ಪುನಃಪಡೆಯಲು ಪಾಸ್ವರ್ಡ್ ಮರೆಮಾಡಿ",
   "recoveryPasswordHideRecoveryPasswordDescription": "ನೀವು ನಿಮ್ಮ ಪುನಃಪ್ರಾಪ್ತಿ ಪಾಸ್ವರ್ಡನ್ನು ಈ ಸಾಧನದ ಮೇಲೆ ಶಾಶ್ವತವಾಗಿ ಮರೆಯಾಗಿಸಲು ಇಚ್ಛಿಸುತ್ತೀರಾ.",
