--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -30,7 +30,7 @@
   "adminRemoveAsAdmin": "관리자에서 제거",
   "adminRemoveCommunityNone": "이 커뮤니티에 관리자가 없습니다.",
   "adminRemoveFailed": "{name}님을 관리자로 제거하지 못했습니다.",
-  "adminRemoveFailedMultiple": "{name} 님과 {count} 명의 사람들의 관리자 직책을 제거하지 못했습니다.",
+  "adminRemoveFailedMultiple": "<b>{name}</b> 님과 <b>{count}</b> 명의 사람들의 관리자 직책을 제거하지 못했습니다.",
   "adminRemoveFailedOther": "<b>{name}</b>님과 <b>{other_name}</b>님의 관리자 직책을 제거하지 못했습니다.",
   "adminRemovedUser": "<b>{name}님</b>이 관리자에서 제거되었습니다.",
   "adminRemovedUserMultiple": "<b>{name}</b>님과 <b>{count} 명의 사람들</b>의 관리자 직책이 제거되었습니다",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} 차단됨",
   "blockDescription": "Are you sure you want to block <b>{name}?</b> Blocked users cannot send you message requests, group invites or call you.",
   "blockUnblock": "차단 해제",
-  "blockUnblockName": "정말 {name}의 차단을 해제할까요?",
-  "blockUnblockNameMultiple": "정말 {name}과 {count}명의 차단을 해제하시겠습니까?",
-  "blockUnblockNameTwo": "정말 {name}과 1명의 차단을 해제하시겠습니까?",
+  "blockUnblockName": "정말 <b>{name}</b>의 차단을 해제할까요?",
+  "blockUnblockNameMultiple": "정말 <b>{name}</b>과 <b>{count}</b>명의 차단을 해제하시겠습니까?",
+  "blockUnblockNameTwo": "정말 <b>{name}</b>과 1명의 차단을 해제하시겠습니까?",
   "blockUnblockedUser": "{name} 차단 해제",
   "call": "전화걸기",
   "callsCalledYou": "{name} 님의 전화",
@@ -398,7 +398,7 @@
   "groupInviteYouAndMoreNew": "<b>당신</b>과 <b>{count}명</b>이 그룹에 참여했습니다.",
   "groupInviteYouAndOtherNew": "<b>당신</b>과 <b>{other_name}님</b>이 그룹에 참여했습니다.",
   "groupLeave": "그룹 나가기",
-  "groupLeaveDescription": "{group_name}에서 나가시겠습니까?",
+  "groupLeaveDescription": "<b>{group_name}</b>에서 나가시겠습니까?",
   "groupLeaveDescriptionAdmin": "<b>{group_name}</b> 그룹을 탈퇴하시겠습니까?<br/><br/>이 작업은 모든 멤버를 제거하고 그룹 콘텐츠를 삭제합니다.",
   "groupLeaveErrorFailed": "{group_name}을(를) 떠날 수 없습니다.",
   "groupLegacyBanner": "그룹이 업그레이드되었습니다. 새 그룹을 생성하여 업그레이드하세요. 오래된 그룹 기능은 {date} 이후로 저하될 것입니다.",
