--- a/_locales/ku/messages.json
+++ b/_locales/ku/messages.json
@@ -16,8 +16,8 @@
   "adminCannotBeRemoved": "ناتوانرێ بەڕێوەبەران لابدرنەوە.",
   "adminMorePromotedToAdmin": "<b>{name}</b> و <b>{count} کەس دیکە</b> بە بەڕێوەبەر هەڵبژێردران.",
   "adminPromote": "پەرەبەندەکان پەرەبکەرەوە",
-  "adminPromoteDescription": "دڵنیایت دەتەوێت <b>{name} بەرز بکەیت بۆ ئەدمین؟ زانیاریەکان ناتوانن بڕداریبن.",
-  "adminPromoteMoreDescription": "دڵنیایت دەتەوێت <b>{name} و <b>{count} ئەندامان</b> بەرز بکەیت بۆ ئەدمین؟ زانیاریەکان ناتوانن بڕдарыبن.",
+  "adminPromoteDescription": "دڵنیایت دەتەوێت <b>{name}</b> بەرز بکەیت بۆ ئەدمین؟ زانیاریەکان ناتوانن بڕداریبن.",
+  "adminPromoteMoreDescription": "Ma hûn pê bawer in ku hûn dixwazin <b>{name}</b> û <b>{count} kesên din</b> ji rêveberiyê re pêşve bibin? Rêvebir nayê rakirin.",
   "adminPromoteToAdmin": "پەرەکردن بۆ پەرەبەندە",
   "adminPromoteTwoDescription": "دڵنیایت دەتەوێت <b>{name}</b> و <b>{other_name}</b> بەرز بکەیت بۆ ئەدمین؟ زانیاریەکان ناتوانن بڕداریبن.",
   "adminPromotedToAdmin": "<b>{name}</b> بە بەڕێوەبەر هەڵبژێردرا.",
@@ -61,7 +61,7 @@
   "attachmentsAlbumUnnamed": "ئه‌لبومى بێناو",
   "attachmentsAutoDownload": "بە شێوەی خۆکار هاوپێچەكان دابەزاندن",
   "attachmentsAutoDownloadDescription": "بە شێوەی خۆکار میدیە و فایلەکان لەو چەتە دەبەزاندن.",
-  "attachmentsAutoDownloadModalDescription": "ئایا دەتەوێت هەموو فایلەکان خۆکارانە دابەزەنەوە لە {conversation_name}؟",
+  "attachmentsAutoDownloadModalDescription": "ئایا دەتەوێت هەموو فایلەکان خۆکارانە دابەزەنەوە لە <b>{conversation_name}</b>؟",
   "attachmentsAutoDownloadModalTitle": "بەشی هەڵەپشانەوە خۆکار",
   "attachmentsClearAll": "پاکردنەوەی هەموو هاوپێچەکان",
   "attachmentsClearAllDescription": "دڵنیایت بۆ سڕینەوەی هەموو هاوپێچەکان؟ نامەکان بەم هاوپێچەکانیش پاش سڕدرێتەوە.",
@@ -178,7 +178,7 @@
   "clearDeviceDescription": "دڵنیایت لە ڕازکەی دەرەستە ؟",
   "clearDeviceOnly": "تەنها سڕینەوەی ئامێرە",
   "clearMessages": "سڕینەوەی هەموو پەیامەکان",
-  "clearMessagesChatDescription": "دڵنیایت لە پەیوەندی (پەیامەکان) هەموو پەیوەندیدەکان لە بەردەساتەوە <b>{name}?nderav?",
+  "clearMessagesChatDescription": "دڵنیایت لە پەیوەندی (پەیامەکان) هەموو پەیوەندیدەکان لە بەردەساتەوە <b>{name}</b>?",
   "clearMessagesCommunity": "دڵنیایت لە پاککردنەوەی هەموو پەیامەکانی <b>{community_name}</b> له ئامێرەکەت؟",
   "clearMessagesForEveryone": "سڕینەوە بۆ هەمووان",
   "clearMessagesForMe": "سڕینەوە بۆ خودم",
@@ -317,7 +317,7 @@
   "disappearingMessagesTimer": "کاژێر",
   "disappearingMessagesTurnedOff": "<b>{name}</b> پەیامەکانی دەبەرەنەوەی. پەیامەکانیان دواتر ناباشرێت.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> پەیام دەسڕێنەوەی <b>ناچالاک کرد</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>تۆ</b> پەیامەکانی دەبەرەنەوەی چالاککردن. پەیامەکانت دواتر ناباشرێت.",
+  "disappearingMessagesTurnedOffYou": "<b>Te</b> peyamên wendabûyî <b>xebitî</b>. Mesajên ku hûn dişînin dê êdî winda nebin.",
   "disappearingMessagesTurnedOffYouGroup": "<b>تۆ</b> پەیام دەسڕێنەوەی <b>ناچالاک کرد</b>.",
   "disappearingMessagesTypeRead": "خوێندن",
   "disappearingMessagesTypeSent": "نارد",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>تۆ</b> و <b>{count} کەس دیکە</b> بانگکران بۆ بەشداریکردن لە گروپەکە.",
   "groupInviteYouAndOtherNew": "<b>تۆ</b> و <b>{other_name}</b> بانگکران بۆ بەشداریکردن لە گروپەکە.",
   "groupLeave": "بڕانە گرووپە",
-  "groupLeaveDescription": "دڵنیایت دەتەوێت لە {group_name} بڕی؟",
+  "groupLeaveDescription": "دڵنیایت دەتەوێت لە <b>{group_name}</b> بڕی؟",
   "groupLeaveDescriptionAdmin": "دڵنیایت دەتەوێت مەڵحقەت ببەی تەواوی <b>{group_name}</b>?<br/><br/>ئەمە لە هەموو ئەندامەکان جێستەک دەبات و هەموو ناوەراسەکانی گروپ دەسڕێنەوە.",
   "groupLeaveErrorFailed": "نەتوانرا لاتەوێ بۆ {group_name}",
   "groupLegacyBanner": "گروپەکان نوێکرانەوە، گروپی نوێ دروست بکە بۆ نوێکردنەوە. کار کردی گروپی کهن دابەش دەبێت لە {date}دا.",
@@ -478,7 +478,7 @@
   "linkPreviewsSend": "ناردنی پێشینەی بەستەر",
   "linkPreviewsSendModalDescription": "تۆ ناوەڕستی پرۆتێکشنی مەتا دەرنەبەخشن کاتێک بێجەی ئەگەرەکان.",
   "linkPreviewsTurnedOff": "پێنمای بارێنە کڵاوە",
-  "linkPreviewsTurnedOffDescription": "{app_name} پێویستە پەیوەندی بکات بە فێییبوک بە یارمەتیدانی بیاندوورگاهای کۆبوووەی ئاماژی بوو لە {app_name} دەرئاوەی پرۆفیلەکانت.",
+  "linkPreviewsTurnedOffDescription": "Divê {app_name} bi malperên girêdayî re têkilî dayne da ku pêşdîtinên girêdanên ku hûn dişînin û distînin çêbikin.<br/><br/> Hûn dikarin wan di mîhengên {app_name} de çalak bikin.",
   "loadAccount": "بارکردنی ئەکاونت",
   "loadAccountProgressMessage": "بارکردنی ئەکاونت",
   "loading": "...بارکردن",
