--- a/_locales/lg/messages.json
+++ b/_locales/lg/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Blocked {name}",
   "blockDescription": "Oli mbanankubye <b>{name} </b>? Abanankubize tebayinza kusindikidde obubaka, obubaka bw'ekibinja oba okubakubira simu.",
   "blockUnblock": "Sazaamu",
-  "blockUnblockName": "Oli mukakafu nti oyagala okusumulula {name}?",
-  "blockUnblockNameMultiple": "Oli mukakafu nti oyagala okusumulula {name} ne {count} abalala?",
-  "blockUnblockNameTwo": "Oli mukakafu nti oyagala okusumulula {name} ne omu omulala?",
+  "blockUnblockName": "Oli mukakafu nti oyagala okusumulula <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Oli mukakafu nti oyagala okusumulula <b>{name}</b> ne <b>{count} abalala</b>?",
+  "blockUnblockNameTwo": "Oli mukakafu nti oyagala okusumulula <b>{name}</b> ne omu omulala?",
   "blockUnblockedUser": "Ozeemu {name}",
   "call": "Call",
   "callsCalledYou": "{name} yakusimbyeyo",
@@ -307,7 +307,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Obubaka bweri seriimo",
   "disappearingMessagesDisappearAfterSendState": "Kendeera lyoke atonde - {time}",
   "disappearingMessagesFollowSetting": "Goberera Setingi",
-  "disappearingMessagesFollowSettingOff": "Obubaka bwetuumukiridde obwenva mu kukyuka. Oyagala okyusibako obubaka bwokka obumenyeenyize kati?",
+  "disappearingMessagesFollowSettingOff": "Ujumbe unaotuma hautatoweka tena. Je, una uhakika unataka kuzima <b>jumbe</b> zinazotoweka?",
   "disappearingMessagesFollowSettingOn": "Tereka obubaka bwo okubyesanga <b>{time}</b> nga bwayambe <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} akoze ekilamu ekikontana. Obubaka oba butuukirira bunakolagana bulungi nga bwekitegerekebwa.",
   "disappearingMessagesOnlyAdmins": "Bwamalirizibwa nga abakulu bokka basobola kino",
