--- a/_locales/lo/messages.json
+++ b/_locales/lo/messages.json
@@ -9,19 +9,19 @@
   "actualSize": "ຂະໜາດທີ່",
   "add": "ເພີ່ມ",
   "adminCannotBeRemoved": "ຜູ້ຄຸ້ມການບໍ່ສາມາດຖຶກຖອນໄດ້.",
-  "adminMorePromotedToAdmin": "<b>{name}</b> ແລະ <b>{count} \",",
+  "adminMorePromotedToAdmin": "<b>{name}</b> ແລະ <b>{count}</b> \",",
   "adminPromoteDescription": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຈະຍ້າຍເຢັນໄປໃຫ້ <b>{name}</b>? ຄວາມສາມາດບໍ່ອາດຖືກຢຽບເມືອນ.",
   "adminPromoteMoreDescription": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຈະຍ້າຍເຢັນໄປໃຫ້ <b>{name}</b> ແລະ <b>{count} ຫຼາຍເພື່ອນ</b>? ຄວາມສາມາດບໍ່ອາດຖືກຢຽບເມືອນ.",
   "adminPromoteTwoDescription": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຈະຍ້າຍເຢັນໄປໃຫ້ <b>{name}</b> ແລະ <b>{other_name}</b>? ຄວາມສາມາດບໍ່ອາດຖືກຢຽບເມືອນ.",
-  "adminPromotedToAdmin": "<b>{name}ໄດ້ຮັບການແຕັຄອດເປັນAdmin.",
+  "adminPromotedToAdmin": "<b>{name}</b>ໄດ້ຮັບການແຕັຄອດເປັນAdmin.",
   "adminPromotionFailed": "ການເສຍຄຳສັ້ນເລືອດເວົງ",
   "adminPromotionFailedDescription": "ເອີ້ ລົ້ມເຫລວໃນການສົ່ງໃສ່ {name} ເຂົ້າ {group_name}",
   "adminPromotionFailedDescriptionMultiple": "ບໍ່ສາມາດທຳການປູກມຫຼາຍມະຈູກ {name} ແລະ {count} ອືນໆຫາ {group_name}",
   "adminPromotionFailedDescriptionTwo": "ບໍສາມາດທຳການປູກມະຈິກ {name} ແລະ {other_name} ຫາ {group_name}",
   "adminPromotionSent": "ການ​ຍ້ອງ​ສົ່ງ​ໄປ​ແລ້ວ",
-  "adminRemovedUser": "<b>{name}ແມ່ນໄດ້ຖືກລຶບເຖິງAdmin.",
+  "adminRemovedUser": "<b>{name}</b>ແມ່ນໄດ້ຖືກລຶບເຖິງAdmin.",
   "adminSettings": "ການຕັ້ງຄ່າຂອງ​ຜູ້ຄຸ້ມຄອງ",
-  "adminTwoPromotedToAdmin": "<b>{name}และ<b>{other_name}ໄດ້ຮັບການເລື່ອນຊັ້ນເປັນAdmin.",
+  "adminTwoPromotedToAdmin": "<b>{name}</b> และ<b>{other_name}</b> ໄດ້ຮັບການເລື່ອນຊັ້ນເປັນAdmin.",
   "anonymous": "ບໍ່ຮູ້ຈັກ",
   "appearanceAutoDarkMode": "ໂໂມດມືດອັດຕະໂນມັດ",
   "appearanceLanguageDescription": "ເລືອກຕັ້ງຄ່າພາສາຂອງທ່ານສຳຫຼັບ {app_name}. {app_name} ຈະຟື້ນຄືນໃໝ່ເມື່ອທ່ານປ່ຽນຕັ້ງຄ່າພາສາ.",
@@ -59,9 +59,9 @@
   "block": "ຫ້າມ",
   "blockBlockedUser": "ຫ້າມ {name}",
   "blockDescription": "ທ່ານຕ້ອງຍອມຮັບທີ່ຈະບລອກ <b>{name}</b>? ຜູ້ໃຊ້ທີ່ຖືກບລອກຈະບໍ່ສາມາດສົ່ງ, ການຂໍສົງຂໍ້ຄວາມທ່ານ, ການເຊີນຄຳເຊີນກຸ່ມຫຼືໂທຫາທ່ານໄດ້.",
-  "blockUnblockName": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຈະຍ້ງປ່ອຍ {name}?",
-  "blockUnblockNameMultiple": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຈະຍ້ງປ່ອຍ {name} ແລະ {count} ໂຄງການ?",
-  "blockUnblockNameTwo": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຈະຍ້ງປ່ອຍ {name} ແລະ Lagi 1",
+  "blockUnblockName": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຈະຍ້ງປ່ອຍ <b>{name}</b>?",
+  "blockUnblockNameMultiple": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຈະຍ້ງປ່ອຍ <b>{name}</b> ແລະ <b>{count} ໂຄງການ</b>?",
+  "blockUnblockNameTwo": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຈະຍ້ງປ່ອຍ <b>{name}</b> ແລະ Lagi 1",
   "call": "ໂທ",
   "callsCalledYou": "{name} ໂທຫາເຈົ້າ",
   "callsConnecting": "ຫລາຍເເຂບພາຍໃສ່...",
@@ -134,7 +134,7 @@
   "deleteAfterGroupPR1BlockThisUser": "ຫ້າມຜູ້ນັກນັບນີ້",
   "deleteAfterGroupPR1BlockUser": "ຫ້າມຜູ້ນັກ",
   "deleteAfterGroupPR3GroupErrorLeave": "ບໍ່ສາມາດອອກໄດ້ໃນຂະນະນີ້ທ່ານກໍາລັງເພີ່ມຫຼຶລົບສະມາຊິກ.",
-  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}ໄດ້ກຳນົດລະຍະເວລາໃນການຂໍແກ້ຂອງຂໍ້ຄາບຊ່ວງທ່ານ{time} ",
+  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b>ໄດ້ກຳນົດລະຍະເວລາໃນການຂໍແກ້ຂອງຂໍ້ຄາບຊ່ວງທ່ານ<b>{time}</b> ",
   "deleteMessageConfirm": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການລຶບຂໍ້ຄວາມນີ້?",
   "deleteMessageDescriptionDevice": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການລຶບຂໍ້ຄວາມນີ້ຂອງຕ່າງອຸປະກອນນີ້ເທົ່ານັ້ນ?",
   "deleteMessageDescriptionEveryone": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການລຶບຂໍ້ຄວາມນີ້ກັບທຸກຄົນ?",
@@ -153,9 +153,9 @@
   "disappearingMessagesDisappearAfterRead": "ສະບາຍພັງຫລັງອ່ານ",
   "disappearingMessagesDisappearAfterSend": "ສະບາຍພັງຫລັງສົ່ງ",
   "disappearingMessagesLegacy": "{name} ໃຊ້ລູກຄ້າເກົ່າ. ຂໍ້ຄວາມທີ່ຫາຍໄປອາດບໍ່ໄດ້ເຮັດຕາມຄາດຄະເນ.",
-  "disappearingMessagesSet": "<b>{name}has set messages to disappear {time} after they have been {disappearing_messages_type}.",
+  "disappearingMessagesSet": "<b>{name}</b> has set messages to disappear {time} after they have been {disappearing_messages_type}.",
   "disappearingMessagesSetYou": "<b>ທ່ານ</b>ໄດ້ກຳນົດຂໍ້ຄວາມໃຫ້ຫມົດໄປ{time}ຫລັງທີ່ເຂົ້າໃຊ້ແລ້ວ {disappearing_messages_type}.",
-  "disappearingMessagesTurnedOff": "<b>{name}has turned disappearing messages off. Messages they send will no longer disappear.",
+  "disappearingMessagesTurnedOff": "<b>{name}</b> has turned disappearing messages off. Messages they send will no longer disappear.",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> ອັບເດດການຕັ້ງຄ່າຂໍ້ຄວາມທີ່ຫາຍໄປ.",
   "disappearingMessagesUpdatedYou": "<b>ທ່ານ</b>ທຼັບປະມານການດູແລຫາຍໄປຂອງຂໍ້ຄວາມ.",
   "dismiss": "ປະຘັດປະເລືອກ",
@@ -187,32 +187,32 @@
   "groupInviteFailedTwo": "ບໍ່ສາມາດຊອນ {name} ແລະ {other_name} ເຂົ້າຫາ {group_name}",
   "groupInviteFailedUser": "ບໍ່ສາມາດຊົນ {name} ເຂົ້າຫາ {group_name}",
   "groupInviteYou": "<b>ທ່ານ</b>ໄດ້ຖືກຊັ້ນເຊີນເຂົ້າຖານຊາດ.",
-  "groupLeaveDescription": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການອອກຈາກ {group_name}?",
+  "groupLeaveDescription": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການອອກຈາກ <b>{group_name}</b>?",
   "groupLeaveErrorFailed": "ບໍ່ສາມາດອອກຈາກ {group_name}",
   "groupMemberLeft": "<b>{name}ອອກຈາກກຸ່ມ.",
   "groupMemberLeftMultiple": "<b>{name}</b> ແລະ <b>{count} \",",
-  "groupMemberLeftTwo": "<b>{name}และ<b>{other_name}ออกจากກຸ່ມ.",
+  "groupMemberLeftTwo": "<b>{name}</b>และ<b>{other_name}</b>ออกจากກຸ່ມ.",
   "groupMemberNew": "<b>{name}ເຂົ້າຮ່ວມກຸ່ມ.",
   "groupMemberYouLeft": "<b>ທ່ານ</b>ອອກຈາກກຸ່ມ.",
   "groupNameEnter": "ປ້ອນຊື່ກຸ່ມ",
   "groupPromotedYou": "<b>ທ່ານ</b>ໄດ້ຮັບການເລື່ອນຊັ້ນການຄຸ້ມຄອງ.",
   "groupRemoved": "<b>{name}ໄດ້ຖືກລຶບອອກຈາກກຸ່ມ.",
-  "groupRemovedMultiple": "<b>{name}</b> ແລະ <b>{count} \",",
-  "groupRemovedTwo": "<b>{name}และ<b>{other_name}ໄດ້ຖືກລຶບອອກຈາກກຸ່ມ.",
+  "groupRemovedMultiple": "<b>{name}</b> ແລະ <b>{count}</b>",
+  "groupRemovedTwo": "<b>{name}</b>และ<b>{other_name}</b>ໄດ້ຖືກລຶບອອກຈາກກຸ່ມ.",
   "helpReportABugExportLogs": "ສົ່ງຂໍ້ຄວາມບັກ",
   "helpReportABugExportLogsDescription": "ສົ່ງຂໍ້ມູນຂອງທ່ານ, ແລ້ວດາວໂຫຼດໄຟລຜ່ານທາງโต๊ะຊ່ວຍເຫຼືອຂອງ {app_name}.",
-  "legacyGroupMemberNewMultiple": "<b>{name}</b> ແລະ <b>{count} \",",
+  "legacyGroupMemberNewMultiple": "<b>{name}</b> ແລະ <b>{count}</b> ",
   "legacyGroupMemberTwoNew": "<b>{name}</b> ແລະ <b>{other_name}</b> \",",
   "linkPreviewsEnable": "ເປີດການພິມລິ້ງເບິ່ງກ່ອນ",
   "linkPreviewsTurnedOffDescription": "{app_name} ຕ້ອງຕິດຕໍ່ກັບເວັບໄຊທ໌ທີ່ເຊື່ອມໂຍງເພື່ອສ້າງຮູບພາບພາບຢ່າງລະອຽດຂອງການລະດົມທີ່ເຈົ້າສົ່ງແລະຮັບ.<br/><br/>ປິດເຄື່ອງທີ່ຕັ້ງຂອງ {app_name} ໄດ້.",
   "lockAppLocked": "{app_name} ຖືກລ໋ອກ",
   "lockAppUnlocked": "{app_name} ໄດ້ຖືກປົດລ໋ອກ",
   "membersAddAccountIdOrOns": "ເພີ່ມອາທິການ",
-  "messageRequestGroupInvite": "<b>{name} invited you to join <b>{group_name}.",
+  "messageRequestGroupInvite": "<b>{name}</b> invited you to join <b>{group_name}</b>.",
   "messageRequestsCommunities": "ຄືນເພະເດັດ",
   "messageRequestsCommunitiesDescription": "ໃຫ້ການຮັບຄຳຂໍຂ່ອງການສົ່ງຂໍ້ຄວາມໃນ Community.",
   "messageRequestsDelete": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການລຶບ message request นี้?",
-  "messageRequestsTurnedOff": "<b>{name} has message requests from Community conversations turned off, so you cannot send them a message.",
+  "messageRequestsTurnedOff": "<b>{name}</b> has message requests from Community conversations turned off, so you cannot send them a message.",
   "nicknameEnter": "ປ້ອນຊື່ທີ່ໃຊ້ເທບ",
   "noteToSelfHideDescription": "ທ່ານແນ່ໃຈບໍ່ວ່າທ່ານຕ້ອງການລຶບ Note to Self?",
   "notificationsAllMessages": "ຂໍ້ຄວາມທັງໝົດ",
@@ -245,7 +245,7 @@
   "recoveryPasswordEnter": "ປ້ອນລະຫັດການຟື້ນຄືນຂອງທ່ານ",
   "recoveryPasswordHidePermanentlyDescription2": "ທ່ານຫມັ່ນໃຈບໍ່ວ່າທ່ານຈະເມືອນຊົ່ວຫມົດ Recovery password ຂອງທ່ານເລັວ? ການນັ້ນບໍ່ສາມາດຖືກຄືນໄດ້.",
   "recoveryPasswordRestoreDescription": "ປ້ອນລະຫັດການຟື້ນຄືນຂອງທ່ານເພື່ອດາວໂຫຼດບັນດານຂອງທ່ານ. ຖ້າທ່ານຍັງບໍ່ໄດ້ຟອມມັນ, ທ່ານສາມາດຫາມັນໄດ້ໃນການຕັ້ງຄ່າແອັບຂອງທ່ານ.",
-  "screenshotTaken": "<b>{name}ໄດ້ຮອບພາບເຊັນຈໍ (screenshot).",
+  "screenshotTaken": "<b>{name}</b>ໄດ້ຮອບພາບເຊັນຈໍ (screenshot).",
   "sessionAppearance": "ຮູບລັກສະນະ",
   "sessionClearData": "ລ້າງເວດຂໍ້ມູນ",
   "sessionConversations": "ຫຼາຍເເລກ",
