--- a/_locales/lt/messages.json
+++ b/_locales/lt/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Užblokuotas {name}",
   "blockDescription": "Ar tikrai norite užblokuoti <b>{name}</b>? Užblokuoti naudotojai negali siųsti žinučių užklausų, grupių kvietimų ar skambinti jums.",
   "blockUnblock": "Atblokuoti",
-  "blockUnblockName": "Ar tikrai norite atblokuoti {name}?",
-  "blockUnblockNameMultiple": "Ar tikrai norite atblokuoti {name} ir {count} kitus?",
-  "blockUnblockNameTwo": "Ar tikrai norite atblokuoti {name} ir kitą?",
+  "blockUnblockName": "Ar tikrai norite atblokuoti <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Ar tikrai norite atblokuoti <b>{name}</b> ir <b>{count} kitus</b>?",
+  "blockUnblockNameTwo": "Ar tikrai norite atblokuoti <b>{name}</b> ir kitą?",
   "blockUnblockedUser": "Atblokuota {name}",
   "call": "Skambinti",
   "callsCalledYou": "Jums skambino {name}",
@@ -178,12 +178,12 @@
   "clearDeviceDescription": "Ar tikrai norite išvalyti savo įrenginį?",
   "clearDeviceOnly": "Išvalyti tik įrenginį",
   "clearMessages": "Išvalyti visas žinutes",
-  "clearMessagesChatDescription": "Ar tikrai norite išvalyti visas žinutes iš savo pokalbio su <b>{name}<\\/b> iš savo įrenginio?",
-  "clearMessagesCommunity": "Ar tikrai norite išvalyti visas <b>{community_name}<\\/b> žinutes iš savo įrenginio?",
+  "clearMessagesChatDescription": "Ar tikrai norite išvalyti visas žinutes iš savo pokalbio su <b>{name}</b> iš savo įrenginio?",
+  "clearMessagesCommunity": "Ar tikrai norite išvalyti visas <b>{community_name}</b> žinutes iš savo įrenginio?",
   "clearMessagesForEveryone": "Išvalyti visiems",
   "clearMessagesForMe": "Išvalyti man",
-  "clearMessagesGroupAdminDescription": "Ar tikrai norite išvalyti visas <b>{group_name}<\\/b> žinutes?",
-  "clearMessagesGroupDescription": "Ar tikrai norite išvalyti visas <b>{group_name}<\\/b> žinutes iš savo įrenginio?",
+  "clearMessagesGroupAdminDescription": "Ar tikrai norite išvalyti visas <b>{group_name}</b> žinutes?",
+  "clearMessagesGroupDescription": "Ar tikrai norite išvalyti visas <b>{group_name}</b> žinutes iš savo įrenginio?",
   "clearMessagesNoteToSelfDescription": "Ar tikrai norite išvalyti visas Pastabos sau žinutes iš savo įrenginio?",
   "close": "Užverti",
   "closeWindow": "Užverti langą",
@@ -210,7 +210,7 @@
   "confirm": "Patvirtinkite",
   "contactContacts": "Adresatai",
   "contactDelete": "Ištrinti kontaktą",
-  "contactDeleteDescription": "Ar tikrai norite ištrinti <b>{name}<\\/b> iš savo kontaktų? Naujos žinutės nuo <b>{name}<\\/b>atvyks kaip žinutės užklausa.",
+  "contactDeleteDescription": "Ar tikrai norite ištrinti <b>{name}</b> iš savo kontaktų? Naujos žinutės nuo <b>{name}</b>atvyks kaip žinutės užklausa.",
   "contactNone": "Kol kas neturite jokių adresatų",
   "contactSelect": "Pasirinkti adresatus",
   "contactUserDetails": "Vartotojo informacija",
@@ -376,7 +376,7 @@
   "groupCreate": "Sukurti grupę",
   "groupCreateErrorNoMembers": "Pasirinkite bent vieną kitą grupės narį.",
   "groupDelete": "Ištrinti grupę",
-  "groupDeleteDescription": "Ar tikrai norite ištrinti <b>{group_name}<\\/b>? Tai pašalins visus narius ir ištrins visą grupės turinį.",
+  "groupDeleteDescription": "Ar tikrai norite ištrinti <b>{group_name}</b>? Tai pašalins visus narius ir ištrins visą grupės turinį.",
   "groupDescriptionEnter": "Įveskite grupės aprašymą",
   "groupDisplayPictureUpdated": "Grupės paveikslas atnaujintas.",
   "groupEdit": "Taisyti grupę",
