--- a/_locales/lv/messages.json
+++ b/_locales/lv/messages.json
@@ -121,9 +121,9 @@
   "blockBlockedUser": "Bloķēts {name}",
   "blockDescription": "Vai esat pārliecināts, ka vēlaties bloķēt <b>{name}?</b> Bloķētie lietotāji nevarēs jums nosūtīt ziņojumu pieprasījumus, grupu uzaicinājumus vai zvanīt jums.",
   "blockUnblock": "Atbloķēt",
-  "blockUnblockName": "Vai esi pārliecināts, ka vēlies atbloķēt {name}?",
-  "blockUnblockNameMultiple": "Vai esat pārliecināts, ka vēlaties atbloķēt {name} un {count} citus?",
-  "blockUnblockNameTwo": "Vai esat pārliecināts, ka vēlaties atbloķēt {name} un vēl vienu?",
+  "blockUnblockName": "Vai esi pārliecināts, ka vēlies atbloķēt <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Vai esat pārliecināts, ka vēlaties atbloķēt <b>{name}</b> un <b>{count} citus</b>?",
+  "blockUnblockNameTwo": "Vai esat pārliecināts, ka vēlaties atbloķēt <b>{name}</b> un vēl vienu?",
   "blockUnblockedUser": "Atbloķēts {name}",
   "call": "Zvans",
   "callsCalledYou": "Jums zvanīja {name}",
