--- a/_locales/mk/messages.json
+++ b/_locales/mk/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Корисникот {name} е блокиран",
   "blockDescription": "Дали сте сигурни дека сакате да го блокирате <b>{name}?</b> Блокираните корисници не можат да ви испраќаат барања за пораки, покани за групи или да ве повикуваат.",
   "blockUnblock": "Одблокирај",
-  "blockUnblockName": "Дали сте сигурни дека сакате да го одблокирате {name}?",
-  "blockUnblockNameMultiple": "Дали сте сигурни дека сакате да ги одблокирате {name} и {count} други?",
-  "blockUnblockNameTwo": "Дали сте сигурни дека сакате да ги одблокирате {name} и уште еден?",
+  "blockUnblockName": "Дали сте сигурни дека сакате да го одблокирате <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Дали сте сигурни дека сакате да ги одблокирате <b>{name}</b> и <b>{count} други</b>?",
+  "blockUnblockNameTwo": "Дали сте сигурни дека сакате да ги одблокирате <b>{name}</b> и уште еден?",
   "blockUnblockedUser": "Одблокиран {name}",
   "call": "Повик",
   "callsCalledYou": "{name} Ви заѕвони",
@@ -251,7 +251,7 @@
   "copy": "Копирај",
   "create": "Креирај",
   "cut": "Сечи",
-  "databaseErrorGeneric": "Настана грешка во базата на податоци.<br\\/><br\\/>Извенете ги вашите дневници на апликација за да ги споделите за решавање на проблемите. Ако ова не е успешно, повторно инсталирајте ја {app_name} и вратете го вашиот акаунт.<br\\/><br\\/>Предупредување: Ова ќе резултира со губење на сите пораки, прилози и податочни записи постари од две недели.",
+  "databaseErrorGeneric": "Настана грешка во базата на податоци.<br/><br/>Извенете ги вашите дневници на апликација за да ги споделите за решавање на проблемите. Ако ова не е успешно, повторно инсталирајте ја {app_name} и вратете го вашиот акаунт.<br/><br/>Предупредување: Ова ќе резултира со губење на сите пораки, прилози и податочни записи постари од две недели.",
   "databaseErrorTimeout": "Забележавме дека {app_name} троши многу време за старт.<br/><br/>Можете да продолжите да чекате, да ги извезете дневниците на вашиот уред за решавање на проблеми или да се обидете да го рестартирате Session.",
   "databaseErrorUpdate": "Вашата база на податоци на апликацијата не е компатибилна со оваа верзија на {app_name}. Повторно инсталирајте ја апликацијата и вратете го вашиот профил за да генерирате нова база на податоци и да продолжите да го користите {app_name}.<br/><br/>Предупредување: Ова ќе резултира со губење на сите пораки и прикачувања постари од две недели.",
   "databaseOptimizing": "Оптимизирање на базата на податоци",
@@ -307,7 +307,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Пораките се бришат откако ќе бидат испратени.",
   "disappearingMessagesDisappearAfterSendState": "Ќе исчезне по праќање - {time}",
   "disappearingMessagesFollowSetting": "Следи подесување",
-  "disappearingMessagesFollowSettingOff": "Пораките што ги испраќате повеќе нема да исчезнат. Дали сте сигурни дека сакате да ги исклучите пораќите што исчезнуваат?",
+  "disappearingMessagesFollowSettingOff": "Пораките што ги испраќате повеќе нема да исчезнат. Дали сте сигурни дека сакате да ги <b>исклучите</b> пораките што исчезнуваат?",
   "disappearingMessagesFollowSettingOn": "Постави ги пораките да исчезнат <b>{time}</b> откако ќе бидат <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} користи застарен клиент. Пораките што исчезнуваат можеби нема да функционираат како што се очекуваше.",
   "disappearingMessagesOnlyAdmins": "Само администраторите на групата можат да ја менуваат оваа поставка.",
