--- a/_locales/mn/messages.json
+++ b/_locales/mn/messages.json
@@ -125,7 +125,7 @@
   "blockBlockedDescription": "Түгжээг арилгаж, мессеж илгээх боломжтой болно.",
   "blockBlockedNone": "Хаасан контакт байхгүй",
   "blockBlockedUser": "{name} -г хориглосон",
-  "blockDescription": "Та <b>{name} <\\b>-ийг хаахыг хүсэж байгаадаа итгэлтэй байна уу? Хаагдсан хэрэглэгчид танд мессеж хүсэлт илгээж, бүлгийн урилга илгээж эсвэл залгах боломжгүй.",
+  "blockDescription": "Та <b>{name}</b>-ийг хаахыг хүсэж байгаадаа итгэлтэй байна уу? Хаагдсан хэрэглэгчид танд мессеж хүсэлт илгээж, бүлгийн урилга илгээж эсвэл залгах боломжгүй.",
   "blockUnblock": "Түгжээг арилгах",
   "blockUnblockName": "Та {name}-г тайлах нь итгэлтэй байна уу?",
   "blockUnblockNameMultiple": "Та<b>{name}</b> -ыг болон <b>{count}</b> бусад ыг тайлах нь итгэлтэй байна уу?",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Мессежүүд илгээгдсэнийхээ дараа устгагдана.",
   "disappearingMessagesDisappearAfterSendState": "Илгээсний дараа алга болно - {time}",
   "disappearingMessagesFollowSetting": "Тохиргоог дагах",
-  "disappearingMessagesFollowSettingOff": "Илгээсэн мессежүүд дахиж устахгүй. Та Disappearing Messages тохиргоог унтрах эсэхийг дахин батлах уу?",
+  "disappearingMessagesFollowSettingOff": "Таны илгээсэн зурвасууд цаашид алга болохгүй. Та алга болсон мессежийг <b>унтраах</b> гэдэгт итгэлтэй байна уу?",
   "disappearingMessagesFollowSettingOn": "Мессежүүдийг <b>{disappearing_messages_type}</b> үед <b>{time}</b> дараа арилдаг болгох уу?",
   "disappearingMessagesLegacy": "{name} хуучин үйлчлүүлэгчийг ашиглаж байна. Disappearing message зөв ажиллахгүй байж магадгүй.",
   "disappearingMessagesOnlyAdmins": "Зөвхөн бүлгийн админ үүнийг өөрчилж чадна.",
