--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} disekat",
   "blockDescription": "Adakah anda pasti mahu menyekat <b>{name}</b>? Pengguna yang disekat tidak boleh menghantar permintaan mesej, jemputan kumpulan atau menghubungi anda.",
   "blockUnblock": "Nyahsekat",
-  "blockUnblockName": "Adakah anda yakin anda mahu menyahsekat {name}?",
-  "blockUnblockNameMultiple": "Adakah anda yakin anda mahu menyahsekat {name} dan {count} orang lain?",
-  "blockUnblockNameTwo": "Adakah anda yakin anda mahu menyahsekat {name} dan seorang lagi?",
+  "blockUnblockName": "Adakah anda yakin anda mahu menyahsekat <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Adakah anda yakin anda mahu menyahsekat <b>{name}</b> dan <b>{count} orang lain</b>?",
+  "blockUnblockNameTwo": "Adakah anda yakin anda mahu menyahsekat <b>{name}</b> dan seorang lagi?",
   "blockUnblockedUser": "Nyahsekat {name}",
   "call": "Panggilan",
   "callsCalledYou": "{name} memanggil anda",
@@ -252,7 +252,7 @@
   "copy": "Salin",
   "create": "Buat",
   "cut": "Potong",
-  "databaseErrorGeneric": "Ralat pangkalan data berlaku.<br \\/><br \\/>Eksport log aplikasi anda untuk bahagian penyelesaian masalah. Jika ini tidak berjaya, pasang semula {app_name} dan kembalikan akaun anda.<br \\/><br \\/>Amaran: Ini akan menyebabkan kehilangan semua mesej, lampiran, dan data akaun lebih lama daripada dua minggu.",
+  "databaseErrorGeneric": "Ralat pangkalan data berlaku.<br/><br/>Eksport log aplikasi anda untuk bahagian penyelesaian masalah. Jika ini tidak berjaya, pasang semula {app_name} dan kembalikan akaun anda.<br/><br/>Amaran: Ini akan menyebabkan kehilangan semua mesej, lampiran, dan data akaun lebih lama daripada dua minggu.",
   "databaseErrorTimeout": "Kami perasan {app_name} mengambil masa yang lama untuk bermula.<br/><br/>Anda boleh terus menunggu, eksport log peranti anda untuk perkongsian penyelesaian masalah atau cuba mulakan semula Session.",
   "databaseErrorUpdate": "Pangkalan data aplikasi anda tidak serasi dengan versi {app_name} ini. Pasang semula aplikasi ini dan pulihkan akaun anda untuk menjana pangkalan data baru dan terus menggunakan {app_name}.<br/><br/>Amaran: Ini akan menyebabkan kehilangan semua mesej dan lampiran yang lebih lama daripada dua minggu.",
   "databaseOptimizing": "Mengoptimumkan Pangkalan Data",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Mesej akan dipadam selepas dihantar.",
   "disappearingMessagesDisappearAfterSendState": "Hilang Selepas Dihantar - {time}",
   "disappearingMessagesFollowSetting": "Ikut Tetapan",
-  "disappearingMessagesFollowSettingOff": "Mesej yang anda hantar tidak lagi akan hilang. Adakah anda pasti mahu mematikan mesej yang hilang?",
+  "disappearingMessagesFollowSettingOff": "Mesej yang anda hantar tidak lagi akan hilang. Adakah anda pasti mahu <b>mematikan</b> mesej yang hilang?",
   "disappearingMessagesFollowSettingOn": "Tetapkan mesej anda untuk hilang <b>{time}</b> selepas ia telah <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} menggunakan klien ketinggalan zaman. Mesej hilang mungkin tidak berfungsi seperti yang diharapkan.",
   "disappearingMessagesOnlyAdmins": "Hanya admin kumpulan boleh menukar tetapan ini.",
