--- a/_locales/my/messages.json
+++ b/_locales/my/messages.json
@@ -128,8 +128,8 @@
   "blockDescription": "သင် <b>{name} </b> ကို ဘလော့ခ်ချင်တာ သေချာရဲ ့လား? ဘလော့ခ်ထားတဲ့ လူတွေက မက်ဆေ့ချ်လာပို့ခွင့်၊အဖွဲ့ခေါ်ခံရခွင့် နဲ့ဖုန်းခေါ်ရခွင့် ရနိုင်မှာမဟုတ်ပါဘူး။",
   "blockUnblock": "ဘလော့ဖြေမည်",
   "blockUnblockName": "သင့် {name} ကို အုပ်ချုပ်ရေးမှူး ဖြစ်ရန် ခန့်ရှင်းလိုသည်မှာ သေချာပါသလား။",
-  "blockUnblockNameMultiple": "သင် {name} နှင့် {count} ဦး ကို အုပ်ချုပ်ရေးမှူး ဖြစ်ရန် ခန့်ရှင်းလိုသည်မှာ သေချာပါသလား။",
-  "blockUnblockNameTwo": "သင် {name} နှင့် ၁ ဦး ကို အုပ်ချုပ်ရေးမှူး ဖြစ်ရန် ခန့်ရှင်းလိုသည်မှာ သေချာပါသလား။",
+  "blockUnblockNameMultiple": "သင် <b>{name}</b> နှင့် <b>{count}</b> ဦး ကို အုပ်ချုပ်ရေးမှူး ဖြစ်ရန် ခန့်ရှင်းလိုသည်မှာ သေချာပါသလား။",
+  "blockUnblockNameTwo": "သင် <b>{name}</b> နှင့် ၁ ဦး ကို အုပ်ချုပ်ရေးမှူး ဖြစ်ရန် ခန့်ရှင်းလိုသည်မှာ သေချာပါသလား။",
   "blockUnblockedUser": "{name} ကိုဘလော့ဖြေလိုက်ပြီ",
   "call": "ခေါ််ဆိုမှု",
   "callsCalledYou": "{name} မှ သင့်အား ခေါ်ဆိုခဲ့သည်။",
@@ -307,7 +307,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "မက်ဆေ့ချ်များ ပွင့်နေပါသည်။",
   "disappearingMessagesDisappearAfterSendState": "ပို့ပြီးနောက် ပျောက်သွားမည် - {time}",
   "disappearingMessagesFollowSetting": "Follow Setting",
-  "disappearingMessagesFollowSettingOff": "ပျောက်သွားမည့် မက်ဆေ့ခ်ျများကို ပိတ်လိုက်ပြီး မက်ဆေ့ခ်ျများ များ ကြီးမားသွားပါရီ။",
+  "disappearingMessagesFollowSettingOff": "သင်ပေးပို့သော မက်ဆေ့ဂျ်များသည် ပျောက်ကွယ်သွားတော့မည် မဟုတ်ပါ။ ပျောက်နေသောစာတိုများကို <b>ပိတ်</b>လိုသည်မှာ သေချာပါသလား။",
   "disappearingMessagesFollowSettingOn": "သင့်စာများကို <b>{time}ကျော်လွန်သွားသည်</b>  ပြုလုပ်ခြင်း ပြီးဆုံးပါသည် <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} သည် အသုံးပြုနေသော client အဟောင်းဖြစ်သည်။ ပျောက်နေသော မီးမောက်မက်ဆေ့ချ်များ မေ့ပိုင်းမှာ အမှန်က အလုပ်မလုပ်နိုင်ပါ။",
   "disappearingMessagesOnlyAdmins": "ဒီ ပြင်ဆင်မှုကိုတော့ အဖွဲ့အလိုဂျင်းများမှသာ ပြင်နိုက်သည်။",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>သင်</b> နှင့် <b>{count} ဦး</b> ကို အဖွဲ့သို့ ပူးပေါင်းဖို့ ဖိတ်ကြားခဲ့သည်။",
   "groupInviteYouAndOtherNew": "<b>သင်</b> နှင့် <b>{other_name}</b> ကို အဖွဲ့သို့ ပူးပေါင်းဖို့ ဖိတ်ကြားခဲ့သည်။",
   "groupLeave": "အုပ်စုမှ ထွက်မည်",
-  "groupLeaveDescription": "ဤ {group_name} မှ ထွက်လိုသည်မှာ သေချာပါသလား။",
+  "groupLeaveDescription": "ဤ <b>{group_name}</b> မှ ထွက်လိုသည်မှာ သေချာပါသလား။",
   "groupLeaveDescriptionAdmin": "သင် <b>{group_name}</b>ကို ထွက်ချင်သေချာပါသလား?<br/><br/>၎င်းသည် အဖွဲ့ဝင်များအားလုံးကို ဖယ်ရှားပြီး အဖွဲ့၏အကြောင်းအရာအားလုံးကို ဖျက်သိမ်းပါမည်။",
   "groupLeaveErrorFailed": "အဖွဲ့ {group_name} မှထွက်ရန် မဖြစ်နိုင်ပါ",
   "groupLegacyBanner": "အုပ်စုများအားအဆင့်မြှင့်ထားပြီး၊ Upgrade လုပ်ရန် အုပ်စုအသစ်တစ်ခုကိုဖန်တီးပါ။ အုပ်စု ဟောင်းများ၏ အလုပ်လုပ်မှုကို {date} မှာကျဆင်းသွားမှာဖြစ်သည်။",
@@ -546,7 +546,7 @@
   "messages": "မက်ဆေ့ချ်များ",
   "minimize": "စားဝိုင်းမှနေပါတယ်",
   "next": "ရှေ့သို့",
-  "nicknameDescription": "{name} အတွက် အမည်ဖြစ်စေမည် ထည့်ပါ။ ဤအမည်သည် သင်၏ တစ်ဦးနှင့်တစ်ဦးနှင့် အဖွဲ့စကားပြောမှုများတွင် ပြသမည်ဖြစ်သည်။",
+  "nicknameDescription": "<b>{name}</b> အတွက် အမည်ဖြစ်စေမည် ထည့်ပါ။ ဤအမည်သည် သင်၏ တစ်ဦးနှင့်တစ်ဦးနှင့် အဖွဲ့စကားပြောမှုများတွင် ပြသမည်ဖြစ်သည်။",
   "nicknameEnter": "အမည်ပြကွက် မျက်နှာပြင်ထည့်ပါ",
   "nicknameRemove": "နာမည်ခေါ်အား ဖယ်ရှားမည်",
   "nicknameSet": "နာမည်သတ်မှတ်မည်",
