--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -32,7 +32,7 @@
   "adminRemoveFailed": "Kunne ikke fjerne {name} som admin.",
   "adminRemoveFailedMultiple": "Kunne ikke fjerne <b>{name}</b> og <b>{count} andre</b> som Admin.",
   "adminRemoveFailedOther": "Kunne ikke fjerne <b>{name}</b> og <b>{other_name}</b> som Admin.",
-  "adminRemovedUser": "<b>{name} ",
+  "adminRemovedUser": "<b>{name}</b> ble fjernet som Admin.",
   "adminRemovedUserMultiple": "<b>{name}</b> og <b>{count} andre</b> ble fjernet som Admin.",
   "adminRemovedUserOther": "<b>{name}</b> og <b>{other_name}</b> ble fjernet som Admin.",
   "adminSendingPromotion": "Sender adminpromotering",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Blokkerte {name}",
   "blockDescription": "Er du sikker på at du vil blokkere <b>{name} </b>? Blokkerte brukere kan ikke sende deg meldingsforespørsler, gruppeinvitasjoner eller ringe deg.",
   "blockUnblock": "Avblokker",
-  "blockUnblockName": "Er du sikker på at du vil fjerne blokkeringen av {name}?",
-  "blockUnblockNameMultiple": "Er du sikker på at du vil fjerne blokkeringen av {name} og {count} andre?",
-  "blockUnblockNameTwo": "Er du sikker på at du vil fjerne blokkeringen av {name} og 1 annen?",
+  "blockUnblockName": "Er du sikker på at du vil fjerne blokkeringen av <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Er du sikker på at du vil fjerne blokkeringen av <b>{name}</b> og <b>{count} andre</b>?",
+  "blockUnblockNameTwo": "Er du sikker på at du vil fjerne blokkeringen av <b>{name}</b> og 1 annen?",
   "blockUnblockedUser": "Opphev blokkering {name}",
   "call": "Ring",
   "callsCalledYou": "{name} ringte deg",
@@ -317,12 +317,12 @@
   "disappearingMessagesTimer": "Timer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> har skrudd av tidsbegrensede meldinger. Meldinger de sender vil ikke lenger forsvinne.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> har skrudd selvutslettende meldinger <b>av</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>Du</b> slo av selvutslettende meldinger. Meldinger du sender vil ikke lenger forsvinne.",
+  "disappearingMessagesTurnedOffYou": "<b>Du</b> slo <b>av</b> forsvinnende meldinger. Meldinger du sender vil ikke lenger forsvinne.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Du</b> slo <b>av</b> forsvinnende meldinger.",
   "disappearingMessagesTypeRead": "lest",
   "disappearingMessagesTypeSent": "sendt",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> oppdaterte innstillingene for forsvinnende meldinger.",
-  "disappearingMessagesUpdatedYou": "<b>Du ",
+  "disappearingMessagesUpdatedYou": "<b>Du</b> oppdaterte innstillinger for forsvinnende meldinger.",
   "dismiss": "Avvis",
   "displayNameDescription": "Det kan være ditt virkelige navn, et alias eller noe annet du liker — og du kan endre det når som helst.",
   "displayNameEnter": "Skriv inn navnet som skal vises",
@@ -393,7 +393,7 @@
   "groupInviteSent": "Invitasjon sendt",
   "groupInviteSuccessful": "Gruppeinvitasjonen vellykket",
   "groupInviteVersion": "Brukere må ha den nyeste versjonen for å motta invitasjoner",
-  "groupInviteYou": "<b>Du ble invitert til å .",
+  "groupInviteYou": "<b>Du</b> ble invitert til å bli med i gruppen.",
   "groupInviteYouAndMoreNew": "<b>Du</b> og <b>{count} andre</b> ble invitert til gruppen.",
   "groupInviteYouAndOtherNew": "<b>Du</b> og <b>{other_name}</b> ble invitert til gruppen.",
   "groupLeave": "Forlat gruppe",
@@ -412,7 +412,7 @@
   "groupMemberNewTwo": "<b>{name}</b> og <b>{other_name}</b> ble invitert til gruppen.",
   "groupMemberNewYouHistoryMultiple": "<b>Du</b> og <b>{count} andre</b> ble invitert til gruppen. Chat-historikk ble delt.",
   "groupMemberNewYouHistoryTwo": "<b>Du</b> og <b>{name}</b> ble invitert til gruppen. Chat-historikk ble delt.",
-  "groupMemberYouLeft": "<b> ",
+  "groupMemberYouLeft": "<b>Du</b> forlot gruppen.",
   "groupMembers": "Gruppemedlemmer",
   "groupMembersNone": "Det er ingen andre medlemmer i denne gruppen.",
   "groupName": "Gruppenavn",
@@ -431,7 +431,7 @@
   "groupRemoveDescriptionTwo": "Vil du fjerne <b>{name}</b> og <b>{other_name}</b> fra <b>{group_name}</b>?",
   "groupRemoveMessages": "{count, plural, one [Fjern brukeren og meldinga deres] other [Fjern brukere og beskjedene deres]}",
   "groupRemoveUserOnly": "{count, plural, one [Fjern bruker ] other [Fjern brukere]}",
-  "groupRemoved": "<b>{name} forlot ",
+  "groupRemoved": "<b>{name}</b> ble fjernet fra gruppen.",
   "groupRemovedMultiple": "<b>{name}</b> og <b>{count} andre</b> ble fjernet fra gruppen.",
   "groupRemovedTwo": "<b>{name}</b> og <b>{other_name}</b> ble fjernet fra gruppen.",
   "groupRemovedYou": "Du ble fjernet fra <b>{group_name}</b>.",
@@ -696,7 +696,7 @@
   "recoveryPasswordErrorTitle": "Galt Recovery Password",
   "recoveryPasswordExplanation": "For å laste din konto, skriv inn din gjenopprettingsfrase.",
   "recoveryPasswordHidePermanently": "Skjul Recovery Password permanent",
-  "recoveryPasswordHidePermanentlyDescription1": "Uten gjenopprettingspassordet kan du ikke laste kontoen din på nye enheter. <br /><br />Vi anbefaler sterkt at du lagrer gjenopprettingspassordet ditt på et trygt og sikkert sted før du fortsetter.",
+  "recoveryPasswordHidePermanentlyDescription1": "Uten gjenopprettingspassordet kan du ikke laste kontoen din på nye enheter. <br/><br/>Vi anbefaler sterkt at du lagrer gjenopprettingspassordet ditt på et trygt og sikkert sted før du fortsetter.",
   "recoveryPasswordHidePermanentlyDescription2": "Er du sikker på at du vil permanent skjule ditt Recovery Password på denne enheten? Dette kan ikke angres.",
   "recoveryPasswordHideRecoveryPassword": "Skjul Recovery Password",
   "recoveryPasswordHideRecoveryPasswordDescription": "Skjul gjenopprettingspassord permanent på denne enheten.",
@@ -720,7 +720,7 @@
   "screenSecurity": "Skjermsikkerhet",
   "screenshotNotifications": "Skjermbilde varsler",
   "screenshotNotificationsDescription": "Krev et varsel når en kontakt tar et skjermbilde av en en-til-en-chat.",
-  "screenshotTaken": "<b>{name} .",
+  "screenshotTaken": "<b>{name}</b> tok et skjermbilde.",
   "search": "Søk",
   "searchContacts": "Søk etter kontakter",
   "searchConversation": "Søk i samtale",
