--- a/_locales/ne/messages.json
+++ b/_locales/ne/messages.json
@@ -20,7 +20,7 @@
   "adminPromoteMoreDescription": "तपाईं <b>{name}</b> र <b>{count} अन्यहरूलाई</b> प्रशासक बनाउन निश्चित हुनुहुन्छ? प्रशासकहरू हटाउन सकिँदैन।",
   "adminPromoteToAdmin": "प्रशासकमा उन्नति गर्नुहोस्",
   "adminPromoteTwoDescription": "तपाईं <b>{name}</b> र <b>{other_name}</b>लाई प्रशासक बनाउन निश्चित हुनुहुन्छ? प्रशासकहरू हटाउन सकिँदैन।",
-  "adminPromotedToAdmin": "{name}लाई Admin मा बढुवा गरियो।",
+  "adminPromotedToAdmin": "<b>{name}</b>लाई Admin मा बढुवा गरियो।",
   "adminPromotionFailed": "प्रशासक प्रवर्धन असफल भयो",
   "adminPromotionFailedDescription": "{name} लाई {group_name} मा प्रोमोट गर्न असफल।",
   "adminPromotionFailedDescriptionMultiple": "{name} र {count} अरूलाई {group_name} मा प्रोमोट गर्न असफल।",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} ब्लक गरिएको छ",
   "blockDescription": "के तपाईंलाई <b>{name} </b> بادुकाउनुभो>? Block गरिएका प्रयोगकर्ताहरूले तपाईलाई सन्देश अनुरोधहरू, समूह आमन्त्रण वा कल दिन सक्दैनन्।",
   "blockUnblock": "अनब्लक गर्नुहोस्",
-  "blockUnblockName": "तपाईं {name}लाई अनब्लक गर्न निश्चित हुनुहुन्छ?",
-  "blockUnblockNameMultiple": "तपाईं {name} र {count} अन्यलाई अनब्लक गर्न निश्चित हुनुहुन्छ?",
-  "blockUnblockNameTwo": "तपाईं {name} र 1 अन्यलाई अनब्लक गर्न निश्चित हुनुहुन्छ?",
+  "blockUnblockName": "तपाईं <b>{name}</b>लाई अनब्लक गर्न निश्चित हुनुहुन्छ?",
+  "blockUnblockNameMultiple": "तपाईं <b>{name}</b> र <b>{count}</b> अन्यलाई अनब्लक गर्न निश्चित हुनुहुन्छ?",
+  "blockUnblockNameTwo": "तपाईं <b>{name}</b> र 1 अन्यलाई अनब्लक गर्न निश्चित हुनुहुन्छ?",
   "blockUnblockedUser": "अनब्लक गरिएको {name}",
   "call": "कल",
   "callsCalledYou": "{name} ले तपाईंलाई कल गर्नु भयो",
@@ -394,7 +394,7 @@
   "groupInviteYouAndMoreNew": "<b>तपाईं</b> र <b>{count} अन्य</b>लाई समूहमा सामेल हुन आमन्त्रित गरियो।",
   "groupInviteYouAndOtherNew": "<b>तपाईं</b> र <b>{other_name}</b>लाई समूहमा सामेल हुन आमन्त्रित गरियो।",
   "groupLeave": "समुह छोड्नुहोस",
-  "groupLeaveDescription": "तपाईं {group_name} समूह छोड्न निश्चित हुनुहुन्छ?",
+  "groupLeaveDescription": "तपाईं <b>{group_name}</b> समूह छोड्न निश्चित हुनुहुन्छ?",
   "groupLeaveDescriptionAdmin": "के तपाई पक्का हुनुहुन्छ कि तपाई <b>{group_name}</b> छोड्न चाहनुहुन्छ?<br/><br/>यसले सबै सदस्यहरूलाई हटाउँछ र सबै समूह सामग्री मेटाउँछ।",
   "groupLeaveErrorFailed": "{group_name} छोड्न असफल।",
   "groupLegacyBanner": "समूहहरू अपग्रेड गरिएका छन्, अपग्रेड गर्न नयाँ समूह सिर्जना गर्नुहोस्। पुरानो समूह कार्यक्षमता {date} देखि घटाइनेछ।",
@@ -473,7 +473,7 @@
   "linkPreviewsSend": "लिंक पूर्वावलोकनहरू पठाउनुहोस्",
   "linkPreviewsSendModalDescription": "लिङ्क प्रिभ्यूहरू पठाउँदा तपाईंसँग पूर्ण मेटाडाटा सुरक्षाको व्यवस्था हुँदैन।",
   "linkPreviewsTurnedOff": "लिंक प्रीभ्यूहरू बन्द छन्",
-  "linkPreviewsTurnedOffDescription": "{app_name} ले तपाईंले पठाउने र प्राप्त गर्ने लिङ्कहरूको पूर्वावलोकन उत्पन्न गर्न लिङ्क गरिएका वेबसाइटहरूमा सम्पर्क गर्नुपर्छ।<br /><br />तिनीहरूलाई {app_name}को सेटिङहरूमा अन गर्न सक्नुहुन्छ।",
+  "linkPreviewsTurnedOffDescription": "{app_name} ले तपाईंले पठाउने र प्राप्त गर्ने लिङ्कहरूको पूर्वावलोकन उत्पन्न गर्न लिङ्क गरिएका वेबसाइटहरूमा सम्पर्क गर्नुपर्छ।<br/><br/>तिनीहरूलाई {app_name}को सेटिङहरूमा अन गर्न सक्नुहुन्छ।",
   "loadAccount": "खाता लोड गर्नुहोस्",
   "loadAccountProgressMessage": "तपाईंको खाता लोड हुँदैछ",
   "loading": "लोड हुँदैछ...",
@@ -539,7 +539,7 @@
   "messages": "सन्देशहरू",
   "minimize": "सानो गर्नुहोस्",
   "next": "अर्को",
-  "nicknameDescription": "{name} को लागी उपनाम छान्नुहोस्। यो तपाईंका एक-देखि-एक र समूह कुराकानीहरूमा तपाइँलाई देखिनेछ।",
+  "nicknameDescription": "<b>{name}</b>को लागी उपनाम छान्नुहोस्। यो तपाईंका एक-देखि-एक र समूह कुराकानीहरूमा तपाइँलाई देखिनेछ।",
   "nicknameEnter": "निकनेम प्रविष्ट गर्नुहोस्",
   "nicknameRemove": "उपनाम हटाउनुहोस्",
   "nicknameSet": "निकनेम सेट गर्नुहोस्",
