--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -30,7 +30,7 @@
   "adminRemoveAsAdmin": "Verwijderen als beheerder",
   "adminRemoveCommunityNone": "Er zijn geen beheerders in deze Community.",
   "adminRemoveFailed": "Het verwijderen van {name} als Admin is mislukt.",
-  "adminRemoveFailedMultiple": "Mislukt om {name} en {count} anderen om te verwijderen als beheerder.",
+  "adminRemoveFailedMultiple": "Mislukt om <b>{name}</b> en <b>{count}</b> anderen om te verwijderen als beheerder.",
   "adminRemoveFailedOther": "Mislukt om <b>{name}</b> en <b>{other_name}</b> als beheerder te verwijderen.",
   "adminRemovedUser": "<b>{name}</b> is verwijderd als Admin.",
   "adminRemovedUserMultiple": "<b>{name}</b> en <b>{count} anderen</b> zijn verwijderd als beheerder.",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} geblokkeerd",
   "blockDescription": "Weet je zeker dat je <b>{name}</b> wilt blokkeren? Geblokkeerde gebruikers kunnen je geen berichtverzoeken, groepsuitnodiging sturen of bellen.",
   "blockUnblock": "Deblokkeren",
-  "blockUnblockName": "Weet je zeker dat je {name} wilt deblokkeren?",
-  "blockUnblockNameMultiple": "Weet je zeker dat je {name} en {count} anderen wilt deblokkeren?",
-  "blockUnblockNameTwo": "Weet je zeker dat je {name} en 1 andere wilt deblokkeren?",
+  "blockUnblockName": "Weet je zeker dat je <b>{name}</b> wilt deblokkeren?",
+  "blockUnblockNameMultiple": "Weet u zeker dat u <b>{name}</b> en <b>{count} anderen wilt deblokkeren</b>?",
+  "blockUnblockNameTwo": "Weet je zeker dat je <b>{name}</b> en 1 andere wilt deblokkeren?",
   "blockUnblockedUser": "Gedeblokkeerd {name}",
   "call": "Bellen",
   "callsCalledYou": "{name} heeft je gebeld",
@@ -184,7 +184,7 @@
   "clearMessagesForEveryone": "Wis voor iedereen",
   "clearMessagesForMe": "Wis voor mij",
   "clearMessagesGroupAdminDescription": "Weet je zeker dat je alle <b>{group_name} </b> berichten wilt wissen?",
-  "clearMessagesGroupDescription": "Weet je zeker dat je alle <b>{group_name} <\\b> berichten van je apparaat wilt wissen?",
+  "clearMessagesGroupDescription": "Weet u zeker dat u alle <b>{group_name}</b> berichten van uw apparaat wilt wissen?",
   "clearMessagesNoteToSelfDescription": "Weet je zeker dat je alle \"Notitie aan mijzelf\" berichten van je apparaat wilt wissen?",
   "close": "Sluiten",
   "closeWindow": "Venster sluiten",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Berichten wissen zichzelf nadat ze verzonden zijn.",
   "disappearingMessagesDisappearAfterSendState": "Verdwijnen na Verzenden - {time}",
   "disappearingMessagesFollowSetting": "Instelling volgen",
-  "disappearingMessagesFollowSettingOff": "Berichten die je verstuurt verdwijnen niet meer. Weet je zeker dat je de verdwijnende berichten wilt uitschakelen?",
+  "disappearingMessagesFollowSettingOff": "Berichten die u verstuurt verdwijnen niet meer. Weet u zeker dat u de verdwijnende berichten wilt <b>uitschakelen</b>?",
   "disappearingMessagesFollowSettingOn": "Stel je berichten in om te verdwijnen <b>{time}</b> nadat ze <b>{disappearing_messages_type}</b> zijn?",
   "disappearingMessagesLegacy": "{name} gebruikt een verouderde client. Zelf-wissende berichten werken mogelijk niet zoals verwacht.",
   "disappearingMessagesOnlyAdmins": "Alleen groepsbeheerders kunnen deze instelling wijzigen.",
@@ -377,7 +377,7 @@
   "groupCreate": "Groep aanmaken",
   "groupCreateErrorNoMembers": "Kies ten minste één ander groepslid.",
   "groupDelete": "Verwijder groep",
-  "groupDeleteDescription": "Weet je zeker dat je <b>{group_name} <\\b> wilt verwijderen? Dit zal alle leden verwijderen en alle groepsinhoud wissen.",
+  "groupDeleteDescription": "Weet je zeker dat je <b>{group_name}</b> wilt verwijderen? Dit zal alle leden verwijderen en alle groepsinhoud wissen.",
   "groupDescriptionEnter": "Voer een groepsbeschrijving in",
   "groupDisplayPictureUpdated": "Groepsafbeelding bijgewerkt.",
   "groupEdit": "Groep bewerken",
@@ -398,7 +398,7 @@
   "groupInviteYouAndMoreNew": "<b>Jij</b> en <b>{count} anderen</b> zijn lid geworden van de groep.",
   "groupInviteYouAndOtherNew": "<b>Jij</b> en <b>{other_name}</b> zijn lid geworden van de groep.",
   "groupLeave": "Groep verlaten",
-  "groupLeaveDescription": "Weet u zeker dat u {group_name} wilt verlaten?",
+  "groupLeaveDescription": "Weet u zeker dat u <b>{group_name}</b> wilt verlaten?",
   "groupLeaveDescriptionAdmin": "Weet u zeker dat u de groep <b>{group_name}</b> wil verlaten?<br/><br/>Dit zal alle leden en de inhoud van de groep verwijderen.",
   "groupLeaveErrorFailed": "Het verlaten van {group_name} is mislukt",
   "groupLegacyBanner": "Groepen zijn geüpgraded, maak een nieuwe groep aan om te upgraden. De oude groepsfunctionaliteit zal vanaf {date} worden afgebouwd.",
