--- a/_locales/nn/messages.json
+++ b/_locales/nn/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Blokkert {name}",
   "blockDescription": "Er du sikker på at du vil blokkera <b>{name}</b>? Blokkerte brukere kan ikkje senda deg meldingsforespørsler, gruppeinvitasjonar eller ringa deg.",
   "blockUnblock": "Opphev blokkering",
-  "blockUnblockName": "Er du sikker på at du ønskjer å oppheve blokkeringen av {name}?",
-  "blockUnblockNameMultiple": "Er du sikker på at du ønskjer å oppheve blokkeringen av {name} og {count} andre?",
-  "blockUnblockNameTwo": "Er du sikker på at du ønskjer å oppheve blokkeringen av {name} og ein annan?",
+  "blockUnblockName": "Er du sikker på at du ønskjer å oppheve blokkeringen av <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Er du sikker på at du ønskjer å oppheve blokkeringen av <b>{name}</b> og <b>{count} andre</b>?",
+  "blockUnblockNameTwo": "Er du sikker på at du ønskjer å oppheve blokkeringen av <b>{name}</b> og ein annan?",
   "blockUnblockedUser": "Blokkering opphevet {name}",
   "call": "Ring",
   "callsCalledYou": "{name} ringte deg",
@@ -696,7 +696,7 @@
   "recoveryPasswordErrorTitle": "Feil Recovery Password",
   "recoveryPasswordExplanation": "For å laste kontoen din, skriv inn gjenopprettingspassordet ditt.",
   "recoveryPasswordHidePermanently": "Skjul Recovery Password permanent",
-  "recoveryPasswordHidePermanentlyDescription1": "Utan ditt gjenoppretta passord kan du ikkje laste kontoen din på nye einingar. <br /><br />Vi tilrår sterkt at du lagrer ditt gjenoppretta passord på ein sikker stad før du fortsetter.",
+  "recoveryPasswordHidePermanentlyDescription1": "Utan ditt gjenoppretta passord kan du ikkje laste kontoen din på nye einingar. <br/><br/>Vi tilrår sterkt at du lagrer ditt gjenoppretta passord på ein sikker stad før du fortsetter.",
   "recoveryPasswordHidePermanentlyDescription2": "Er du sikker på at du ønskjer å skjule ditt gjenopprettingspassord for godt på denne eininga? Dette kan ikkje angre.",
   "recoveryPasswordHideRecoveryPassword": "Skjul Recovery Password",
   "recoveryPasswordHideRecoveryPasswordDescription": "Permanently hide your recovery password on this device.",
