--- a/_locales/no/messages.json
+++ b/_locales/no/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Blokkert {name}",
   "blockDescription": "Er du sikker på at du vil blokkere <b>{name}</b>? Blokkerte brukere kan ikke sende deg meldingsforespørsler, gruppeinvitasjoner eller ringe deg.",
   "blockUnblock": "Opphev blokkering",
-  "blockUnblockName": "Er du sikker på at du ønsker å fjerne blokkeringen av {name}?",
-  "blockUnblockNameMultiple": "Er du sikker på at du ønsker å fjerne blokkeringen av {name} og {count} andre?",
-  "blockUnblockNameTwo": "Er du sikker på at du ønsker å fjerne blokkeringen av {name} og 1 til?",
+  "blockUnblockName": "Er du sikker på at du ønsker å fjerne blokkeringen av <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Er du sikker på at du ønsker å fjerne blokkeringen av <b>{name}</b> og <b>{count} andre</b>?",
+  "blockUnblockNameTwo": "Er du sikker på at du ønsker å fjerne blokkeringen av <b>{name}</b> og 1 til?",
   "blockUnblockedUser": "Blokkering opphevet {name}",
   "call": "Ringe",
   "callsCalledYou": "{name} ringte deg",
