--- a/_locales/pa/messages.json
+++ b/_locales/pa/messages.json
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>ਤੁਸੀਂ</b> ਅਤੇ <b>{count} ਹੋਰਾਂ</b> ਨੂੰ ਗਰੁੱਪ ਵਿੱਚ ਸ਼ਾਮਲ ਹੋਣ ਲਈ ਸੱਦਾ ਦਿੱਤਾ ਗਿਆ ਹੈ।",
   "groupInviteYouAndOtherNew": "<b>ਤੁਸੀਂ</b> ਅਤੇ <b>{other_name}</b> ਨੂੰ ਗਰੁੱਪ ਵਿੱਚ ਸ਼ਾਮਲ ਹੋਣ ਲਈ ਸੱਦਾ ਦਿੱਤਾ ਗਿਆ ਹੈ।",
   "groupLeave": "ਗਰੁੱਪ ਛੱਡੋ",
-  "groupLeaveDescription": "ਕੀ ਤੁਸੀਂ ਯਕੀਨਨ {group_name} ਨੂੰ ਛੱਡਣਾ ਚਾਹੁੰਦੇ ਹੋ?",
+  "groupLeaveDescription": "ਕੀ ਤੁਸੀਂ ਯਕੀਨਨ <b>{group_name}</b> ਨੂੰ ਛੱਡਣਾ ਚਾਹੁੰਦੇ ਹੋ?",
   "groupLeaveDescriptionAdmin": "ਕੀ ਤੁਸੀਂ ਯਕੀਨਨ <b>{group_name}</b> ਛੱਡਣਾ ਚਾਹੁੰਦੇ ਹੋ?<br/><br/>ਇਹ ਸਾਰੇ ਮੈਂਬਰਾਂ ਨੂੰ ਹਟਾ ਦੇਵੇਗਾ ਅਤੇ ਸਾਰੀ ਗਰੁੱਪ ਸੂਚਨਾ ਨੂੰ ਮਿਟਾ ਦੇਵੇਗਾ।",
   "groupLeaveErrorFailed": "{group_name} ਨੂੰ ਛੱਡਣ ਵਿੱਚ ਅਸਫਲ",
   "groupLegacyBanner": "ਗਰੁੱਪਾਂ ਨੂੰ ਅਪਗਰੇਡ ਕੀਤਾ ਗਿਆ ਹੈ, ਅਪਗਰੇਡ ਕਰਨ ਲਈ ਨਵਾਂ ਗਰੁੱਪ ਬਣਾਓ। ਪੁਰਾਣੀ ਗਰੁੱਪ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ {date} ਤੋਂ ਘਟਦਾ ਰਹਿਣਗੀਆਂ।",
@@ -695,7 +695,7 @@
   "recoveryPasswordErrorTitle": "ਗਲਤ ਡੀਕੋਡ ਪਾਸਵਰਡ",
   "recoveryPasswordExplanation": "ਆਪਣਾ ਖਾਤਾ ਲੋਡ ਕਰਨ ਲਈ, ਆਪਣਾ ਰਿਕਵਰੀ ਪਾਸਵਰਡ ਦਰਜ ਕਰੋ।",
   "recoveryPasswordHidePermanently": "ਹਮੇਸ਼ਾ ਲਈ ਹਤਿਆਰ ਲੁਕਾਓ",
-  "recoveryPasswordHidePermanentlyDescription1": "ਤੁਹਾਡੇ ਰਿਕਵਰੀ ਪਾਸਵਰਡ ਤੋਂ ਬਿਨਾਂ, ਤੁਸੀਂ ਆਪਣੇ ਖਾਤੇ ਨੂੰ ਨਵੇਂ ਉਪਕਰਣਾਂ ਤੇ ਲੋਡ ਨਹੀਂ ਕਰ ਸਕਦੇ। <br /><br />ਅਸੀਂ ਬਹੁਤ ਸਖਤ ਸਿਫਾਰਸ਼ੀ ਕਰਦੇ ਹਾਂ ਕਿ ਤੁਸੀਂ ਆਪਣੇ ਰਿਕਵਰੀ ਪਾਸਵਰਡ ਨੂੰ ਸੁਰੱਖਿਅਤ ਅਤੇ ਸੁਰੱਖਿਅਤ ਜਗ੍ਹਾ ਵਿੱਚ ਰੱਖੋ ਜਾਂਜਾਰੀ ਰੱਖਣ ਤੋਂ ਪਹਿਲਾਂ।",
+  "recoveryPasswordHidePermanentlyDescription1": "ਤੁਹਾਡੇ ਰਿਕਵਰੀ ਪਾਸਵਰਡ ਤੋਂ ਬਿਨਾਂ, ਤੁਸੀਂ ਆਪਣੇ ਖਾਤੇ ਨੂੰ ਨਵੇਂ ਉਪਕਰਣਾਂ ਤੇ ਲੋਡ ਨਹੀਂ ਕਰ ਸਕਦੇ। <br/><br/>ਅਸੀਂ ਬਹੁਤ ਸਖਤ ਸਿਫਾਰਸ਼ੀ ਕਰਦੇ ਹਾਂ ਕਿ ਤੁਸੀਂ ਆਪਣੇ ਰਿਕਵਰੀ ਪਾਸਵਰਡ ਨੂੰ ਸੁਰੱਖਿਅਤ ਅਤੇ ਸੁਰੱਖਿਅਤ ਜਗ੍ਹਾ ਵਿੱਚ ਰੱਖੋ ਜਾਂਜਾਰੀ ਰੱਖਣ ਤੋਂ ਪਹਿਲਾਂ।",
   "recoveryPasswordHidePermanentlyDescription2": "ਕੀ ਤੁਸੀਂ ਯਕੀਨਨ ਆਪਣੇ ਮਨੁੱਖੀ ਕਰੋੜੀ ਸੰਕੇਤਾਂ ਨੂੰ ਇਸ ਜੰਤਰ 'ਤੇ ਅਸਥਾਈ ਤੌਰ ਤੇ ਛੁਪਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ? ਇਹ ਮੁੜ ਨਹੀਂ ਕੀਤਾ ਜਾ ਸਕਦਾ।",
   "recoveryPasswordHideRecoveryPassword": "ਹਤਿਆਰ ਲੁਕਾਓ",
   "recoveryPasswordHideRecoveryPasswordDescription": "ਇਸ ਜੰਤਰ 'ਤੇ ਆਪਣਾ ਸੰਨਜੀਵਨ ਪਾਸਵਰਡ ਸਥਾਈ ਤੌਰ 'ਤੇ ਛੁਪਾਓ।",
