--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Zablokowano {name}",
   "blockDescription": "Czy na pewno chcesz zablokować <b>{name}?</b> Zablokowani użytkownicy nie mogą wysyłać próśb o wiadomości, zaproszeń do grupy ani dzwonić.",
   "blockUnblock": "Odblokuj",
-  "blockUnblockName": "Czy na pewno chcesz odblokować {name}?",
-  "blockUnblockNameMultiple": "Czy na pewno chcesz odblokować {name} i {count} innych?",
-  "blockUnblockNameTwo": "Czy na pewno chcesz odblokować {name} i 1 osobę?",
+  "blockUnblockName": "Czy na pewno chcesz odblokować <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Czy na pewno chcesz odblokować <b>{name}</b> i <b>{count} innych</b>?",
+  "blockUnblockNameTwo": "Czy na pewno chcesz odblokować <b>{name}</b> i 1 osobę?",
   "blockUnblockedUser": "Odblokowano {name}",
   "call": "Zadzwoń",
   "callsCalledYou": "{name} dzwonił(a) do Ciebie",
@@ -317,7 +317,7 @@
   "disappearingMessagesTimer": "Minutnik",
   "disappearingMessagesTurnedOff": "<b>{name}</b> wyłączył(a) znikające wiadomości. Wiadomości, które wysyłają, nie będą już znikać.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> <b>wyłącza</b> znikające wiadomości.",
-  "disappearingMessagesTurnedOffYou": "<b>Ty</b> wyłączyłeś(-aś) znikające wiadomości. Wiadomości, które wysyłasz, nie będą już znikać.",
+  "disappearingMessagesTurnedOffYou": "<b>Ty</b> wyłączyłeś(-aś) znikające wiadomości. Wysłane wiadomości nie będą już znikały.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Wyłączono</b> znikające wiadomości.",
   "disappearingMessagesTypeRead": "przeczytano",
   "disappearingMessagesTypeSent": "wysłano",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>Ty</b> i <b>{count} innych użytkowników</b> zostaliście zaproszeni do grupy.",
   "groupInviteYouAndOtherNew": "<b>Ty</b> oraz użytkownik <b>{other_name}</b> zostaliście zaproszeni do grupy.",
   "groupLeave": "Opuść grupę",
-  "groupLeaveDescription": "Czy na pewno chcesz opuścić {group_name}?",
+  "groupLeaveDescription": "Czy na pewno chcesz opuścić <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Czy na pewno chcesz opuścić grupę <b>{group_name}</b>?<br/><br/>Usunie to wszystkich jej członków i całą zawartość grupy.",
   "groupLeaveErrorFailed": "Nie udało się opuścić {group_name}",
   "groupLegacyBanner": "Grupy zostały zaktualizowane, utwórz nową grupę, aby zaktualizować. Stara funkcjonalność grupy będzie zdegradowana od {date}.",
@@ -478,7 +478,7 @@
   "linkPreviewsSend": "Wyślij podglądy linków",
   "linkPreviewsSendModalDescription": "Pełna ochrona metadanych nie będzie dostępna podczas wysyłania podglądu linków.",
   "linkPreviewsTurnedOff": "Podglądy linków wyłączone",
-  "linkPreviewsTurnedOffDescription": "{app_name} musi połączyć się z powiązanymi stronami, aby generować podgląd linków, które wysyłasz i otrzymujesz. <br /><br />Możesz je włączyć w ustawieniach {app_name}.",
+  "linkPreviewsTurnedOffDescription": "{app_name} musi połączyć się z powiązanymi stronami, aby generować podgląd linków, które wysyłasz i otrzymujesz. <br/><br/>Możesz je włączyć w ustawieniach {app_name}.",
   "loadAccount": "Ładowanie konta",
   "loadAccountProgressMessage": "Ładowanie konta",
   "loading": "Ładowanie...",
