--- a/_locales/ps/messages.json
+++ b/_locales/ps/messages.json
@@ -20,7 +20,7 @@
   "adminPromoteMoreDescription": "آیا تاسو ډاډه یاست چې غواړئ <b>{name}</b> او <b>{count} نور</b> ته اډمین ترویج کړئ؟ اډمینونه نشي لرې کیدلی.",
   "adminPromoteToAdmin": "اداري ته ترقي ورکړئ",
   "adminPromoteTwoDescription": "آیا تاسو ډاډه یاست چې غواړئ <b>{name} </b>او <b>{other_name} </b> ته اډمین ترویج کړئ؟ اډمینونه نشي لرې کیدلی.",
-  "adminPromotedToAdmin": "<b>{name}<b> اډمین ته لوړ شوی.",
+  "adminPromotedToAdmin": "<b>{name}</b> اډمین ته لوړ شوی.",
   "adminPromotionFailed": "د اډمین ترفیع ناکامه شوه",
   "adminPromotionFailedDescription": "د {name} په {group_name} کې ترفیع کې ناکام",
   "adminPromotionFailedDescriptionMultiple": "د {name} او نورو {count} په {group_name} کې ترفیع کې ناکام",
@@ -32,7 +32,7 @@
   "adminRemoveFailed": "{name} د ایډمین څخه لرې کولو کې ناکام.",
   "adminRemoveFailedMultiple": "<b>{name}</b> او <b>{count} نور</b> د ایډمین څخه لرې کولو کې ناکام.",
   "adminRemoveFailedOther": "<b>{name}</b> او <b>{other_name}</b> د ایډمین څخه لرې کولو کې ناکام.",
-  "adminRemovedUser": "<b>{name}<b> د اډمین په توګه لرې کړل شوی.",
+  "adminRemovedUser": "<b>{name}</b> د اډمین په توګه لرې کړل شوی.",
   "adminRemovedUserMultiple": "<b>{name}</b> او <b>{count} نور</b> د ایډمین څخه لرې کړل شوی دی.",
   "adminRemovedUserOther": "<b>{name}</b> او <b>{other_name}</b> د ایډمین څخه لرې کړل شوی دی.",
   "adminSendingPromotion": "د مدیر پرمختګ لیږل",
@@ -128,8 +128,8 @@
   "blockDescription": "آیا تاسې ډاډه یاست چې غواړئ <b>{name}‌</b> بلاک کړئ؟ بلاک شوي کاروونکي تاسو ته د پیغام غوښتنې، د ډلې بلنې یا زنګ وهلو وړتیا نه لري.",
   "blockUnblock": "بېبندیز",
   "blockUnblockName": "آیا تاسو ډاډه یاست چې {name} غیر بلاک کړئ؟",
-  "blockUnblockNameMultiple": "آیا تاسو ډاډه یاست چې غواړئ {name} او {count} نور غیر بلاک کړئ؟",
-  "blockUnblockNameTwo": "آیا تاسو ډاډه یاست چې غواړئ {name} او 1 بل غیر بلاک کړئ؟",
+  "blockUnblockNameMultiple": "آیا تاسو ډاډه یاست چې غواړئ </b>{name}<b> او </b>{count}<b> نور غیر بلاک کړئ؟",
+  "blockUnblockNameTwo": "آیا تاسو ډاډه یاست چې غواړئ </b>{name}<b> او 1 بل غیر بلاک کړئ؟",
   "blockUnblockedUser": "{name} بېبندیز شو",
   "call": "کال",
   "callsCalledYou": "{name} تاسو ته زنګ وواهه",
@@ -253,7 +253,7 @@
   "cut": "معلومات له منځه ندي تللي",
   "databaseErrorGeneric": "د ډیټابیس تېروتنه وشوه.<br/><br/> خپل اپلیکیشن لوګونه صادر کړئ ترڅو د ډیبګ کولو لپاره یې شریک کړئ. که دا ناکامه شي، {app_name} بیا نصب کړئ او خپل حساب بیا فعاله کړئ.<br/><br/> خبرداری: دا به ټول پیغامونه، نښلول شوي سندونه او د حساب ډاډا له دوه اونیو څخه زوړ له لاسه ورکړي.",
   "databaseErrorTimeout": "موږ ولیدل چې {app_name} د پیل کولو لپاره اوږد وخت نیسي.<br/><br/>تاسو کولی شئ انتظار وکړئ، د ستونزې لپاره د شریکولو لپاره خپل وسیله لاګونه صادر کړئ، یا د بیا پیل کولو هڅه وکړئ.",
-  "databaseErrorUpdate": "ستاسو د اپ ڈیٹ ډیټابیس د {app_name} دې نسخې سره همغږي نه لري. د اپلیکیشن بیا نصب کړئ او خپل حساب بیا جوړ کړئ ترڅو یو نوی ډیټابیس جوړ کړئ او {app_name} کارول دوام ورکړئ.<br\\/><br\\/>خبرداری: دا به د دوو هفتو څخه زوړ ټول پیغامونه او ملحقات له لاسه ورکیدو لامل شي.",
+  "databaseErrorUpdate": "ستاسو د اپ ڈیٹ ډیټابیس د {app_name} دې نسخې سره همغږي نه لري. د اپلیکیشن بیا نصب کړئ او خپل حساب بیا جوړ کړئ ترڅو یو نوی ډیټابیس جوړ کړئ او {app_name} کارول دوام ورکړئ.<br/><br/>خبرداری: دا به د دوو هفتو څخه زوړ ټول پیغامونه او ملحقات له لاسه ورکیدو لامل شي.",
   "databaseOptimizing": "ډیټابیس سمول",
   "debugLog": "دیباگ لاګ",
   "decline": "رد کول",
@@ -467,7 +467,7 @@
   "legacyGroupMemberNewMultiple": "<b>{name}</b> او <b>{count} نور</b> په ګروپ کې شامل شول.",
   "legacyGroupMemberNewYouMultiple": "<b>تاسو</b> او <b>{count} نور</b> ډله کې شامل شول.",
   "legacyGroupMemberNewYouOther": "<b>تاسو</b> او <b>{other_name}</b> ډله کې شامل شول.",
-  "legacyGroupMemberTwoNew": "<b>{name} <b>او<b>{other_name}<b> ډله کې شامل شول.",
+  "legacyGroupMemberTwoNew": "<b>{name}</b> او <b>{other_name}</b> په ګروپ کې شامل شول.",
   "legacyGroupMemberYouNew": "<b>تاسو</b> ډله کې شامل شو.",
   "linkPreviews": "پیوند مخکتنه",
   "linkPreviewsDescription": "د ملاتړ شوي URLs لپاره لینک مخکتنې وښاياست.",
