--- a/_locales/pt-BR/messages.json
+++ b/_locales/pt-BR/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Bloqueado {name}",
   "blockDescription": "Tem certeza que deseja bloquear <b>{name}?</b> Usuários bloqueados não podem enviar mensagens, pedidos de grupo para você ou ligar para você.",
   "blockUnblock": "Desbloquear",
-  "blockUnblockName": "Você tem certeza que deseja desbloquear {name}?",
-  "blockUnblockNameMultiple": "Você tem certeza que deseja desbloquear {name} e {count} outros?",
-  "blockUnblockNameTwo": "Você tem certeza que deseja desbloquear {name} e 1 outro?",
+  "blockUnblockName": "Você tem certeza que deseja desbloquear <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Você tem certeza que deseja desbloquear <b>{name}</b> e <b>{count} outros</b>?",
+  "blockUnblockNameTwo": "Você tem certeza que deseja desbloquear <b>{name}</b> e 1 outro?",
   "blockUnblockedUser": "Desbloqueado {name}",
   "call": "Chamar",
   "callsCalledYou": "{name} te ligou",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "As mensagens são excluídas após serem enviadas.",
   "disappearingMessagesDisappearAfterSendState": "Desaparecer após enviar - {time}",
   "disappearingMessagesFollowSetting": "Acompanhar configuração",
-  "disappearingMessagesFollowSettingOff": "As mensagens que você enviar não irão mais desaparecer. Tem certeza de que deseja desativar desaparecer mensagens?",
+  "disappearingMessagesFollowSettingOff": "As mensagens que você enviar não irão mais desaparecer. Tem certeza de que deseja <b>desativar</b> desaparecer mensagens?",
   "disappearingMessagesFollowSettingOn": "Defina suas mensagens para desaparecer <b>{time}</b> depois que forem <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} está usando um cliente desatualizado. As mensagens desaparecendo podem não funcionar como esperado.",
   "disappearingMessagesOnlyAdmins": "Apenas administradores do grupo podem alterar esta configuração.",
