--- a/_locales/pt-PT/messages.json
+++ b/_locales/pt-PT/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Bloqueado {name}",
   "blockDescription": "Tem a certeza que quer bloquear <b>{name}</b>? Usuários bloqueados não podem enviar pedidos de mensagem, convites de grupo ou ligar para você.",
   "blockUnblock": "Desbloquear",
-  "blockUnblockName": "Tem certeza que deseja desbloquear {name}?",
-  "blockUnblockNameMultiple": "Tem certeza que deseja desbloquear {name} e {count} outros?",
-  "blockUnblockNameTwo": "Tem certeza que deseja desbloquear {name} e mais uma pessoa?",
+  "blockUnblockName": "Tem certeza que deseja desbloquear <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Tem certeza que deseja desbloquear <b>{name}</b> e <b>{count} outros</b>?",
+  "blockUnblockNameTwo": "Tem certeza que deseja desbloquear <b>{name}</b> e mais uma pessoa?",
   "blockUnblockedUser": "Desbloqueado {name}",
   "call": "Chamar",
   "callsCalledYou": "{name} ligou para você",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "As mensagens serão apagadas após o seu envio.",
   "disappearingMessagesDisappearAfterSendState": "Desaparecer Após Envio - {time}",
   "disappearingMessagesFollowSetting": "Seguir Definições",
-  "disappearingMessagesFollowSettingOff": "As mensagens que você enviar não desaparecerão mais. Tem a certeza que deseja desativar as mensagens desaparecendo?",
+  "disappearingMessagesFollowSettingOff": "As mensagens que enviar já não vão desaparecer. Tem a certeza que deseja <b>desativar</b> o desaparecimento de mensagens?",
   "disappearingMessagesFollowSettingOn": "Configurar para que as suas mensagens desapareçam <b>{time}</b> após terem sido <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} está usando um cliente desatualizado. As mensagens que desaparecem podem não funcionar como esperado.",
   "disappearingMessagesOnlyAdmins": "Somente administradores do grupo podem alterar esta configuração.",
@@ -319,7 +319,7 @@
   "disappearingMessagesTurnedOff": "<b>{name}</b> desativou as mensagens que desaparecem. As mensagens que ele(a) enviar não irão mais desaparecer.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> transformou as mensagens em desaparecimento <b>off</b>.",
   "disappearingMessagesTurnedOffYou": "<b>Você</b> desativou as <b>mensagens que desaparecem</b>. As mensagens que você enviar não irão mais desaparecer.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Você</b> desativou </b> as mensagens desaparecidas.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Você</b> <b>desativou</b> as mensagens desaparecidas.",
   "disappearingMessagesTypeRead": "lida",
   "disappearingMessagesTypeSent": "enviado",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> atualizou as configurações de mensagens que desaparecem.",
@@ -423,7 +423,7 @@
   "groupNameNew": "O nome do grupo é agora '{group_name}'.",
   "groupNameUpdated": "Nome de grupo atualizado.",
   "groupNoMessages": "Você não possui mensagens de <b>{group_name}</b>. Envie uma mensagem para iniciar a conversa!",
-  "groupOnlyAdmin": "Você é o único admin em <b>{group_name}</b>.<br /><br />Os membros e as configurações do grupo não podem ser alterados sem um admin.",
+  "groupOnlyAdmin": "Você é o único admin em <b>{group_name}</b>.<br/><br/>Os membros e as definições do grupo não podem ser alterados sem um admin.",
   "groupPromotedYou": "<b>Você</b> foi promovido a Admin.",
   "groupPromotedYouMultiple": "<b>Você</b> e <b>{count} outros</b> foram promovidos a Admin.",
   "groupPromotedYouTwo": "<b>Você</b> e <b>{name}</b> foram promovidos a Admin.",
@@ -697,7 +697,7 @@
   "recoveryPasswordErrorTitle": "Incorrect Recovery Password",
   "recoveryPasswordExplanation": "Para carregar sua conta, insira sua palavra-passe de recuperação.",
   "recoveryPasswordHidePermanently": "Esconder senha de recuperação permanentemente",
-  "recoveryPasswordHidePermanentlyDescription1": "Sem a sua palavra-passe de recuperação, não pode carregar a sua conta em novos dispositivos. <br /><br />Recomendamos fortemente que guarde a sua palavra-passe de recuperação num lugar seguro antes de continuar.",
+  "recoveryPasswordHidePermanentlyDescription1": "Sem a sua chave de recuperação, não pode carregar a sua conta em novos dispositivos. <br/><br/>Recomendamos fortemente que guarde a sua chave de recuperação num lugar seguro antes de continuar.",
   "recoveryPasswordHidePermanentlyDescription2": "Tem certeza que deseja esconder permanentemente sua senha de recuperação neste dispositivo? Isso não pode ser desfeito.",
   "recoveryPasswordHideRecoveryPassword": "Ocultar Chave de Recuperação",
   "recoveryPasswordHideRecoveryPasswordDescription": "Esconder permanentemente a sua palavra-passe de recuperação neste dispositivo.",
