--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Blocat {name}",
   "blockDescription": "Ești sigur că vrei să blochezi pe <b>{name}?</b> Utilizatorii blocați nu vă pot trimite solicitări de mesaje, invitații de grup sau să vă sune.",
   "blockUnblock": "Deblochează",
-  "blockUnblockName": "Sunteți sigur că doriți să deblocați {name}?",
-  "blockUnblockNameMultiple": "Sunteți sigur că doriți să deblocați {name} și {count} alții?",
-  "blockUnblockNameTwo": "Sunteți sigur că doriți să deblocați {name} și 1 altă persoană?",
+  "blockUnblockName": "Ești sigur/ă că dorești să deblochezi pe <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Ești sigur/ă că dorești să deblochezi pe <b>{name}</b> și <b>alți {count}</b>?",
+  "blockUnblockNameTwo": "Ești sigur/ă că dorești să deblochezi pe <b>{name}</b> și 1 altă persoană?",
   "blockUnblockedUser": "Dezblocat {name}",
   "call": "Apelează",
   "callsCalledYou": "{name} te-a sunat",
@@ -150,7 +150,6 @@
   "callsPermissionsRequiredDescription": "Puteți activa permisiunea „Apeluri Vocale și Video” în Setările de Confidențialitate.",
   "callsReconnecting": "Reconectare...",
   "callsRinging": "Sună...",
-  "callsSessionCall": "{app_name} Apel",
   "callsSettings": "Apeluri (Beta)",
   "callsVoiceAndVideo": "Apeluri video și audio",
   "callsVoiceAndVideoBeta": "Apeluri vocale și video (Beta)",
@@ -318,8 +317,8 @@
   "disappearingMessagesTimer": "Temporizator",
   "disappearingMessagesTurnedOff": "<b>{name}</b> a dezactivat mesajele care dispar. Mesajele pe care le trimit nu vor mai dispărea.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> a <b>dezactivat</b> funcția de mesaje temporare.",
-  "disappearingMessagesTurnedOffYou": "<b>Tu</b> ai dezactivat mesajele care dispar. Mesajele pe care le trimiți nu vor mai dispărea.",
-  "disappearingMessagesTurnedOffYouGroup": "<b></b> Ai <b>dezactivat</b> mesajele care dispar.",
+  "disappearingMessagesTurnedOffYou": "<b>Ai</b> <b>dezactivat</b> funcția de mesaje temporare. Mesajele pe care le trimiți nu vor mai dispărea.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Ai</b> <b>dezactivat</b> mesajele care dispar.",
   "disappearingMessagesTypeRead": "citit",
   "disappearingMessagesTypeSent": "trimis",
   "disappearingMessagesUpdated": "<b>{admin_name} </b>a actualizat setările pentru mesajele care dispar.",
