--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -128,8 +128,8 @@
   "blockDescription": "Вы уверены, что хотите заблокировать <b>{name}?</b> Заблокированные пользователи не могут отправлять вам запросы сообщений, приглашения в группы или звонить вам.",
   "blockUnblock": "Разблокировать",
   "blockUnblockName": "Вы уверены, что хотите разблокировать {name}?",
-  "blockUnblockNameMultiple": "Вы уверены, что хотите разблокировать {name} и {count} других?",
-  "blockUnblockNameTwo": "Вы уверены, что хотите разблокировать {name} и ещё одного пользователя?",
+  "blockUnblockNameMultiple": "Вы уверены, что хотите разблокировать <b>{name}</b> и <b>{count} других</b>?",
+  "blockUnblockNameTwo": "Вы уверены, что хотите разблокировать <b>{name}</b> и ещё одного пользователя?",
   "blockUnblockedUser": "Разблокирован {name}",
   "call": "Вызов",
   "callsCalledYou": "{name} звонил(а) вам",
@@ -317,9 +317,9 @@
   "disappearingMessagesSetYou": "<b>Вы</b> установили исчезающие сообщения на удаление {time} после того, как они были {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Таймер",
   "disappearingMessagesTurnedOff": "<b>{name}</b> отключил исчезающие сообщения. Сообщения, которые он отправляет, больше не исчезнут.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> отключил(а) исчезающие сообщения.",
-  "disappearingMessagesTurnedOffYou": "<b>Вы</b> отключили исчезающие сообщения. Сообщения, которые вы отправляете, больше не исчезнут.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Вы выключили</b> исчезающие сообщения.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> <b>отключил(а)</b> исчезающие сообщения.",
+  "disappearingMessagesTurnedOffYou": "<b>Вы</b> <b>отключили</b> исчезающие сообщения. Отправленные вами сообщения больше не исчезнут.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Вы</b> <b>выключили</b> исчезающие сообщения.",
   "disappearingMessagesTypeRead": "прочитано",
   "disappearingMessagesTypeSent": "отправлено",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> обновил настройки исчезающих сообщений.",
