--- a/_locales/sh/messages.json
+++ b/_locales/sh/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Blokiran/a {name}",
   "blockDescription": "Jesi li siguran da želiš blokirati <b>{name}?</b> Blokirani korisnici ne mogu tebi poslati zahtjeve za poruke, grupne pozivnice ili te zvati.",
   "blockUnblock": "Ukloni blokadu",
-  "blockUnblockName": "Jesi li siguran da želiš deblokirati {name}?",
-  "blockUnblockNameMultiple": "Jesi li siguran da želiš deblokirati {name} i {count} drugih?",
-  "blockUnblockNameTwo": "Jesi li siguran da želiš deblokirati {name} i 1 drugo?",
+  "blockUnblockName": "Jesi li siguran da želiš deblokirati <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Jesi li siguran da želiš deblokirati <b>{name}</b> i <b>{count} drugih</b>?",
+  "blockUnblockNameTwo": "Jesi li siguran da želiš deblokirati <b>{name}</b> i 1 drugo?",
   "blockUnblockedUser": "Odblokiran {name}",
   "call": "Poziv",
   "callsCalledYou": "{name} vas je zvao",
@@ -316,7 +316,7 @@
   "disappearingMessagesSetYou": "<b>Ti</b> si postavio da poruke nestanu {time} nakon što su bile {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Tajmer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> je isključio nestajuće poruke. Poruke koje pošalju više neće nestajati.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> je isključio nestajuće poruke.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> je <b>isključio</b> nestajuće poruke.",
   "disappearingMessagesTurnedOffYou": "<b>Ti</b> si isključio <b>nestajuće</b> poruke. Poruke koje pošalješ više neće nestajati.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Vi</b> ste isključili <b>nestajuće poruke</b>.",
   "disappearingMessagesTypeRead": "pročitaj",
