--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "අවහිර කළා {name}",
   "blockDescription": "ඔබට <b>{name}</b> ඔවුන් අවහිර කිරීමට අවශ්‍ය බව විශ්වාසද? අවහිර කළ පරිශීලකයින්ට ඔබට පණිවිඩ ඉල්ලීම්, සමූහ ආරාධනා හෝ ඇමතුම් යැවිය නොහැක.",
   "blockUnblock": "අනවහිර",
-  "blockUnblockName": "ඔබට {name} අවහිර කිරීම ඉවත් කිරීමට අවශ්‍ය බව විශ්වාසද?",
-  "blockUnblockNameMultiple": "ඔබට {name} සහ තවත් {count} අය අවහිර කිරීම ඉවත් කිරීමට අවශ්‍ය බව විශ්වාසද?",
-  "blockUnblockNameTwo": "ඔබට {name} සහ තවත් 1 අය අවහිර කිරීම ඉවත් කිරීමට අවශ්‍ය බව විශ්වාසද?",
+  "blockUnblockName": "ඔබට <b>{name}</b> අවහිර කිරීම ඉවත් කිරීමට අවශ්‍ය බව විශ්වාසද?",
+  "blockUnblockNameMultiple": "ඔබට <b>{name}</b> සහ තවත් <b>{count}</b> අය අවහිර කිරීම ඉවත් කිරීමට අවශ්‍ය බව විශ්වාසද?",
+  "blockUnblockNameTwo": "ඔබට <b>{name}</b> සහ තවත් 1 අය අවහිර කිරීම ඉවත් කිරීමට අවශ්‍ය බව විශ්වාසද?",
   "blockUnblockedUser": "{name} අනවහිර කළා.",
   "call": "අමතන්න",
   "callsCalledYou": "{name} ඔබව ඇමතුවා",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>ඔබ</b> සහ <b>{count} වෙනත් අය</b> කණ්ඩායමට සම්බන්ධ වන්නට ආරාධනා කරන ලදී.",
   "groupInviteYouAndOtherNew": "<b>ඔබ</b> සහ <b>{other_name}</b> කණ්ඩායමට සම්බන්ධ වන්නට ආරාධනා කරන ලදී.",
   "groupLeave": "සමූහය හැරයන්න",
-  "groupLeaveDescription": "ඔබට {group_name} හැර යාමට අවශ්‍ය බව විශ්වාසද?",
+  "groupLeaveDescription": "ඔබට <b>{group_name}</b> හැර යාමට අවශ්‍ය බව විශ්වාසද?",
   "groupLeaveDescriptionAdmin": "ඔබට <b>{group_name}</b> හැර පිටවීමට අවශ්‍ය බව විශ්වාසද?<br/><br/>මෙය සියලු සාමාජිකයින් ඉවත් කර සහ සමූහ අන්තර්ගතය සියල්ල මකනු ඇත.",
   "groupLeaveErrorFailed": "{group_name} හැර පිටවීමට අසමත් විය",
   "groupLegacyBanner": "සමූහ යාවත්කාලීන කිරීමට, නව සමූහයක් සාදන්න. පරණ සමූහ ක්‍රියාකාරකම {date} සිට අඩක නිර්මිත කරනු ඇත.",
