--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Zablokovaný {name}",
   "blockDescription": "Ste si istý, že chcete zablokovať <b>{name}</b>? Zablokovaní používatelia vám nemôžu posielať žiadosti o správy, pozvánky do skupín alebo vám volať.",
   "blockUnblock": "Odblokovať",
-  "blockUnblockName": "Naozaj chcete odblokovať {name}?",
-  "blockUnblockNameMultiple": "Naozaj chcete odblokovať {name} a {count} ďalších?",
-  "blockUnblockNameTwo": "Naozaj chcete odblokovať {name} a 1 iného?",
+  "blockUnblockName": "Naozaj chcete odblokovať <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Naozaj chcete odblokovať <b>{name}</b> a <b>{count}</b> ďalších?",
+  "blockUnblockNameTwo": "Naozaj chcete odblokovať <b>{name}</b> a 1 iného?",
   "blockUnblockedUser": "Odblokovaný {name}",
   "call": "Hovor",
   "callsCalledYou": "{name} vám volal/a",
@@ -252,7 +252,7 @@
   "create": "Vytvoriť",
   "cut": "Vystrihnúť",
   "databaseErrorGeneric": "Vyskytla sa chyba databázy.<br/><br/>Exportujte svoje denníky aplikácie, aby ste ich mohli zdieľať na riešenie problémov. Ak to nebude úspešné, preinštalujte {app_name} a obnovte váš účet.<br/><br/>Varovanie: To povedie k strate všetkých správ, príloh a údajov účtu starších ako dva týždne.",
-  "databaseErrorTimeout": "Všimli sme si, že {app_name} sa dlho spúšťa.<br /><br />Môžete pokračovať v čakaní, exportovať záznamy z vášho zariadenia kvôli riešeniu problémov alebo skúsiť reštartovať Session.",
+  "databaseErrorTimeout": "Všimli sme si, že {app_name} sa dlho spúšťa.<br/><br/>Môžete pokračovať v čakaní, exportovať záznamy z vášho zariadenia kvôli riešeniu problémov alebo skúsiť reštartovať {app_name}.",
   "databaseErrorUpdate": "Vaša databáza aplikácie nie je kompatibilná s touto verziou {app_name}. Preinštalujte aplikáciu a obnovte svoj účet, aby sa vygenerovala nová databáza a mohli ste pokračovať v používaní {app_name}.<br/><br/>Upozornenie: Týmto dôjde k strate všetkých správ a príloh starších ako dva týždne.",
   "databaseOptimizing": "Optimalizácia databázy",
   "debugLog": "Ladiaci log",
@@ -307,7 +307,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Správy sa po odoslaní vymažú.",
   "disappearingMessagesDisappearAfterSendState": "Zmiznutie po odoslaní - {time}",
   "disappearingMessagesFollowSetting": "Dodržať nastavenie",
-  "disappearingMessagesFollowSettingOff": "Správy, ktoré posielate, už nezmiznú. Ste si istý, že chcete vypnúť zmiznutie správ?",
+  "disappearingMessagesFollowSettingOff": "Správy, ktoré odošlete, už nezmiznú. Naozaj chcete miznúce správy <b>vypnúť</b>?",
   "disappearingMessagesFollowSettingOn": "Nastavte správy tak, aby zmizli <b>{time}</b> po tom, čo boli <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} používa zastaraného klienta. Miznúce správy nemusia fungovať podľa očakávania.",
   "disappearingMessagesOnlyAdmins": "Toto nastavenie môže zmeniť iba správca skupiny.",
@@ -316,9 +316,9 @@
   "disappearingMessagesSetYou": "<b>Vy</b> ste nastavili správy tak, aby zmizli {time} po tom, čo boli {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Časovač",
   "disappearingMessagesTurnedOff": "<b>{name}</b> vypol/a miznúce správy. Správy, ktoré posielajú, už nezmiznú.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> vypol/a miznúce správy.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> vypol miznúce správy <b>vypnuté</b>.",
   "disappearingMessagesTurnedOffYou": "<b>Vy</b> ste <b>vypnul/i</b> miznúce správy. Správy, ktoré posielate, už nezmiznú.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Vy</b> ste vypli miznúce správy.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Vy</b> ste <b>vypli</b> miznúce správy.",
   "disappearingMessagesTypeRead": "prečítané",
   "disappearingMessagesTypeSent": "odoslané",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> aktualizoval nastavenia miznúcich správ.",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>Vy</b> a <b>{count} ďalší</b> ste boli pozvaní, aby ste sa pripojili do skupiny.",
   "groupInviteYouAndOtherNew": "<b>Vy</b> a <b>{other_name}</b> ste boli pozvaní, aby ste sa pripojili do skupiny.",
   "groupLeave": "Opustiť skupinu",
-  "groupLeaveDescription": "Naozaj chcete opustiť skupinu {group_name}?",
+  "groupLeaveDescription": "Naozaj chcete opustiť skupinu <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Ste si istí, že chcete opustiť <b>{group_name}</b>?<br/><br/>Tým sa odstránia všetci členovia a všetok obsah skupiny bude vymazaný.",
   "groupLeaveErrorFailed": "Nepodarilo sa opustiť {group_name}",
   "groupLegacyBanner": "Skupiny boli aktualizované, vytvorte novú skupinu na aktualizáciu. Funkčnosť starých skupín sa obmedzí od {date}.",
@@ -422,7 +422,7 @@
   "groupNameNew": "Názov skupiny je teraz {group_name}. ",
   "groupNameUpdated": "Názov skupiny bol aktualizovaný.",
   "groupNoMessages": "Nemáte žiadne správy od <b>{group_name}</b>. Pošlite správu a začnite konverzáciu!",
-  "groupOnlyAdmin": "Ste jediným správcom v <b>{group_name}</b>.<br /><br />Členovia skupiny a nastavenia sa bez správcu nedajú meniť.",
+  "groupOnlyAdmin": "Ste jediným správcom v <b>{group_name}</b>.<br/><br/>Členovia skupiny a nastavenia sa bez správcu nedajú meniť.",
   "groupPromotedYou": "<b>Vy</b> ste boli povýšený/á na správcu.",
   "groupPromotedYouMultiple": "<b>Vy</b> a <b>{count} ďalší</b> ste boli povýšení na správcov.",
   "groupPromotedYouTwo": "<b>Vy</b> a <b>{name}</b> ste boli povýšení na správcov.",
@@ -696,7 +696,7 @@
   "recoveryPasswordErrorTitle": "Nesprávna fráza pre obnovenie",
   "recoveryPasswordExplanation": "Načítanie vášho účtu, zadajte vaše heslo na obnovenie.",
   "recoveryPasswordHidePermanently": "Skryť frázu pre obnovu natrvalo",
-  "recoveryPasswordHidePermanentlyDescription1": "Bez frázy na obnovenie nemôžete načítať svoje konto do nových zariadení. <br /><br />Dôrazne odporúčame, aby ste si pred pokračovaním uložili frázu na obnovenie na bezpečné miesto.",
+  "recoveryPasswordHidePermanentlyDescription1": "Bez frázy na obnovenie nemôžete načítať svoje konto do nových zariadení. <br/><br/>Dôrazne odporúčame, aby ste si pred pokračovaním uložili frázu na obnovenie na bezpečné miesto.",
   "recoveryPasswordHidePermanentlyDescription2": "Naozaj chcete trvalo skryť frázu na obnovenie na tomto zariadení? Toto sa nedá vrátiť späť.",
   "recoveryPasswordHideRecoveryPassword": "Skryť frázu pre obnovenie",
   "recoveryPasswordHideRecoveryPasswordDescription": "Natrvalo skryť frázu na obnovenie na tomto zariadení.",
