--- a/_locales/sl/messages.json
+++ b/_locales/sl/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Blokiram {name}",
   "blockDescription": "Ali ste prepričani, da želite blokirati <b>{name}?</b> Blokirani uporabniki vam ne morejo poslati zahtev za sporočila, povabil v skupino ali vas poklicati.",
   "blockUnblock": "Odblokiraj",
-  "blockUnblockName": "Ali ste prepričani, da želite odblokirati {name}?",
-  "blockUnblockNameMultiple": "Ali ste prepričani, da želite odblokirati {name} in {count} drugih?",
-  "blockUnblockNameTwo": "Ali ste prepričani, da želite odblokirati {name} in 1 drugega?",
+  "blockUnblockName": "Ali ste prepričani, da želite odblokirati <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Ali ste prepričani, da želite odblokirati <b>{name}</b> in <b>{count} drugih</b>?",
+  "blockUnblockNameTwo": "Ali ste prepričani, da želite odblokirati <b>{name}</b> in 1 drugega?",
   "blockUnblockedUser": "Odblokiran {name}",
   "call": "Klic",
   "callsCalledYou": "Oseba {name} vas je klicala",
@@ -317,7 +317,7 @@
   "disappearingMessagesTimer": "Časovnik",
   "disappearingMessagesTurnedOff": "<b>{name} </b> je izključil_a izginjajoča sporočila. Sporočila, ki jih pošljejo, ne bodo več izginila.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> je izklopil_a izginjajoča sporočila <b>off</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>Vi </b> ste izključili izginjajoča sporočila. Sporočila, ki jih pošljete, ne bodo več izginila.",
+  "disappearingMessagesTurnedOffYou": "<b>Vi</b> ste <b>izklopili</b> izginjajoča sporočila. Sporočila, ki jih pošljete, ne bodo več izginila.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Vi</b> ste <b>izklopili</b> izginjajoča sporočila.",
   "disappearingMessagesTypeRead": "prebral(-a)",
   "disappearingMessagesTypeSent": "poslano",
@@ -397,7 +397,7 @@
   "groupInviteYouAndMoreNew": "<b>Vi</b> in <b>{count} drugi</b> ste bili povabljeni, da se pridružite skupini.",
   "groupInviteYouAndOtherNew": "<b>Vi</b> in <b>{other_name}</b> sta bila povabljena, da se pridružita skupini.",
   "groupLeave": "Zapusti skupino",
-  "groupLeaveDescription": "Ali ste prepričani, da želite zapustiti {group_name}?",
+  "groupLeaveDescription": "Ali ste prepričani, da želite zapustiti <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Ali ste prepričani, da želite zapustiti <b>{group_name}</b>?<br/><br/>To bo odstranilo vse člane in izbrisalo vsebine skupine.",
   "groupLeaveErrorFailed": "Ni uspelo zapustiti skupine {group_name}",
   "groupLegacyBanner": "Skupine so bile nadgrajene, ustvarite novo skupino za nadgradnjo. Stara funkcionalnost skupine bo od {date} omejena.",
@@ -696,7 +696,7 @@
   "recoveryPasswordErrorTitle": "Napačno Recovery Password",
   "recoveryPasswordExplanation": "Za nalaganje vašega računa vnesite svoje geslo za obnovitev.",
   "recoveryPasswordHidePermanently": "Skrij Recovery Password za vedno",
-  "recoveryPasswordHidePermanentlyDescription1": "Brez obnovitvenega gesla ne morete naložiti svojega računa na novih napravah. <br /><br />Močno priporočamo, da obnovitveno geslo shranite na varno mesto, preden nadaljujete.",
+  "recoveryPasswordHidePermanentlyDescription1": "Brez obnovitvenega gesla ne morete naložiti svojega računa na novih napravah.<br/><br/>Močno priporočamo, da obnovitveno geslo shranite na varno mesto, preden nadaljujete.",
   "recoveryPasswordHidePermanentlyDescription2": "Ali res želite trajno skriti svoje obnovitveno geslo na tej napravi? Tega ni mogoče razveljaviti.",
   "recoveryPasswordHideRecoveryPassword": "Skrij Recovery Password",
   "recoveryPasswordHideRecoveryPasswordDescription": "Trajno skrij geslo za obnovitev na tej napravi.",
