--- a/_locales/sq/messages.json
+++ b/_locales/sq/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Të bllokohet {name}",
   "blockDescription": "A jeni të sigurt që doni ta bllokoni <b>{name}</b>? Përdoruesit e bllokuar nuk mund t'ju dërgojnë kërkesa për mesazhe, ftesa grupi apo t’ju telefonojnë.",
   "blockUnblock": "Zhbllokoje",
-  "blockUnblockName": "A jeni të sigurt që doni të zhbllokoni {name}?",
+  "blockUnblockName": "A jeni të sigurt që doni të zhbllokoni <b>{name}</b>?",
   "blockUnblockNameMultiple": "A jeni të sigurt që doni të zhbllokoni <b>{name}</b> dhe <b>{count} të tjerë</b>?",
-  "blockUnblockNameTwo": "A jeni të sigurt që doni të zhbllokoni {name} dhe 1 tjetër?",
+  "blockUnblockNameTwo": "A jeni të sigurt që doni të zhbllokoni <b>{name}</b> dhe 1 tjetër?",
   "blockUnblockedUser": "Zhbllokuar {name}",
   "call": "Thirrje",
   "callsCalledYou": "ju thirri {name}",
@@ -316,9 +316,9 @@
   "disappearingMessagesSetYou": "<b>Ju</b> caktoni që mesazhet të zhduken {time} pasi të jenë {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Kohëmatës",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ka fikur mesazhet që zhduken. Mesazhet që ata dërgojnë nuk do të zhduken më.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> e ka çaktivizuar mesazhet që zhduken.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ka <b>çaktivizuar</b> mesazhet që zhduken.",
   "disappearingMessagesTurnedOffYou": "<b>J </b> fikët <b>mesazhet për zhdukje</b>. Mesazhet që dërgoni nuk do të zhduken më.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Ju</b> e keni çaktivizuar mesazhet që zhduken.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Ju</b> keni <b>çaktivizuar</b> mesazhet që zhduken.",
   "disappearingMessagesTypeRead": "lexo",
   "disappearingMessagesTypeSent": "dërguar më",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> përditësoi rregullimet e mesazheve zhdukëse.",
