--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Блокирао/ла {name}",
   "blockDescription": "Да ли сте сигурни да желите да блокирате <b>{name}</b>? Блокирани корисници не могу да вам шаљу захтеве за поруке, позивнице за групе или позиве.",
   "blockUnblock": "Одблокирај",
-  "blockUnblockName": "Да ли сте сигурни да желите да одблокирате {name}?",
-  "blockUnblockNameMultiple": "Да ли сте сигурни да желите да одблокирате {name} и {count} осталих?",
-  "blockUnblockNameTwo": "Да ли сте сигурни да желите да одблокирате {name} и још једну особу?",
+  "blockUnblockName": "Да ли сте сигурни да желите да одблокирате <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Да ли сте сигурни да желите да одблокирате <b>{name}</b> и <b>{count} осталих</b>?",
+  "blockUnblockNameTwo": "Да ли сте сигурни да желите да одблокирате <b>{name}</b> и још једну особу?",
   "blockUnblockedUser": "Одблокирали сте {name}",
   "call": "Позови",
   "callsCalledYou": "{name} вас је позвао/ла",
@@ -318,7 +318,7 @@
   "disappearingMessagesTurnedOff": "<b>{name}</b> је искључио нестајуће поруке. Поруке које пошаљу више неће нестати.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> је искључио нестајуће поруке.",
   "disappearingMessagesTurnedOffYou": "<b>Ви</b> сте искључили <b>нестајуће поруке</b>. Поруке које пошаљете више неће нестати.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Ви</b> сте искључили нестајуће поруке.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Ви</b> сте искључили <b>искључили</b> поруке које нестају.",
   "disappearingMessagesTypeRead": "прочитај",
   "disappearingMessagesTypeSent": "послато",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> је ажурирао подешавања нестајућих порука.",
