--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Blockerade {name}",
   "blockDescription": "Är du säker på att du vill blockera <b>{name}</b>? Blockerade användare kan inte skicka meddelandeförfrågningar, gruppinbjudningar eller ringa dig.",
   "blockUnblock": "Avblockera",
-  "blockUnblockName": "Är du säker på att du vill avblockera {name}?",
-  "blockUnblockNameMultiple": "Är du säker på att du vill avblockera {name} och {count} andra?",
-  "blockUnblockNameTwo": "Är du säker på att du vill avblockera {name} och en annan?",
+  "blockUnblockName": "Är du säker på att du vill avblockera <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Är du säker på att du vill avblockera <b>{name}</b> och <b>{count} andra</b>?",
+  "blockUnblockNameTwo": "Är du säker på att du vill avblockera <b>{name}</b> och en annan?",
   "blockUnblockedUser": "Avblockerad {name}",
   "call": "Samtal",
   "callsCalledYou": "{name} ringde dig",
@@ -254,7 +254,7 @@
   "cut": "Klipp ut",
   "databaseErrorGeneric": "Ett databasfel uppstod.<br/><br/>Exportera dina programloggar för att dela för felsökning. Om detta misslyckas, installera om {app_name} och återställ ditt konto.<br/><br/>Varning: Detta kommer att resultera i förlust av alla meddelanden, bifogningar och kontodata äldre än två veckor.",
   "databaseErrorTimeout": "Vi har märkt att {app_name} tar lång tid att starta.<br/><br/>Du kan fortsätta vänta, exportera dina felsökningsloggar för att dela för felsökning, eller försöka starta om Session.",
-  "databaseErrorUpdate": "Din appdatabas är inkompatibel med den här versionen av {app_name}. Installera om appen och återställ ditt konto för att skapa en ny databas och fortsätta använda {app_name}.<br\\/><br\\/>Varning: Detta resulterar i förlust av alla meddelanden och bilagor äldre än två veckor.",
+  "databaseErrorUpdate": "Din appdatabas är inkompatibel med den här versionen av {app_name}. Installera om appen och återställ ditt konto för att skapa en ny databas och fortsätta använda {app_name}.<br/><br/>Varning: Detta resulterar i förlust av alla meddelanden och bilagor äldre än två veckor.",
   "databaseOptimizing": "Optimerar databas",
   "debugLog": "Felsökningslogg",
   "decline": "Avböj",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Meddelanden raderas efter att de har skickats.",
   "disappearingMessagesDisappearAfterSendState": "Försvinna efter sändning - {time}",
   "disappearingMessagesFollowSetting": "Följ inställning",
-  "disappearingMessagesFollowSettingOff": "Meddelanden du skickar kommer inte längre att försvinna. Är du säker att du vill stänga av försvinnande meddelanden?",
+  "disappearingMessagesFollowSettingOff": "Meddelanden du skickar kommer inte längre att försvinna. Är du säker på att du vill <b>inaktivera</b> meddelanden som försvinner?",
   "disappearingMessagesFollowSettingOn": "Ange att dina meddelanden ska försvinna <b>{time}</b> efter att de har <b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "{name} använder en föråldrad klient. Försvinnande meddelanden kanske inte fungerar som förväntat.",
   "disappearingMessagesOnlyAdmins": "Endast gruppadministratörer kan ändra denna inställning.",
@@ -697,7 +697,7 @@
   "recoveryPasswordErrorTitle": "Felaktig Recovery Password",
   "recoveryPasswordExplanation": "För att läsa in ditt konto, ange ditt återställningslösenord.",
   "recoveryPasswordHidePermanently": "Dölj Recovery Password Permanent",
-  "recoveryPasswordHidePermanentlyDescription1": "Utan ditt återställningslösenord kan du inte ladda ditt konto på nya enheter. <br /><br />Vi rekommenderar starkt att du sparar ditt återställningslösenord på ett säkert och tryggt ställe innan du fortsätter.",
+  "recoveryPasswordHidePermanentlyDescription1": "Utan ditt återställningslösenord kan du inte ladda ditt konto på nya enheter. <br/><br/>Vi rekommenderar starkt att du sparar ditt återställningslösenord på ett säkert och tryggt ställe innan du fortsätter.",
   "recoveryPasswordHidePermanentlyDescription2": "Är du säker på att du vill permanent dölja ditt återställningslösenord på denna enhet? Detta kan inte ångras.",
   "recoveryPasswordHideRecoveryPassword": "Dölj Recovery Password",
   "recoveryPasswordHideRecoveryPasswordDescription": "Dölj återställningslösenordet permanent på denna enhet.",
