--- a/_locales/sw/messages.json
+++ b/_locales/sw/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Amezuiliwa {name}",
   "blockDescription": "Una uhakika unataka kumzuia <b>{name}?</b> Watumiaji waliodhamiriwa hawawezi kukutumia maombi ya ujumbe, mialiko ya kikundi au kukupigia simu.",
   "blockUnblock": "Ondolea kizuizi",
-  "blockUnblockName": "Je, una uhakika unataka kuondolea {name} kizuizi?",
-  "blockUnblockNameMultiple": "Je, una uhakika unataka kuondolea {name} na {count} wengine kizuizi?",
-  "blockUnblockNameTwo": "Je, una uhakika unataka kuondolea {name} na 1 mwingine kizuizi?",
+  "blockUnblockName": "Je, una uhakika unataka kuondolea <b>{name}</b> kizuizi?",
+  "blockUnblockNameMultiple": "Je, una uhakika unataka kuondolea <b>{name}</b> na <b>{count} wengine kizuizi</b>?",
+  "blockUnblockNameTwo": "Je, una uhakika unataka kuondolea <b>{name}</b> na 1 mwingine kizuizi?",
   "blockUnblockedUser": "Kizuizi kiliondolewa kwa {name}",
   "call": "Wito",
   "callsCalledYou": "{name} amekuita",
@@ -252,7 +252,7 @@
   "copy": "Nakili",
   "create": "Unda",
   "cut": "Kata",
-  "databaseErrorGeneric": "Kosa la database limetokea.<br\\/><br\\/>Toa logi za programu zako kushirikisha kwa utatuzi. Ikiwa hili halitafanikiwa, sakinisha tena {app_name} na urejeshe akaunti yako. <br\\/><br\\/> Onyo: Hii itasababisha kupotea kwa ujumbe wote, viambatisho, na data ya akaunti iliyo zaidi ya wiki mbili.",
+  "databaseErrorGeneric": "Kosa la database limetokea.<br/><br/>Toa logi za programu zako kushirikisha kwa utatuzi. Ikiwa hili halitafanikiwa, sakinisha tena {app_name} na urejeshe akaunti yako.<br/><br/> Onyo: Hii itasababisha kupotea kwa ujumbe wote, viambatisho, na data ya akaunti iliyo zaidi ya wiki mbili.",
   "databaseErrorTimeout": "Tumeona {app_name} inachukua muda mrefu kuanza.<br/><br/>Unaweza kuendelea kusubiri, kuhamisha kumbukumbu za kifaa chako kushiriki kwa kutatua shida, au jaribu kuanzisha Session upya.",
   "databaseErrorUpdate": "Hifadhidata ya programu yako hailingani na toleo hili la {app_name}. Sakinusha programu na urejeshe akaunti yako ili kuunda hifadhidata mpya na uendelee kutumia {app_name}.<br/><br/>Onyo: Hii itasababisha kupoteza ujumbe na viambatanisho vyote vilivyo zaidi ya wiki mbili.",
   "databaseOptimizing": "Kuhamisha Hifadhidata",
@@ -398,7 +398,7 @@
   "groupInviteYouAndMoreNew": "<b>Wewe</b> na <b>{count} wengine</b> mmealikwa kujiunga na kundi.",
   "groupInviteYouAndOtherNew": "<b>Wewe</b> na <b>{other_name}</b> mmealikwa kujiunga na kundi.",
   "groupLeave": "Toka kwenye kikundi",
-  "groupLeaveDescription": "Je, una uhakika unataka kuondoka {group_name}?",
+  "groupLeaveDescription": "Je, una uhakika unataka kuondoka <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Una uhakika unataka kutoka <b>{group_name}</b>?<br/><br/>Hii itawaondoa wanachama wote na kufuta maudhui yote ya kikundi.",
   "groupLeaveErrorFailed": "Imeshindikana kuondoka {group_name}",
   "groupLegacyBanner": "Makundi yameboreshwa, unda kikundi kipya kuboresha. Utendaji wa kikundi wa zamani utapungua kutoka {date}.",
