--- a/_locales/ta/messages.json
+++ b/_locales/ta/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} தடை",
   "blockDescription": "நீங்கள் நிச்சயமாக <b>{name}</b> ஐ தடுக்க விரும்புகிறீர்களா? தடுக்கப்பட்ட பயனர்களால் உங்களுக்கு தகவல் கோரிக்கைகளை அனுப்ப முடியாது, குழு அழைப்புகளை கையாளவும் அல்லது அழைக்கவும் முடியாது.",
   "blockUnblock": "விடுவி",
-  "blockUnblockName": "{name} யை விடுவிக்க விரும்புகிறீர்களா?",
-  "blockUnblockNameMultiple": "{name} மற்றும் {count} மற்றவர்களை விடுவிக்க விரும்புகிறீர்களா?",
-  "blockUnblockNameTwo": "{name} மற்றும் 1 மற்றவரை விடுவிக்க விரும்புகிறீர்களா?",
+  "blockUnblockName": "<b>{name}</b> யை விடுவிக்க விரும்புகிறீர்களா?",
+  "blockUnblockNameMultiple": "<b>{name}</b> மற்றும் <b>{count}</b> மற்றவர்களை விடுவிக்க விரும்புகிறீர்களா?",
+  "blockUnblockNameTwo": "<b>{name}</b> மற்றும் 1 மற்றவரை விடுவிக்க விரும்புகிறீர்களா?",
   "blockUnblockedUser": "{name} விடுவிக்கப்பட்டது",
   "call": "அழைப்பு",
   "callsCalledYou": "{name} உங்களை அழைத்தார்",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "வ௫யின்ஸேர்ந்தகைல் அவர்கள் கண்டாச் செய்தியவற்ற்யுங்கிற்ற் மருத்துவ்களாயிறுறது.",
   "disappearingMessagesDisappearAfterSendState": "அனுப்பிய பின் காணாமல் போ - {time}",
   "disappearingMessagesFollowSetting": "அமைப்பைப் பின்பற்றுங்கள்",
-  "disappearingMessagesFollowSettingOff": "நீங்கள் எழுப்பும் disappearing messages உங்கள் அரசு இனிக்கை முறியில் மாற்றம் செய்யப்படாது. நீங்கள் ஒன்றை அணைக்க வேண்டும்τει முறையாற் உறுதி செய்ய விருப்பமா?",
+  "disappearingMessagesFollowSettingOff": "நீங்கள் அனுப்பும் செய்திகள் இனி மறைந்துவிடாது. மறைந்து வரும் செய்திகளை <b>முடக்க</b> நிச்சயமாக விரும்புகிறீர்களா?",
   "disappearingMessagesFollowSettingOn": "உங்கள் செய்திகளை <b>{time}</b> வெளிப்படுத்திய பின்னர் <b>{disappearing_messages_type}</b> என அமைப்பதா?",
   "disappearingMessagesLegacy": "{name} பழைய வடிவிலான கிளையண்டைப் பயன்படுத்துகிறார். மறையும் செய்திகள் எதிர்பார்த்தது போல் வேலை செய்யாமல் போகலாம்.",
   "disappearingMessagesOnlyAdmins": "இந்த அமைப்பை குழு நிர்வாகிகள் மட்டுமே மாற்ற முடியும்.",
