--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "บล็อก {name}",
   "blockDescription": "คุณแน่ใจหรือไม่ว่าต้องการบล็อก <b>{name}?</b> ผู้ใช้ที่ถูกบล็อกจะไม่สามารถส่งคำร้องขอข้อความเชิญกลุ่ม หรือโทรหาคุณได้",
   "blockUnblock": "เลิกปิดกั้น.",
-  "blockUnblockName": "คุณแน่ใจหรือไม่ว่าต้องการเลิกบล็อก {name}?",
-  "blockUnblockNameMultiple": "คุณแน่ใจหรือไม่ว่าต้องการเลิกบล็อก {name} และ {count} อื่นๆ?",
-  "blockUnblockNameTwo": "คุณแน่ใจหรือไม่ว่าต้องการเลิกบล็อก {name} และอีก 1 คน?",
+  "blockUnblockName": "คุณแน่ใจหรือไม่ว่าต้องการเลิกบล็อก <b>{name}</b>?",
+  "blockUnblockNameMultiple": "คุณแน่ใจหรือไม่ว่าต้องการเลิกบล็อก <b>{name}</b> และ <b>{count} อื่นๆ</b>?",
+  "blockUnblockNameTwo": "คุณแน่ใจหรือไม่ว่าต้องการเลิกบล็อก <b>{name}</b> และอีก 1 คน?",
   "blockUnblockedUser": "เลิกปิดกั้น {name}.",
   "call": "โทร",
   "callsCalledYou": "{name} ได้โทรหาคุณ",
@@ -318,7 +318,7 @@
   "disappearingMessagesTimer": "ตั้งเวลา",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ได้ปิดข้อความที่ลบตัวเองแล้ว ข้อความที่เขาส่งจะไม่หายไปอีกต่อไป",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ปิดข้อความที่หายไป <b>แล้ว</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>คุณ</b> ปิดข้อความที่ลบตัวเองแล้ว ข้อความที่คุณส่งจะไม่หายไป",
+  "disappearingMessagesTurnedOffYou": "<b>คุณ</b>ปิด<b>ปิด</b>ข้อความที่หายไป ข้อความที่คุณส่งจะไม่หายไปอีกต่อไป",
   "disappearingMessagesTurnedOffYouGroup": "<b>คุณ</b> ปิด <b>ข้อความที่หายไป</b> แล้ว.",
   "disappearingMessagesTypeRead": "อ่านแล้ว",
   "disappearingMessagesTypeSent": "ส่งแล้ว",
@@ -433,7 +433,7 @@
   "groupRemoveMessages": "{count, plural, other [ลบผู้ใช้และข้อความของพวกเขา]}",
   "groupRemoveUserOnly": "{count, plural, other [ลบผู้ใช้]}",
   "groupRemoved": "<b>{name}</b> ถูกลบออกจากกลุ่ม",
-  "groupRemovedMultiple": "<b>{name} and {count} อื่นๆ</b> ถูกลบออกจากกลุ่ม",
+  "groupRemovedMultiple": "<b>{name}</b> and <b>{count} อื่นๆ</b> ถูกลบออกจากกลุ่ม",
   "groupRemovedTwo": "<b>{name}</b> และ <b>{other_name}</b> ถูกลบออกจากกลุ่ม",
   "groupRemovedYou": "คุณได้ถูกลบออกจาก <b>{group_name}</b> แล้ว",
   "groupRemovedYouMultiple": "<b>คุณ</b> และ <b>{count} คนอื่นๆ</b> ถูกลบออกจากกลุ่ม.",
@@ -697,7 +697,7 @@
   "recoveryPasswordErrorTitle": "Recovery Password ไม่ถูกต้อง",
   "recoveryPasswordExplanation": "กรอกรหัสผ่านกู้คืนของคุณเพื่อโหลดบัญชีของคุณ",
   "recoveryPasswordHidePermanently": "ซ่อน Recovery Password อย่างถาวร",
-  "recoveryPasswordHidePermanentlyDescription1": "หากไม่มีรหัสผ่านกู้คืน คุณไม่สามารถโหลดบัญชีของคุณในอุปกรณ์ใหม่ได้ <br /><br />เราขอแนะนำอย่างยิ่งให้คุณบันทึกความปลอดภัยของรหัสผ่านกู้คืนของคุณไว้ในที่ปลอดภัย",
+  "recoveryPasswordHidePermanentlyDescription1": "หากไม่มีรหัสผ่านกู้คืน คุณไม่สามารถโหลดบัญชีของคุณในอุปกรณ์ใหม่ได้ <br/><br/>เราขอแนะนำอย่างยิ่งให้คุณบันทึกความปลอดภัยของรหัสผ่านกู้คืนของคุณไว้ในที่ปลอดภัย",
   "recoveryPasswordHidePermanentlyDescription2": "คุณแน่ใจหรือไม่ว่าต้องการซ่อนไว้รหัสผ่านการกู้คืนบนอุปกรณ์นี้อย่างถาวร? ไม่สามารถย้อนกลับได้",
   "recoveryPasswordHideRecoveryPassword": "ซ่อน Recovery Password",
   "recoveryPasswordHideRecoveryPasswordDescription": "ซ่อนรหัสการกู้คืนของคุณบนอุปกรณ์นี้อย่างถาวร",
