--- a/_locales/tl/messages.json
+++ b/_locales/tl/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Naka-block {name}",
   "blockDescription": "Sigurado ka bang gusto mong i-block si <b>{name}?</b> Ang mga na-block na gumagamit ay hindi maaaring magpadala sa iyo ng mga kahilingan sa mensahe, mga paanyaya sa grupo, o tumawag sa iyo.",
   "blockUnblock": "I-unblock",
-  "blockUnblockName": "Sigurado ka bang gusto mong i-unblock si {name}?",
-  "blockUnblockNameMultiple": "Sigurado ka bang gusto mong i-unblock si {name} at {count} pa?",
-  "blockUnblockNameTwo": "Sigurado ka bang gusto mong i-unblock si {name} at 1 pa?",
+  "blockUnblockName": "Sigurado ka bang gusto mong i-unblock si <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Sigurado ka bang gusto mong i-unblock si <b>{name}</b> at <b>{count} pa</b>?",
+  "blockUnblockNameTwo": "Sigurado ka bang gusto mong i-unblock si <b>{name}</b> at 1 pa?",
   "blockUnblockedUser": "Na-unblock si {name}",
   "call": "Tumawag",
   "callsCalledYou": "Tiniwagan ka ni {name}",
@@ -308,7 +308,7 @@
   "disappearingMessagesDisappearAfterSendDescription": "Mabubura ang mga mensahe pagkapadala na",
   "disappearingMessagesDisappearAfterSendState": "Maglalaho Pagkatapos ma-send - {time}",
   "disappearingMessagesFollowSetting": "Sundin ang Setting",
-  "disappearingMessagesFollowSettingOff": "Hindi na mawawala ang mga mensahe na iyo'ng ipadadala. Sigurado ka ba na gusto mo'ng tumigil ang nawawalang mensahe?",
+  "disappearingMessagesFollowSettingOff": "Hindi na mawawala ang mga mensaheng ipapadala mo. Sigurado ka bang gusto mong <b>i-off</b> ang mga nawawalang mensahe?",
   "disappearingMessagesFollowSettingOn": "Itakda ang iyong mga mensahe upang maglaho <b>{time}</b> pagkatapos nilang ma-<b>{disappearing_messages_type}</b>?",
   "disappearingMessagesLegacy": "Gumagamit ng lumang kliyente si {name}. Ang mga nawawalang mensahe ay maaaring hindi gumana nang inaasahan.",
   "disappearingMessagesOnlyAdmins": "Tanging admin ng grupo ang maaaring magbago ng setting na ito.",
@@ -317,7 +317,7 @@
   "disappearingMessagesSetYou": "<b>Ikaw</b> ay na-set ang mga mensahe na maglaho pagkatapos ng {time} matapos itong {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Timer",
   "disappearingMessagesTurnedOff": "<b>{name}</b> ay pinatay ang mga disappearing messages. Ang mga mensaheng kanilang ipapadala ay hindi na maglalaho.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> ay tinanggal ang naglalahong mensahe.",
+  "disappearingMessagesTurnedOffGroup": "<b>Naka-off</b> ni <b>{name}</b> ang mga nawawalang mensahe.",
   "disappearingMessagesTurnedOffYou": "<b>Ikaw</b> ay pinatay ang <b>mga naglalahong mensahe</b>. Ang mga mensaheng ipapadala mo ay hindi na maglalaho.",
   "disappearingMessagesTurnedOffYouGroup": "<b>Ikaw</b> ay tinanggal ang <b>naglahong</b> mga mensahe.",
   "disappearingMessagesTypeRead": "nabasa",
@@ -398,7 +398,7 @@
   "groupInviteYouAndMoreNew": "<b>Ikaw</b> at <b>{count} iba pa</b> ay inimbitahan na sumali sa grupo.",
   "groupInviteYouAndOtherNew": "<b>Ikaw</b> at <b>{other_name}</b> ay inimbitahan na sumali sa grupo.",
   "groupLeave": "Umalis sa grupo",
-  "groupLeaveDescription": "Sigurado ka bang gusto mong umalis sa {group_name}?",
+  "groupLeaveDescription": "Sigurado ka bang gusto mong umalis sa <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Sigurado ka bang gusto mong umalis sa <b>{group_name}</b>?<br/><br/>Mababura nito ang lahat ng miyembro at lahat ng group content.",
   "groupLeaveErrorFailed": "Nabigong umalis sa {group_name}",
   "groupLegacyBanner": "Na-upgrade na ang mga grupo, lumikha ng bagong grupo upang mag-upgrade. Ang lumang pagpapagana ng grupo ay babawasan mula {date}.",
@@ -423,7 +423,7 @@
   "groupNameNew": "Ang pangalan ng grupo ay ngayon ay {group_name}. ",
   "groupNameUpdated": "Na-update ang pangalan ng grupo.",
   "groupNoMessages": "Wala kang mga mensahe mula sa <b>{group_name}</b>. Magpadala ng mensahe upang simulan ang pag-uusap!",
-  "groupOnlyAdmin": "Ikaw ang tanging admin sa <b>{group_name}</b>.<br /><br />Ang mga miyembro ng grupo at mga setting ay hindi maaaring baguhin nang walang admin.",
+  "groupOnlyAdmin": "Ikaw ang tanging admin sa <b>{group_name}</b>.<br/><br/>Ang mga miyembro ng grupo at mga setting ay hindi maaaring baguhin nang walang admin.",
   "groupPromotedYou": "<b>Ikaw</b> ay na-promote na Admin.",
   "groupPromotedYouMultiple": "<b>Ikaw</b> at <b>{count} iba pa</b> ay na-promote na Admin.",
   "groupPromotedYouTwo": "<b>Ikaw</b> at <b>{name}</b> ay na-promote na Admin.",
