--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -30,7 +30,7 @@
   "adminRemoveAsAdmin": "Видалити з адміністраторів",
   "adminRemoveCommunityNone": "У цій Community немає Адмінів.",
   "adminRemoveFailed": "Не вдалося видалити {name} як адміністратора",
-  "adminRemoveFailedMultiple": "Не вдалося вилучити {name} та ще {count} інших з переліку адміністраторів.",
+  "adminRemoveFailedMultiple": "Не вдалося вилучити <b>{name}</b> та ще <b>{count}</b> інших з переліку адміністраторів.",
   "adminRemoveFailedOther": "Не вдалось видалити <b>{name}</b> та <b>{other_name}</b> як Адміністратора.",
   "adminRemovedUser": "<b>{name}</b> було вилучено із групи.",
   "adminRemovedUserMultiple": "<b>{name}</b> та ще <b>{count} інших</b> було вилучено з переліку адміністраторів.",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Заблоковано {name}",
   "blockDescription": "Ви дійсно бажаєте заблокувати <b>{name}?</b> Заблоковані користувачі не можуть відправляти вам запити, групові запрошення або зателефонувати вам.",
   "blockUnblock": "Розблокувати",
-  "blockUnblockName": "Ви впевнені, що бажаєте розблокувати {name}?",
-  "blockUnblockNameMultiple": "Ви впевнені, що бажаєте розблокувати {name} і {count} інших?",
-  "blockUnblockNameTwo": "Ви впевнені, що бажаєте розблокувати {name} і ще одного?",
+  "blockUnblockName": "Ви впевнені, що бажаєте розблокувати <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Ви впевнені, що бажаєте розблокувати <b>{name}</b> і <b>{count} інших</b>?",
+  "blockUnblockNameTwo": "Ви впевнені, що бажаєте розблокувати <b>{name}</b> і ще одного?",
   "blockUnblockedUser": "Розблоковано {name}",
   "call": "Дзвінок",
   "callsCalledYou": "{name} телефонував(-ла)/дзвонив вам",
@@ -314,12 +314,12 @@
   "disappearingMessagesOnlyAdmins": "Лише адміністратори групи можуть змінювати цей параметр.",
   "disappearingMessagesSent": "Надіслано",
   "disappearingMessagesSet": "<b>{name}</b> встановив, що повідомлення зникатимуть через {time} після того, як вони були {disappearing_messages_type}.",
-  "disappearingMessagesSetYou": "Ви встановили, що повідомлення зникатимуть через {time} після того, як вони були {disappearing_messages_type}.",
+  "disappearingMessagesSetYou": "<b>Ви</b> встановили, що повідомлення зникатимуть через {time} після того, як вони були {disappearing_messages_type}.",
   "disappearingMessagesTimer": "Таймер",
   "disappearingMessagesTurnedOff": "<b>{name}</b> вимкнув зникаючі повідомлення. Повідомлення, які він/вона надсилає, більше не зникатимуть.",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> зникні повідомлення <b>вимкнув</b>.",
-  "disappearingMessagesTurnedOffYou": "<b>Ви</b> оновили налаштування зникаючих повідомлень.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Ви</b> вимкнули <b>зникнення</b> повідомлень.",
+  "disappearingMessagesTurnedOffYou": "<b>Ви</b> вимкнули <b>вимкнення</b> зникнення повідомлень. Надіслані вами повідомлення більше не зникатимуть.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Ви</b> вимкнули <b>вимкнення</b> зникнення повідомлень.",
   "disappearingMessagesTypeRead": "прочитано",
   "disappearingMessagesTypeSent": "надіслано",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> оновив налаштування зникаючих повідомлень.",
@@ -398,7 +398,7 @@
   "groupInviteYouAndMoreNew": "<b>Ви</b> та ще <b>{count} інших</b> приєдналися до групи.",
   "groupInviteYouAndOtherNew": "<b>Ви</b> та <b>{other_name}</b> приєдналися до групи.",
   "groupLeave": "Вийти з групи",
-  "groupLeaveDescription": "Чи дійсно ви бажаєте вийти з {group_name}?",
+  "groupLeaveDescription": "Чи дійсно ви бажаєте вийти з <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Ви впевнені, що хочете вийти з <b>{group_name}</b>?<br/><br/>Це видалить усіх учасників та вміст групи.",
   "groupLeaveErrorFailed": "Не вдалося вийти з {group_name}",
   "groupLegacyBanner": "Групи було оновлено, створіть нову групу для оновлення. Функціонал старої групи буде скорочено з {date}.",
