--- a/_locales/ur/messages.json
+++ b/_locales/ur/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "{name} کو بلاک کر دیا گیا",
   "blockDescription": "کیا آپ واقعی <b>{name}</b> کو بلاک کرنا چاہتے ہیں؟ بلاک کئے گئے صارفین آپ کو میسیج کی درخواستیں، گروپ دعوتیں یا کال نہیں بھیج سکتے۔",
   "blockUnblock": "ان بلاک",
-  "blockUnblockName": "کیا آپ واقعی {name} کو ان بلاک کرنا چاہتے ہیں؟",
-  "blockUnblockNameMultiple": "کیا آپ واقعی {name} اور {count} دیگر کو ان بلاک کرنا چاہتے ہیں؟",
-  "blockUnblockNameTwo": "کیا آپ واقعی {name} اور 1 دیگر کو ان بلاک کرنا چاہتے ہیں؟",
+  "blockUnblockName": "کیا آپ واقعی </b>{name}<b> کو ان بلاک کرنا چاہتے ہیں؟",
+  "blockUnblockNameMultiple": "کیا آپ واقعی </b>{name}<b> اور </b>{count}<b> دیگر کو ان بلاک کرنا چاہتے ہیں؟",
+  "blockUnblockNameTwo": "کیا آپ واقعی </b>{name}<b> اور 1 دیگر کو ان بلاک کرنا چاہتے ہیں؟",
   "blockUnblockedUser": "{name} کو ان بلاک کیا گیا",
   "call": "کال کریں",
   "callsCalledYou": "{name} نے آپ کو کال کی",
