--- a/_locales/uz/messages.json
+++ b/_locales/uz/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Foydalanuvchi {name} bloklandi",
   "blockDescription": "Haqiqatan shu <b>{name}</b>ni bloklashni xohlaysizmi? Bloklangan foydalanuvchilar sizga xabar so'rovlarini, guruh takliflarini yubora olmaydi yoki sizni chaqira olmaydi.",
   "blockUnblock": "Blokdan chiqarish",
-  "blockUnblockName": "Haqiqatan ham {name} ni blokdan chiqarishni xohlaysizmi?",
-  "blockUnblockNameMultiple": "Haqiqatan ham {name} va {count} boshqa foydalanuvchini blokdan chiqarishni xohlaysizmi?",
-  "blockUnblockNameTwo": "Haqiqatan ham {name} va 1 boshqa foydalanuvchini blokdan chiqarishni xohlaysizmi?",
+  "blockUnblockName": "Haqiqatan ham <b>{name}</b> ni blokdan chiqarishni xohlaysizmi?",
+  "blockUnblockNameMultiple": "Haqiqatan ham <b>{name}</b> va <b>{count}</b> boshqa foydalanuvchini blokdan chiqarishni xohlaysizmi?",
+  "blockUnblockNameTwo": "Haqiqatan ham <b>{name}</b> va 1 boshqa foydalanuvchini blokdan chiqarishni xohlaysizmi?",
   "blockUnblockedUser": "Af qilingan {name}",
   "call": "Qo'ng'iroq",
   "callsCalledYou": "{name} sizni chaqirdi",
