--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -19,7 +19,7 @@
   "adminPromoteDescription": "Bạn có chắc chắn rằng bạn muốn nâng cấp <b>{name} </b> lên quản trị viên? Các quản trị viên không thể bị gỡ bỏ.",
   "adminPromoteMoreDescription": "Bạn có chắc chắn rằng bạn muốn nâng cấp <b>{name}</b> và <b> {count} người khác </b> lên quản trị viên? Các quản trị viên không thể bị gỡ bỏ.",
   "adminPromoteToAdmin": "Đề bạt thành Quản trị viên",
-  "adminPromoteTwoDescription": "Bạn có chắc chắn rằng bạn muốn nâng cấp <b>{name} <\\/b> và <b>{other_name} <\\/b> lên quản trị viên? Các quản trị viên không thể bị gỡ bỏ.",
+  "adminPromoteTwoDescription": "Bạn có chắc chắn rằng bạn muốn nâng cấp <b>{name} </b> và <b>{other_name} </b> lên quản trị viên? Các quản trị viên không thể bị gỡ bỏ.",
   "adminPromotedToAdmin": "<b>{name}</b> được thăng lên làm Admin.",
   "adminPromotionFailed": "Thăng chức quản trị viên thất bại",
   "adminPromotionFailedDescription": "Thăng cấp {name} lên Admin trong nhóm {group_name} thất bại",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Đã chặn {name}",
   "blockDescription": "Bạn có chắc chắn rằng bạn muốn chặn <b>{name}?</b> Người dùng bị chặn không thể gửi yêu cầu tin nhắn, lời mời nhóm hoặc gọi cho bạn.",
   "blockUnblock": "Bỏ chặn",
-  "blockUnblockName": "Bạn có chắc chắn rằng bạn muốn bỏ chặn {name}?",
-  "blockUnblockNameMultiple": "Bạn có chắc chắn rằng bạn muốn bỏ chặn {name} và {count} người khác?",
-  "blockUnblockNameTwo": "Bạn có chắc chắn rằng bạn muốn bỏ chặn {name} và 1 người khác?",
+  "blockUnblockName": "Bạn có chắc chắn rằng bạn muốn bỏ chặn <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Bạn có chắc chắn rằng bạn muốn bỏ chặn <b>{name}</b> và <b>{count} người khác</b>?",
+  "blockUnblockNameTwo": "Bạn có chắc chắn rằng bạn muốn bỏ chặn <b>{name}</b> và 1 người khác?",
   "blockUnblockedUser": "Bỏ chặn {name}",
   "call": "Gọi",
   "callsCalledYou": "{name} đã gọi cho bạn",
@@ -252,9 +252,9 @@
   "copy": "Sao chép",
   "create": "Tạo",
   "cut": "Cắt",
-  "databaseErrorGeneric": "Một lỗi cơ sở dữ liệu đã xảy ra.<br\\/><br\\/>Xuất nhật ký ứng dụng của bạn để chia sẻ nhằm xử lý sự cố. Nếu không thành công, hãy cài đặt lại {app_name} và khôi phục tài khoản của bạn.<br\\/><br\\/>Cảnh báo: Điều này sẽ dẫn đến mất tất cả tin nhắn, tệp đính kèm và dữ liệu tài khoản cũ hơn hai tuần.",
+  "databaseErrorGeneric": "Một lỗi cơ sở dữ liệu đã xảy ra.<br\\/><br\\/>Xuất nhật ký ứng dụng của bạn để chia sẻ nhằm xử lý sự cố. Nếu không thành công, hãy cài đặt lại {app_name} và khôi phục tài khoản của bạn.<br/><br/>Cảnh báo: Điều này sẽ dẫn đến mất tất cả tin nhắn, tệp đính kèm và dữ liệu tài khoản cũ hơn hai tuần.",
   "databaseErrorTimeout": "Chúng tôi nhận thấy {app_name} mất nhiều thời gian để khởi động.<br/><br/>Bạn có thể tiếp tục chờ, xuất nhật ký thiết bị để chia sẻ hỗ trợ khắc phục sự cố, hoặc thử khởi động lại Session.",
-  "databaseErrorUpdate": "Cơ sở dữ liệu ứng dụng của bạn không tương thích với phiên bản {app_name} này. Cài đặt lại ứng dụng và khôi phục tài khoản của bạn để tạo một cơ sở dữ liệu mới và tiếp tục sử dụng {app_name}.<br /><br />Cảnh báo: Điều này sẽ dẫn đến việc mất tất cả tin nhắn và tệp đính kèm cũ hơn hai tuần.",
+  "databaseErrorUpdate": "Cơ sở dữ liệu ứng dụng của bạn không tương thích với phiên bản {app_name} này. Cài đặt lại ứng dụng và khôi phục tài khoản của bạn để tạo một cơ sở dữ liệu mới và tiếp tục sử dụng {app_name}.<br/><br/>Cảnh báo: Điều này sẽ dẫn đến việc mất tất cả tin nhắn và tệp đính kèm cũ hơn hai tuần.",
   "databaseOptimizing": "Đang tối ưu hóa cơ sở dữ liệu",
   "debugLog": "Nhật ký sửa lỗi",
   "decline": "Từ chối",
@@ -317,9 +317,9 @@
   "disappearingMessagesSetYou": "<b>Bạn</b> đã đặt tin nhắn tự huỷ sau <b>{time}</b> khi chúng đã được <b>{disappearing_messages_type}</b>.",
   "disappearingMessagesTimer": "Hẹn giờ",
   "disappearingMessagesTurnedOff": "<b>{name}</b> đã tắt tin nhắn tự huỷ. Tin nhắn họ gửi sẽ không còn tự huỷ.",
-  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> đã tắt tin nhắn tự huỷ.",
-  "disappearingMessagesTurnedOffYou": "<b>Bạn <\\/b> đã tắt <b> tin nhắn tự huỷ <\\/b>. Tin nhắn bạn gửi sẽ không còn tự huỷ.",
-  "disappearingMessagesTurnedOffYouGroup": "<b>Bạn</b> đã tắt <b>tin nhắn tự huỷ</b>.",
+  "disappearingMessagesTurnedOffGroup": "<b>{name}</b> đã <b>tắt</b> các tin nhắn biến mất.",
+  "disappearingMessagesTurnedOffYou": "<b>Bạn </b> đã <b>tắt</b> tin nhắn tự huỷ. Tin nhắn bạn gửi sẽ không còn tự huỷ.",
+  "disappearingMessagesTurnedOffYouGroup": "<b>Bạn</b> đã <b>tắt</b> tin nhắn tự huỷ.",
   "disappearingMessagesTypeRead": "đã đọc",
   "disappearingMessagesTypeSent": "đã gửi",
   "disappearingMessagesUpdated": "<b>{admin_name}</b> đã cập nhật cài đặt tin nhắn tự huỷ.",
@@ -398,7 +398,7 @@
   "groupInviteYouAndMoreNew": "<b>Bạn</b> và <b>{count} người khác</b> đã được mời tham gia nhóm.",
   "groupInviteYouAndOtherNew": "<b>Bạn</b> và <b>{other_name}</b> đã được mời tham gia nhóm.",
   "groupLeave": "Rời nhóm",
-  "groupLeaveDescription": "Bạn có chắc chắn rằng bạn muốn rời {group_name}?",
+  "groupLeaveDescription": "Bạn có chắc chắn rằng bạn muốn rời <b>{group_name}</b>?",
   "groupLeaveDescriptionAdmin": "Bạn có chắc chắn rằng bạn muốn rời khỏi <b>{group_name}</b>?<br/><br/>Điều này sẽ loại bỏ tất cả các thành viên và xóa tất cả nội dung nhóm.",
   "groupLeaveErrorFailed": "Không thể rời khỏi nhóm {group_name}",
   "groupLegacyBanner": "Các nhóm đã được nâng cấp, tạo một nhóm mới để nâng cấp. Chức năng nhóm cũ sẽ bị suy giảm từ {date}.",
@@ -697,7 +697,7 @@
   "recoveryPasswordErrorTitle": "Recovery Password không chính xác",
   "recoveryPasswordExplanation": "Để tải tài khoản của bạn, hãy nhập mật khẩu khôi phục của bạn.",
   "recoveryPasswordHidePermanently": "Ẩn Recovery Password vĩnh viễn",
-  "recoveryPasswordHidePermanentlyDescription1": "Không có mật khẩu phục hồi, bạn không thể tải tài khoản của mình trên thiết bị mới. <br /><br />Chúng tôi khuyến cáo bạn nên lưu mật khẩu phục hồi ở nơi an toàn trước khi tiếp tục.",
+  "recoveryPasswordHidePermanentlyDescription1": "Không có mật khẩu phục hồi, bạn không thể tải tài khoản của mình trên thiết bị mới. <br/><br/>Chúng tôi khuyến cáo bạn nên lưu mật khẩu phục hồi ở nơi an toàn trước khi tiếp tục.",
   "recoveryPasswordHidePermanentlyDescription2": "Bạn có chắc chắc rằng bạn muốn ẩn mật khẩu khôi phục của bạn vĩnh viễn trên thiết bị này? Điều này không thể hồi phục.",
   "recoveryPasswordHideRecoveryPassword": "Ẩn Recovery Password",
   "recoveryPasswordHideRecoveryPasswordDescription": "Ẩn mật khẩu khôi phục trên thiết bị này vĩnh viễn.",
