--- a/_locales/xh/messages.json
+++ b/_locales/xh/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "Uvimbile {name}",
   "blockDescription": "Uqinisekile ukuba ufuna ukuzivimba <b>{name}?</b> Abasebenzisi abavalweyo abanakukuthumela izicelo zemiyalezo, izimemo zeqela okanye bakufowunele.",
   "blockUnblock": "Susa ukuvalela",
-  "blockUnblockName": "Uqinisekile ukuba ufuna ukuvula {name}?",
-  "blockUnblockNameMultiple": "Uqinisekile ukuba ufuna ukuvula {name} n {count} abanye?",
-  "blockUnblockNameTwo": "Uqinisekile ukuba ufuna ukuvula {name} n 1 omnye?",
+  "blockUnblockName": "Uqinisekile ukuba ufuna ukuvula <b>{name}</b>?",
+  "blockUnblockNameMultiple": "Uqinisekile ukuba ufuna ukuvula <b>{name}</b> n <b>{count} abanye</b>?",
+  "blockUnblockNameTwo": "Uqinisekile ukuba ufuna ukuvula <b>{name}</b> n 1 omnye?",
   "blockUnblockedUser": "Isusiwe {name}",
   "call": "Essimu",
   "callsCalledYou": "{name} ikfonile kuwe",
@@ -252,7 +252,7 @@
   "copy": "Kopa",
   "create": "Yenza",
   "cut": "Sika",
-  "databaseErrorGeneric": "Kufunyenwe impazamo kwisiseko sedatha.<br\\/><br\\/>Nceda thumela ii-log zenkqubo yakho ukuze uwabelane ngazo ngeengxaki. Ukuba oku kuphumelele, reinstall {app_name} kwaye ubuyisele iakhawunti yakho.<br\\/><br\\/>Isilumkiso: oku kuya kubangela ukulahleka kwemiyalezo yonke, ii-attachements, kunye nedatha yeakhawunti endala ngokuphakama kweveki ezimbini.",
+  "databaseErrorGeneric": "Kufunyenwe impazamo kwisiseko sedatha.<br/><br/>Nceda thumela ii-log zenkqubo yakho ukuze uwabelane ngazo ngeengxaki. Ukuba oku kuphumelele, reinstall {app_name} kwaye ubuyisele iakhawunti yakho.<br/><br/>Isilumkiso: oku kuya kubangela ukulahleka kwemiyalezo yonke, ii-attachements, kunye nedatha yeakhawunti endala ngokuphakama kweveki ezimbini.",
   "databaseErrorTimeout": "Siqaphele ukuba i-{app_name} ithatha ixesha elide ukuqala.<br/><br/>Ungaqhubeka ulinde, uthumele iingxelo zesixhobo sakho ukwabelana ngazo ukulungisa iingxaki, okanye uzame ukuqala ngokutsha i-Session.",
   "databaseErrorUpdate": "I-database yakho yohlelo lwe-app ayinakuvisisana nohlobo lwangoku lwe {app_name}. Faka app kwakhona kwaye ubuyisele i-akhawunti yakho ukuphuhlisa database entsha kwaye uqhubeke usebenzisa {app_name}.<br/><br/>Isilumkiso: Oku kuya kubangela ukulahleka kwemiyalezo yonke kunye nezinto ezihambelanayo ezindala kunokuba yiveki ezimbini.",
   "databaseOptimizing": "Ukuphucula iDatha",
