--- a/_locales/zh-CN/messages.json
+++ b/_locales/zh-CN/messages.json
@@ -127,9 +127,9 @@
   "blockBlockedUser": "已屏蔽 {name}",
   "blockDescription": "您确定要屏蔽<b>{name}</b>吗？被屏蔽的用户将无法向您发送消息请求、群聊邀请或者语音通话。",
   "blockUnblock": "取消屏蔽",
-  "blockUnblockName": "您确定要取消屏蔽{name}吗？",
-  "blockUnblockNameMultiple": "您确定要取消屏蔽{name}和{count}其他人吗？",
-  "blockUnblockNameTwo": "您确定要取消屏蔽{name}和1其他人吗？",
+  "blockUnblockName": "您确定要取消屏蔽<b>{name}</b>吗？",
+  "blockUnblockNameMultiple": "您确定要取消屏蔽<b>{name}</b>和<b>{count}其他人吗</b>？",
+  "blockUnblockNameTwo": "您确定要取消屏蔽<b>{name}</b>和1其他人吗？",
   "blockUnblockedUser": "取消屏蔽 {name}",
   "call": "呼叫",
   "callsCalledYou": "{name} 呼叫过您",
@@ -307,13 +307,13 @@
   "disappearingMessagesDisappearAfterSendDescription": "消息发送后删除消息",
   "disappearingMessagesDisappearAfterSendState": "发送后消失 - {time}",
   "disappearingMessagesFollowSetting": "跟随设置",
-  "disappearingMessagesFollowSettingOff": "您发送的消息将不再消失。您确定要关闭阅后即焚消息吗？",
+  "disappearingMessagesFollowSettingOff": "您发送的消息将不再消失。您确定要<b>关闭</b>消失的消息吗？",
   "disappearingMessagesFollowSettingOn": "已设置<b>{time}</b>消息在被<b>{disappearing_messages_type}</b>后消失?",
   "disappearingMessagesLegacy": "{name} 使用过时的客户端。阅后即焚消息可能无法正常工作。",
   "disappearingMessagesOnlyAdmins": "仅群组管理员可以更改此设置。",
   "disappearingMessagesSent": "已发送",
   "disappearingMessagesSet": "<b>{name}</b>已设置{time}消息在被{disappearing_messages_type}后消失.",
-  "disappearingMessagesSetYou": "已设置{time}消息在被{disappearing_messages_type}后消失",
+  "disappearingMessagesSetYou": "<b>您</b>将消息设置为在 {disappearing_messages_type} 后 {time} 消失。",
   "disappearingMessagesTimer": "定时器",
   "disappearingMessagesTurnedOff": "<b>{name}</b> 已关闭阅后即焚功能。它们发送的消息将不会再消失。",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> 已将自动消失信息 <b>关闭</b>.",
