--- a/_locales/zh-TW/messages.json
+++ b/_locales/zh-TW/messages.json
@@ -14,13 +14,13 @@
   "actualSize": "實際大小",
   "add": "新增",
   "adminCannotBeRemoved": "無法移除管理員。",
-  "adminMorePromotedToAdmin": "<b>{name}<\\/b> 和 <b>{count} 位其他成員<\\/b> 被升為管理員。",
+  "adminMorePromotedToAdmin": "<b>{name}</b> 和 <b>{count} 位其他成員</b> 被升為管理員。",
   "adminPromote": "提升為管理員",
   "adminPromoteDescription": "您確定要將<b>{name}</b>升級為管理員嗎？管理員無法被移除。",
   "adminPromoteMoreDescription": "您確定要將<b>{name}</b>和<b>{count}其他人</b>升級為管理員嗎？管理員無法被移除。",
   "adminPromoteToAdmin": "提升為管理員",
   "adminPromoteTwoDescription": "您確定要將<b>{name}</b>和<b>{other_name}</b>升級為管理員嗎？管理員無法被移除。",
-  "adminPromotedToAdmin": "<b>{name} <\\/b> 被提拔為管理員。",
+  "adminPromotedToAdmin": "<b>{name}</b> 被提拔為管理員。",
   "adminPromotionFailed": "管理員提拔失敗",
   "adminPromotionFailedDescription": "無法將 {name} 提升為 {group_name} 的管理員",
   "adminPromotionFailedDescriptionMultiple": "無法將 {name} 和 {count} 個其他人提升為 {group_name} 的管理員",
@@ -32,12 +32,12 @@
   "adminRemoveFailed": "無法移除 {name} 的管理者身分。",
   "adminRemoveFailedMultiple": "無法移除 <b>{name}</b> 和 <b>{count} 位其他成員</b> 的管理員身份。",
   "adminRemoveFailedOther": "無法移除 <b>{name}</b> 和 <b>{other_name}</b> 的管理員身份。",
-  "adminRemovedUser": "<b>{name} <\\/b> 被撤下管理員的身份。",
+  "adminRemovedUser": "<b>{name}</b> 被撤下管理員的身份。",
   "adminRemovedUserMultiple": "<b>{name}</b> 和 <b>{count} 位其他成員</b> 被移除管理員身份。",
   "adminRemovedUserOther": "<b>{name}</b> 和 <b>{other_name}</b> 被移除管理員身份。",
   "adminSendingPromotion": "傳送管理員晉升",
   "adminSettings": "管理員設定",
-  "adminTwoPromotedToAdmin": "<b>{name} <\\/b> 和 <b>{other_name} <\\/b> 被提拔為管理員。",
+  "adminTwoPromotedToAdmin": "<b>{name}</b> 和 <b>{other_name}</b> 被提拔為管理員",
   "andMore": "+{count}",
   "anonymous": "匿名",
   "appearanceAutoDarkMode": "自動深色模式",
@@ -127,9 +127,9 @@
   "blockBlockedUser": "已封鎖 {name}",
   "blockDescription": "您確定要封鎖 <b>{name}</b> 嗎？被封鎖的使用者無法向您發送訊息請求、群組邀請或呼叫您。",
   "blockUnblock": "解除封鎖",
-  "blockUnblockName": "您確定要解除封鎖 {name} 嗎？",
-  "blockUnblockNameMultiple": "您確定要解除封鎖 {name} 和 {count} 其他人嗎？",
-  "blockUnblockNameTwo": "您確定要解除封鎖 {name} 和 1 另一個人嗎？",
+  "blockUnblockName": "您確定要解除封鎖 <b>{name}</b> 嗎？",
+  "blockUnblockNameMultiple": "您確定要解除封鎖 <b>{name}</b> 和 <b><{count} 其他人嗎</b>？",
+  "blockUnblockNameTwo": "您確定要解除封鎖 <b>{name}</b> 和 1 另一個人嗎？",
   "blockUnblockedUser": "解除封鎖{name}",
   "call": "撥打",
   "callsCalledYou": "{name} 來電",
@@ -252,7 +252,7 @@
   "copy": "複製",
   "create": "建立",
   "cut": "剪下",
-  "databaseErrorGeneric": "資料庫發生錯誤。<br\\/><br\\/ >導出您的應用程式日誌以便進行故障排除。如果這不成功，請重新安裝 {app_name} 並恢復您的帳戶。<br\\/><br\\/ >警告：這將導致兩週前的所有訊息、附件和帳戶數據丟失。",
+  "databaseErrorGeneric": "資料庫發生錯誤。<br/><br/>導出您的應用程式日誌以便進行故障排除。如果這不成功，請重新安裝 {app_name} 並恢復您的帳戶。<br/><br/>警告：這將導致兩週前的所有訊息、附件和帳戶數據丟失。",
   "databaseErrorTimeout": "我們注意到 {app_name} 啟動時間過長。<br/><br/>您可以繼續等待，匯出您的設備日誌以便排除故障，或者嘗試重新啟動 Session。",
   "databaseErrorUpdate": "您的應用程式資料庫與此版本的 {app_name} 不相容。重新安裝應用程式並恢復您的帳戶以生成新的資料庫並繼續使用 {app_name}。<br/><br/>警告：這將導致丟失所有兩週前的訊息和附件。",
   "databaseOptimizing": "最佳化資料庫中",
@@ -270,7 +270,7 @@
   "deleteAfterGroupPR3GroupErrorLeave": "無法在添加或移除其他成員時離開。",
   "deleteAfterLegacyDisappearingMessagesLegacy": "Legacy",
   "deleteAfterLegacyDisappearingMessagesOriginal": "原始版本的自動銷毀訊息。",
-  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name} <\\/b> 已將訊息銷毀時間設為 <b>{time} <\\/b>",
+  "deleteAfterLegacyDisappearingMessagesTheyChangedTimer": "<b>{name}</b> 已將訊息銷毀時間設為 <b>{time}</b>",
   "deleteAfterLegacyGroupsGroupCreation": "請稍候，正在建立群組……",
   "deleteAfterLegacyGroupsGroupUpdateErrorTitle": "無法更新群組",
   "deleteAfterMessageDeletionStandardisationMessageDeletionForbidden": "您無權刪除他人訊息",
@@ -316,14 +316,14 @@
   "disappearingMessagesSet": "<b>{name}</b> 已將訊息設定為於 {disappearing_messages_type} 後的 {time} 消失。",
   "disappearingMessagesSetYou": "<b>您</b> 設定訊息於 {disappearing_messages_type} 後的 {time} 消失。",
   "disappearingMessagesTimer": "計時器",
-  "disappearingMessagesTurnedOff": "<b>{name} <\\/b> 已關閉訊息讀後焚毀功能。 他们发送的讯息将不再消失。",
+  "disappearingMessagesTurnedOff": "<b>{name}</b> 已關閉訊息讀後焚毀功能。 他们发送的讯息将不再消失。",
   "disappearingMessagesTurnedOffGroup": "<b>{name}</b> 關閉了閱後即焚 <b>關閉</b>。",
-  "disappearingMessagesTurnedOffYou": "<b>你 <\\/b> 關閉訊息讀後焚毀功能。 你发送的訊息将不再消失。",
+  "disappearingMessagesTurnedOffYou": "<b>您</b><b>關閉了</b>消失的訊息。您發送的訊息將不再消失。",
   "disappearingMessagesTurnedOffYouGroup": "<b>你</b> 已關閉<b>閱後即焚</b>信息。",
   "disappearingMessagesTypeRead": "已讀",
   "disappearingMessagesTypeSent": "已傳送",
-  "disappearingMessagesUpdated": "<b>{admin_name} <\\/b> 更新了消失訊息的設定。",
-  "disappearingMessagesUpdatedYou": "<b>你 <\\/b> 更新了訊息讀後焚毀功能設定。",
+  "disappearingMessagesUpdated": "<b>{admin_name}</b> 更新了消失訊息的設定。",
+  "disappearingMessagesUpdatedYou": "<b>你</b> 更新了訊息讀後焚毀功能設定。",
   "dismiss": "關閉",
   "displayNameDescription": "它可以是您的真名、別名或任何您喜歡的名字—並且可以隨時更改。",
   "displayNameEnter": "輸入顯示名稱",
@@ -394,7 +394,7 @@
   "groupInviteSent": "邀請已發送",
   "groupInviteSuccessful": "群組邀請成功",
   "groupInviteVersion": "用戶必須擁有最新版本才能接收邀請",
-  "groupInviteYou": "<b>你 <\\/b> 被邀請加入群組。",
+  "groupInviteYou": "<b>你</b> 被邀請加入群組。",
   "groupInviteYouAndMoreNew": "<b>您</b> 和 <b>{count} 位其他成員</b> 加入了群組。",
   "groupInviteYouAndOtherNew": "<b>您</b> 和 <b>{other_name}</b> 加入了群組。",
   "groupLeave": "離開群組",
@@ -402,9 +402,9 @@
   "groupLeaveDescriptionAdmin": "您確定要離開 <b>{group_name}</b> 嗎？<br/><br/>這將移除所有成員並刪除所有群組內容。",
   "groupLeaveErrorFailed": "未能退出 {group_name}",
   "groupLegacyBanner": "群組已升級，創建一個新群組以進行升級。舊群組的功能將從 {date} 開始降級。",
-  "groupMemberLeft": "<b>{name} <\\/b> 離開此群組。",
-  "groupMemberLeftMultiple": "<b>{name}<\\/b> 和 <b>{count} 位其他成員<\\/b> 離開了群組。",
-  "groupMemberLeftTwo": "<b>{name} <\\/b> 和 <b>{other_name} <\\/b> 離開此群組。",
+  "groupMemberLeft": "<b>{name}</b> 離開此群組。",
+  "groupMemberLeftMultiple": "<b>{name}</b> 和 <b>{count} 位其他成員</b> 離開了群組。",
+  "groupMemberLeftTwo": "<b>{name}</b> 和 <b>{other_name}</b> 離開此群組。",
   "groupMemberNew": "<b>{name} <\\/b> 加入了群組。",
   "groupMemberNewHistory": "<b>{name}</b> 被邀請加入群組。 聊天記錄已分享。",
   "groupMemberNewHistoryMultiple": "<b>{name}</b> 和 <b>{count} 位其他成員</b> 已被邀請加入群組。已分享聊天記錄。",
@@ -424,7 +424,7 @@
   "groupNameUpdated": "群組名稱已更新。",
   "groupNoMessages": "您沒有來自 <b>{group_name}</b> 的訊息。發送訊息以開始對話！",
   "groupOnlyAdmin": "您是 <b>{group_name}</b> 中唯一的 admin。<br/><br/>沒有 admin，無法更改群組成員和設定。",
-  "groupPromotedYou": "<b>你 <\\/b> 被提拔為管理員。",
+  "groupPromotedYou": "<b>你</b> 被提拔為管理員。",
   "groupPromotedYouMultiple": "<b>您</b> 和 <b>{count} 位其他成員</b> 被升為管理員。",
   "groupPromotedYouTwo": "<b>您</b> 和 <b>{name}</b> 被提拔為管理員。",
   "groupRemoveDescription": "您是否想要從 <b>{group_name}</b> 中移除 <b>{name}</b>？",
@@ -432,9 +432,9 @@
   "groupRemoveDescriptionTwo": "您是否想要從 <b>{group_name}</b> 中移除 <b>{name}</b> 和 <b>{other_name}</b>？",
   "groupRemoveMessages": "{count, plural, other [移除成員及其訊息]}",
   "groupRemoveUserOnly": "{count, plural, other [移除成員]}",
-  "groupRemoved": "<b>{name} <\\/b> 已被移出群組。",
-  "groupRemovedMultiple": "<b>{name} <\\/b> 和 <b>{count} 其他成員 <\\/b> 被移出了群組。",
-  "groupRemovedTwo": "<b>{name} <\\/b> 和 <b>{other_name} <\\/b> 被移出了群組。",
+  "groupRemoved": "<b>{name}</b> 已被移出群組。",
+  "groupRemovedMultiple": "<b>{name}</b> 和 <b>{count} 其他成員 </b> 被移出了群組。",
+  "groupRemovedTwo": "<b>{name}</b> 和 <b>{other_name}</b> 被移出了群組。",
   "groupRemovedYou": "您已從<b>{group_name}</b>中被移除。",
   "groupRemovedYouMultiple": "<b>您</b> 和 <b>{count} 位其他成員</b> 被移出了群組。",
   "groupRemovedYouTwo": "<b>您</b> 和 <b>{other_name}</b> 被移出了群組。",
@@ -465,10 +465,10 @@
   "leave": "離開",
   "leaving": "離開中…",
   "legacyGroupMemberNew": "<b>{name}</b> 加入了群組。",
-  "legacyGroupMemberNewMultiple": "<b>{name}<\\/b> 和 <b>{count} 位其他成員<\\/b> 加入了群組。",
+  "legacyGroupMemberNewMultiple": "<b>{name}</b> 和 <b>{count} 位其他成員</b> 加入了群組。",
   "legacyGroupMemberNewYouMultiple": "<b>您</b> 和 <b>{count} 位其他成員</b> 加入了群組。",
   "legacyGroupMemberNewYouOther": "<b>您</b> 和 <b>{other_name}</b> 加入了群組。",
-  "legacyGroupMemberTwoNew": "<b>{name} <\\/b> 和 <b>{other_name} <\\/b> 加入了群組。",
+  "legacyGroupMemberTwoNew": "<b>{name}</b> 和 <b>{other_name}</b> 加入了群組。",
   "legacyGroupMemberYouNew": "<b>您</b> 加入了群組。",
   "linkPreviews": "連結預覽",
   "linkPreviewsDescription": "為支援的網址顯示連結預覽。",
@@ -519,7 +519,7 @@
   "messageNewDescriptionMobile": "通過輸入你朋友的 Account ID、ONS 或掃描他們的 QR 碼開始一個新的對話。",
   "messageNewYouveGot": "{count, plural, other [你有 # 則新訊息。]}",
   "messageReplyingTo": "Replying to",
-  "messageRequestGroupInvite": "<b>{name} <\\/b> 邀請你加入 <b>{group_name} <\\/b>。",
+  "messageRequestGroupInvite": "<b>{name}</b> 邀請你加入 <b>{group_name}</b>。",
   "messageRequestGroupInviteDescription": "傳送訊息給這個群組將自動接受邀請群組。",
   "messageRequestPending": "您的訊息請求目前正在等待中。",
   "messageRequestPendingDescription": "收件人批准此訊息請求後，你將會能夠發送語音訊息和附件。",
@@ -532,7 +532,7 @@
   "messageRequestsDelete": "您確定要刪除此消息請求嗎？",
   "messageRequestsNew": "您有一個新的訊息要求",
   "messageRequestsNonePending": "沒有擱置中的訊息要求",
-  "messageRequestsTurnedOff": "<b>{name} <\\/b> 已關閉來自社群對話的訊息請求，因此你無法向他們發送訊息。",
+  "messageRequestsTurnedOff": "<b>{name}</b> 已關閉來自社群對話的訊息請求，因此你無法向他們發送訊息。",
   "messageSelect": "選取訊息",
   "messageSnippetGroup": "{author}: {message_snippet}",
   "messageStatusFailedToSend": "無法傳送",
@@ -721,7 +721,7 @@
   "screenSecurity": "螢幕安全性",
   "screenshotNotifications": "螢幕截圖通知",
   "screenshotNotificationsDescription": "Require a notification when a contact takes a screenshot of a one-to-one chat.",
-  "screenshotTaken": "<b>{name} <\\/b> 擷取了螢幕畫面。",
+  "screenshotTaken": "<b>{name}</b> 擷取了螢幕畫面。",
   "search": "搜尋",
   "searchContacts": "搜尋聯絡人",
   "searchConversation": "搜尋對話",
